commit bilingual contents

--- a/docs/docs-ref-autogen/excel/excel.conditionalcolorscalecriterion.yml
+++ b/docs/docs-ref-autogen/excel/excel.conditionalcolorscalecriterion.yml
@@ -1,72 +1,62 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: cef6ae844a2aef7a03f10a82c3e0638db6f96c2b
-ms.sourcegitcommit: a68606173477c7fb4069880eea941766c7d8c50d
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/01/2019
-ms.locfileid: "29703286"
 items:
-- uid: excel.Excel.ConditionalColorScaleCriterion
-  summary: >-
-    <span data-ttu-id="3c28f-101">代表一个颜色刻度条件，其中包含类型、 值和颜色。</span><span class="sxs-lookup"><span data-stu-id="3c28f-101">Represents a Color Scale Criterion which contains a type, value, and a color.</span></span>
+  - uid: excel.Excel.ConditionalColorScaleCriterion
+    summary: |-
+      <span data-ttu-id="bd7f9-101">表示包含类型、值和颜色的色阶条件。</span><span class="sxs-lookup"><span data-stu-id="bd7f9-101">Represents a Color Scale Criterion which contains a type, value, and a color.</span></span>
 
+      <span data-ttu-id="bd7f9-102">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bd7f9-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: Excel.ConditionalColorScaleCriterion
+    fullName: Excel.ConditionalColorScaleCriterion
+    langs:
+      - typeScript
+    type: interface
+    package: excel
+    children:
+      - excel.Excel.ConditionalColorScaleCriterion.color
+      - excel.Excel.ConditionalColorScaleCriterion.formula
+      - excel.Excel.ConditionalColorScaleCriterion.type
+  - uid: excel.Excel.ConditionalColorScaleCriterion.color
+    summary: |-
+      <span data-ttu-id="bd7f9-103">色阶颜色的 HTML 颜色代码表示形式。</span><span class="sxs-lookup"><span data-stu-id="bd7f9-103">HTML color code representation of the color scale color.</span></span> <span data-ttu-id="bd7f9-104">例如，</span><span class="sxs-lookup"><span data-stu-id="bd7f9-104">E.g.</span></span> <span data-ttu-id="bd7f9-105">\#FF0000 表示红色。</span><span class="sxs-lookup"><span data-stu-id="bd7f9-105">\#FF0000 represents Red.</span></span>
 
-    <span data-ttu-id="3c28f-102">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3c28f-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: Excel.ConditionalColorScaleCriterion
-  fullName: Excel.ConditionalColorScaleCriterion
-  langs:
-  - typeScript
-  type: interface
-  package: excel
-  children:
-  - excel.Excel.ConditionalColorScaleCriterion.color
-  - excel.Excel.ConditionalColorScaleCriterion.formula
-  - excel.Excel.ConditionalColorScaleCriterion.type
-- uid: excel.Excel.ConditionalColorScaleCriterion.color
-  summary: >-
-    <span data-ttu-id="3c28f-103">HTML 颜色代码的表示形式的颜色刻度颜色。</span><span class="sxs-lookup"><span data-stu-id="3c28f-103">HTML color code representation of the color scale color.</span></span> <span data-ttu-id="3c28f-104">例如，</span><span class="sxs-lookup"><span data-stu-id="3c28f-104">E.g.</span></span> <span data-ttu-id="3c28f-105">\#FF0000 表示红色。</span><span class="sxs-lookup"><span data-stu-id="3c28f-105">\#FF0000 represents Red.</span></span>
+      <span data-ttu-id="bd7f9-106">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bd7f9-106">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: color
+    fullName: color
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'color?: string;'
+      return:
+        type:
+          - string
+  - uid: excel.Excel.ConditionalColorScaleCriterion.formula
+    summary: |-
+      <span data-ttu-id="bd7f9-107">数字、公式或 null（如果类型为 LowestValue）。</span><span class="sxs-lookup"><span data-stu-id="bd7f9-107">A number, a formula, or null (if Type is LowestValue).</span></span>
 
+      <span data-ttu-id="bd7f9-108">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bd7f9-108">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: formula
+    fullName: formula
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'formula?: string;'
+      return:
+        type:
+          - string
+  - uid: excel.Excel.ConditionalColorScaleCriterion.type
+    summary: |-
+      <span data-ttu-id="bd7f9-109">条件条件公式应基于什么。</span><span class="sxs-lookup"><span data-stu-id="bd7f9-109">What the criterion conditional formula should be based on.</span></span>
 
-    <span data-ttu-id="3c28f-106">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3c28f-106">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: color
-  fullName: color
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'color?: string;'
-    return:
-      type:
-      - string
-- uid: excel.Excel.ConditionalColorScaleCriterion.formula
-  summary: >-
-    <span data-ttu-id="3c28f-107">数字、公式或 null（如果类型为 LowestValue）。</span><span class="sxs-lookup"><span data-stu-id="3c28f-107">A number, a formula, or null (if Type is LowestValue).</span></span>
-
-
-    <span data-ttu-id="3c28f-108">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3c28f-108">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: formula
-  fullName: formula
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'formula?: string;'
-    return:
-      type:
-      - string
-- uid: excel.Excel.ConditionalColorScaleCriterion.type
-  summary: >-
-    <span data-ttu-id="3c28f-109">应基于什么条件条件公式。</span><span class="sxs-lookup"><span data-stu-id="3c28f-109">What the criterion conditional formula should be based on.</span></span>
-
-
-    <span data-ttu-id="3c28f-110">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3c28f-110">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: type
-  fullName: type
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'type: Excel.ConditionalFormatColorCriterionType | "Invalid" | "LowestValue" | "HighestValue" | "Number" | "Percent" | "Formula" | "Percentile";'
-    return:
-      type:
-      - Excel.ConditionalFormatColorCriterionType | "Invalid" | "LowestValue" | "HighestValue" | "Number" | "Percent" | "Formula" | "Percentile"
+      <span data-ttu-id="bd7f9-110">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bd7f9-110">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: type
+    fullName: type
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'type: Excel.ConditionalFormatColorCriterionType | "Invalid" | "LowestValue" | "HighestValue" | "Number" | "Percent" | "Formula" | "Percentile";'
+      return:
+        type:
+          - Excel.ConditionalFormatColorCriterionType | "Invalid" | "LowestValue" | "HighestValue" | "Number" | "Percent" | "Formula" | "Percentile"
