--- a/docs/docs-ref-autogen/excel/excel.interfaces.chartborderloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.chartborderloadoptions.yml
@@ -1,84 +1,74 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: e98f2edb79841a591f047ff9b48e8322489f7f38
-ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/13/2019
-ms.locfileid: "29983258"
 items:
-- uid: excel.Excel.Interfaces.ChartBorderLoadOptions
-  summary: >-
-    <span data-ttu-id="6d3cb-101">代表图表元素的边框格式。</span><span class="sxs-lookup"><span data-stu-id="6d3cb-101">Represents the border formatting of a chart element.</span></span>
+  - uid: excel.Excel.Interfaces.ChartBorderLoadOptions
+    summary: |-
+      <span data-ttu-id="f1137-101">代表 chart 元素的边框格式。</span><span class="sxs-lookup"><span data-stu-id="f1137-101">Represents the border formatting of a chart element.</span></span>
 
+      <span data-ttu-id="f1137-102">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f1137-102">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: Excel.Interfaces.ChartBorderLoadOptions
+    fullName: Excel.Interfaces.ChartBorderLoadOptions
+    langs:
+      - typeScript
+    type: interface
+    package: excel
+    children:
+      - excel.Excel.Interfaces.ChartBorderLoadOptions.$all
+      - excel.Excel.Interfaces.ChartBorderLoadOptions.color
+      - excel.Excel.Interfaces.ChartBorderLoadOptions.lineStyle
+      - excel.Excel.Interfaces.ChartBorderLoadOptions.weight
+  - uid: excel.Excel.Interfaces.ChartBorderLoadOptions.$all
+    name: $all
+    fullName: $all
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: '$all?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.ChartBorderLoadOptions.color
+    summary: |-
+      <span data-ttu-id="f1137-103">表示图表中的边框颜色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="f1137-103">HTML color code representing the color of borders in the chart.</span></span>
 
-    <span data-ttu-id="6d3cb-102">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6d3cb-102">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: Excel.Interfaces.ChartBorderLoadOptions
-  fullName: Excel.Interfaces.ChartBorderLoadOptions
-  langs:
-  - typeScript
-  type: interface
-  package: excel
-  children:
-  - excel.Excel.Interfaces.ChartBorderLoadOptions.$all
-  - excel.Excel.Interfaces.ChartBorderLoadOptions.color
-  - excel.Excel.Interfaces.ChartBorderLoadOptions.lineStyle
-  - excel.Excel.Interfaces.ChartBorderLoadOptions.weight
-- uid: excel.Excel.Interfaces.ChartBorderLoadOptions.$all
-  name: $all
-  fullName: $all
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: '$all?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.ChartBorderLoadOptions.color
-  summary: >-
-    <span data-ttu-id="6d3cb-103">表示图表中的边框颜色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="6d3cb-103">HTML color code representing the color of borders in the chart.</span></span>
+      <span data-ttu-id="f1137-104">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f1137-104">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: color
+    fullName: color
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'color?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.ChartBorderLoadOptions.lineStyle
+    summary: |-
+      <span data-ttu-id="f1137-105">表示边框的线条样式。</span><span class="sxs-lookup"><span data-stu-id="f1137-105">Represents the line style of the border.</span></span> <span data-ttu-id="f1137-106">有关详细信息, 请参阅 ChartLineStyle。</span><span class="sxs-lookup"><span data-stu-id="f1137-106">See Excel.ChartLineStyle for details.</span></span>
 
+      <span data-ttu-id="f1137-107">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f1137-107">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: lineStyle
+    fullName: lineStyle
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'lineStyle?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.ChartBorderLoadOptions.weight
+    summary: |-
+      <span data-ttu-id="f1137-108">表示边框的粗细，以磅为单位。</span><span class="sxs-lookup"><span data-stu-id="f1137-108">Represents weight of the border, in points.</span></span>
 
-    <span data-ttu-id="6d3cb-104">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6d3cb-104">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: color
-  fullName: color
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'color?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.ChartBorderLoadOptions.lineStyle
-  summary: >-
-    <span data-ttu-id="6d3cb-105">表示边框的线条样式。</span><span class="sxs-lookup"><span data-stu-id="6d3cb-105">Represents the line style of the border.</span></span> <span data-ttu-id="6d3cb-106">有关详细信息，请参阅 Excel.ChartLineStyle。</span><span class="sxs-lookup"><span data-stu-id="6d3cb-106">See Excel.ChartLineStyle for details.</span></span>
-
-
-    <span data-ttu-id="6d3cb-107">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6d3cb-107">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: lineStyle
-  fullName: lineStyle
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'lineStyle?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.ChartBorderLoadOptions.weight
-  summary: >-
-    <span data-ttu-id="6d3cb-108">表示边框的粗细，以磅为单位。</span><span class="sxs-lookup"><span data-stu-id="6d3cb-108">Represents weight of the border, in points.</span></span>
-
-
-    <span data-ttu-id="6d3cb-109">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6d3cb-109">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: weight
-  fullName: weight
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'weight?: boolean;'
-    return:
-      type:
-      - boolean
+      <span data-ttu-id="f1137-109">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f1137-109">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: weight
+    fullName: weight
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'weight?: boolean;'
+      return:
+        type:
+          - boolean
