--- a/docs/docs-ref-autogen/excel_release/excel.conditionalcellvaluerule.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.conditionalcellvaluerule.yml
@@ -2,9 +2,9 @@
 items:
   - uid: excel_release.Excel.ConditionalCellValueRule
     summary: |-
-      <span data-ttu-id="33c7d-101">表示单元格值条件格式规则。</span><span class="sxs-lookup"><span data-stu-id="33c7d-101">Represents a cell value conditional format rule.</span></span>
+      <span data-ttu-id="a394a-101">表示单元格值条件格式规则。</span><span class="sxs-lookup"><span data-stu-id="a394a-101">Represents a cell value conditional format rule.</span></span>
 
-      <span data-ttu-id="33c7d-102">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="33c7d-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="a394a-102">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a394a-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.ConditionalCellValueRule
     fullName: Excel.ConditionalCellValueRule
     langs:
@@ -17,9 +17,9 @@ items:
       - excel_release.Excel.ConditionalCellValueRule.operator
   - uid: excel_release.Excel.ConditionalCellValueRule.formula1
     summary: |-
-      <span data-ttu-id="33c7d-103">如果需要，公式可对条件格式规则进行求值。</span><span class="sxs-lookup"><span data-stu-id="33c7d-103">The formula, if required, to evaluate the conditional format rule on.</span></span>
+      <span data-ttu-id="a394a-103">如果需要，公式可对条件格式规则进行求值。</span><span class="sxs-lookup"><span data-stu-id="a394a-103">The formula, if required, to evaluate the conditional format rule on.</span></span>
 
-      <span data-ttu-id="33c7d-104">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="33c7d-104">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="a394a-104">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a394a-104">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: formula1
     fullName: formula1
     langs:
@@ -33,7 +33,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="33c7d-105">示例</span><span class="sxs-lookup"><span data-stu-id="33c7d-105">Examples</span></span>
+          #### <a name="examples"></a><span data-ttu-id="a394a-105">示例</span><span class="sxs-lookup"><span data-stu-id="a394a-105">Examples</span></span>
 
           ```typescript
           await Excel.run(async (context) => {
@@ -49,9 +49,9 @@ items:
           ```
   - uid: excel_release.Excel.ConditionalCellValueRule.formula2
     summary: |-
-      <span data-ttu-id="33c7d-106">如果需要，公式可对条件格式规则进行求值。</span><span class="sxs-lookup"><span data-stu-id="33c7d-106">The formula, if required, to evaluate the conditional format rule on.</span></span>
+      <span data-ttu-id="a394a-106">如果需要，公式可对条件格式规则进行求值。</span><span class="sxs-lookup"><span data-stu-id="a394a-106">The formula, if required, to evaluate the conditional format rule on.</span></span>
 
-      <span data-ttu-id="33c7d-107">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="33c7d-107">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="a394a-107">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a394a-107">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: formula2
     fullName: formula2
     langs:
@@ -64,9 +64,9 @@ items:
           - string
   - uid: excel_release.Excel.ConditionalCellValueRule.operator
     summary: |-
-      <span data-ttu-id="33c7d-108">文本条件格式的运算符。</span><span class="sxs-lookup"><span data-stu-id="33c7d-108">The operator of the text conditional format.</span></span>
+      <span data-ttu-id="a394a-108">文本条件格式的运算符。</span><span class="sxs-lookup"><span data-stu-id="a394a-108">The operator of the text conditional format.</span></span>
 
-      <span data-ttu-id="33c7d-109">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="33c7d-109">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="a394a-109">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a394a-109">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: operator
     fullName: operator
     langs:
@@ -80,7 +80,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="33c7d-110">示例</span><span class="sxs-lookup"><span data-stu-id="33c7d-110">Examples</span></span>
+          #### <a name="examples"></a><span data-ttu-id="a394a-110">示例</span><span class="sxs-lookup"><span data-stu-id="a394a-110">Examples</span></span>
 
           ```typescript
           await Excel.run(async (context) => {
