--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.applicationupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.applicationupdatedata.yml
@@ -1,34 +1,27 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: dcdf097509bfffbc9f8c50d7d5c8cc5f44997d10
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30109050"
 items:
-- uid: excel_release.Excel.Interfaces.ApplicationUpdateData
-  summary: <span data-ttu-id="24650-101">一个用于更新 application 对象上的数据的接口, 可用于 "application. set (<!-- -->{...}"<!-- -->)".</span><span class="sxs-lookup"><span data-stu-id="24650-101">An interface for updating data on the Application object, for use in "application.set(<!-- -->{ ... }<!-- -->)".</span></span>
-  name: Excel.Interfaces.ApplicationUpdateData
-  fullName: Excel.Interfaces.ApplicationUpdateData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.ApplicationUpdateData.calculationMode
-- uid: excel_release.Excel.Interfaces.ApplicationUpdateData.calculationMode
-  summary: >-
-    <span data-ttu-id="24650-102">返回工作簿中使用的计算模式, 如 CalculationMode 中的常量所定义。</span><span class="sxs-lookup"><span data-stu-id="24650-102">Returns the calculation mode used in the workbook, as defined by the constants in Excel.CalculationMode.</span></span> <span data-ttu-id="24650-103">可能的值为`Automatic` <!-- -->:, Excel 控制重新计算的位置。`AutomaticExceptTables`, Excel 在其中控制重新计算, 但忽略表中的<!-- -->更改。`Manual`, 在用户请求计算时完成<!-- -->计算。</span><span class="sxs-lookup"><span data-stu-id="24650-103">Possible values are: `Automatic`<!-- -->, where Excel controls recalculation; `AutomaticExceptTables`<!-- -->, where Excel controls recalculation but ignores changes in tables; `Manual`<!-- -->, where calculation is done when the user requests it.</span></span>
+  - uid: excel_release.Excel.Interfaces.ApplicationUpdateData
+    summary: '<span data-ttu-id="98344-101">用于更新 application 对象上的数据的接口, 可用于 "application. set (</span><span class="sxs-lookup"><span data-stu-id="98344-101">An interface for updating data on the Application object, for use in "application.set(</span></span><!-- --><span data-ttu-id="98344-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="98344-102"></span></span><!-- --><span data-ttu-id="98344-103">)".</span><span class="sxs-lookup"><span data-stu-id="98344-103"></span></span>'
+    name: Excel.Interfaces.ApplicationUpdateData
+    fullName: Excel.Interfaces.ApplicationUpdateData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.ApplicationUpdateData.calculationMode
+  - uid: excel_release.Excel.Interfaces.ApplicationUpdateData.calculationMode
+    summary: |-
+      <span data-ttu-id="98344-104">返回工作簿中使用的计算模式, 如 CalculationMode 中的常量所定义。</span><span class="sxs-lookup"><span data-stu-id="98344-104">Returns the calculation mode used in the workbook, as defined by the constants in Excel.CalculationMode.</span></span> <span data-ttu-id="98344-105">可能的值包括:`Automatic`</span><span class="sxs-lookup"><span data-stu-id="98344-105">Possible values are: `Automatic`</span></span><!-- --><span data-ttu-id="98344-106">, Excel 控制重新计算的位置;`AutomaticExceptTables`</span><span class="sxs-lookup"><span data-stu-id="98344-106">, where Excel controls recalculation; `AutomaticExceptTables`</span></span><!-- --><span data-ttu-id="98344-107">, Excel 在其中控制重新计算, 但忽略表中的更改。`Manual`</span><span class="sxs-lookup"><span data-stu-id="98344-107">, where Excel controls recalculation but ignores changes in tables; `Manual`</span></span><!-- --><span data-ttu-id="98344-108">, 在用户请求计算时完成计算。</span><span class="sxs-lookup"><span data-stu-id="98344-108">, where calculation is done when the user requests it.</span></span>
 
-
-    <span data-ttu-id="24650-104">\[[API 集: ExcelApi 1.1 for get, 1.8 (用于设置)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="24650-104">\[ [API set: ExcelApi 1.1 for get, 1.8 for set](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: calculationMode
-  fullName: calculationMode
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'calculationMode?: Excel.CalculationMode | "Automatic" | "AutomaticExceptTables" | "Manual";'
-    return:
-      type:
-      - Excel.CalculationMode | "Automatic" | "AutomaticExceptTables" | "Manual"
+      <span data-ttu-id="98344-109">\[[API 集: ExcelApi 1.1 for get, 1.8 (用于设置)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="98344-109">\[ [API set: ExcelApi 1.1 for get, 1.8 for set](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: calculationMode
+    fullName: calculationMode
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'calculationMode?: Excel.CalculationMode | "Automatic" | "AutomaticExceptTables" | "Manual";'
+      return:
+        type:
+          - Excel.CalculationMode | "Automatic" | "AutomaticExceptTables" | "Manual"
