--- a/docs/docs-ref-autogen/visio/visio.interfaces.documentviewdata.yml
+++ b/docs/docs-ref-autogen/visio/visio.interfaces.documentviewdata.yml
@@ -1,85 +1,91 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 46bcd6cbbb98bd2aa6c36b3b3792ccef06447d38
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26227007"
 items:
-- uid: visio.Visio.Interfaces.DocumentViewData
-  summary: <span data-ttu-id="38ed8-101">描述调用"documentView.toJSON()"返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="38ed8-101">An interface describing the data returned by calling "documentView.toJSON()".</span></span>
-  name: Visio.Interfaces.DocumentViewData
-  fullName: Visio.Interfaces.DocumentViewData
-  langs:
-  - typeScript
-  type: interface
-  package: visio
-  children:
-  - visio.Visio.Interfaces.DocumentViewData.disableHyperlinks
-  - visio.Visio.Interfaces.DocumentViewData.disablePan
-  - visio.Visio.Interfaces.DocumentViewData.disableZoom
-  - visio.Visio.Interfaces.DocumentViewData.hideDiagramBoundary
-- uid: visio.Visio.Interfaces.DocumentViewData.disableHyperlinks
-  summary: >-
-    <span data-ttu-id="38ed8-102">禁用超链接。</span><span class="sxs-lookup"><span data-stu-id="38ed8-102">Disable Hyperlinks.</span></span>
+  - uid: visio.Visio.Interfaces.DocumentViewData
+    summary: <span data-ttu-id="60c4b-101">描述通过调用 "documentView ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="60c4b-101">An interface describing the data returned by calling "documentView.toJSON()".</span></span>
+    name: Visio.Interfaces.DocumentViewData
+    fullName: Visio.Interfaces.DocumentViewData
+    langs:
+      - typeScript
+    type: interface
+    package: visio
+    children:
+      - visio.Visio.Interfaces.DocumentViewData.disableHyperlinks
+      - visio.Visio.Interfaces.DocumentViewData.disablePan
+      - visio.Visio.Interfaces.DocumentViewData.disablePanZoomWindow
+      - visio.Visio.Interfaces.DocumentViewData.disableZoom
+      - visio.Visio.Interfaces.DocumentViewData.hideDiagramBoundary
+  - uid: visio.Visio.Interfaces.DocumentViewData.disableHyperlinks
+    summary: |-
+      <span data-ttu-id="60c4b-102">禁用超链接。</span><span class="sxs-lookup"><span data-stu-id="60c4b-102">Disable Hyperlinks.</span></span>
 
+      <span data-ttu-id="60c4b-103">\[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="60c4b-103">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+    name: disableHyperlinks
+    fullName: disableHyperlinks
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'disableHyperlinks?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: visio.Visio.Interfaces.DocumentViewData.disablePan
+    summary: |-
+      <span data-ttu-id="60c4b-104">禁用平移。</span><span class="sxs-lookup"><span data-stu-id="60c4b-104">Disable Pan.</span></span>
 
-    <span data-ttu-id="38ed8-103">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="38ed8-103">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
-  name: disableHyperlinks
-  fullName: disableHyperlinks
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'disableHyperlinks?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: visio.Visio.Interfaces.DocumentViewData.disablePan
-  summary: >-
-    <span data-ttu-id="38ed8-104">禁用平移。</span><span class="sxs-lookup"><span data-stu-id="38ed8-104">Disable Pan.</span></span>
+      <span data-ttu-id="60c4b-105">\[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="60c4b-105">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+    name: disablePan
+    fullName: disablePan
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'disablePan?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: visio.Visio.Interfaces.DocumentViewData.disablePanZoomWindow
+    summary: |-
+      <span data-ttu-id="60c4b-106">禁用 PanZoomWindow。</span><span class="sxs-lookup"><span data-stu-id="60c4b-106">Disable PanZoomWindow.</span></span>
 
+      <span data-ttu-id="60c4b-107">\[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="60c4b-107">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+    name: disablePanZoomWindow
+    fullName: disablePanZoomWindow
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'disablePanZoomWindow?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: visio.Visio.Interfaces.DocumentViewData.disableZoom
+    summary: |-
+      <span data-ttu-id="60c4b-108">禁用缩放。</span><span class="sxs-lookup"><span data-stu-id="60c4b-108">Disable Zoom.</span></span>
 
-    <span data-ttu-id="38ed8-105">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="38ed8-105">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
-  name: disablePan
-  fullName: disablePan
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'disablePan?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: visio.Visio.Interfaces.DocumentViewData.disableZoom
-  summary: >-
-    <span data-ttu-id="38ed8-106">禁用缩放。</span><span class="sxs-lookup"><span data-stu-id="38ed8-106">Disable Zoom.</span></span>
+      <span data-ttu-id="60c4b-109">\[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="60c4b-109">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+    name: disableZoom
+    fullName: disableZoom
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'disableZoom?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: visio.Visio.Interfaces.DocumentViewData.hideDiagramBoundary
+    summary: |-
+      <span data-ttu-id="60c4b-110">隐藏关系图边界。</span><span class="sxs-lookup"><span data-stu-id="60c4b-110">Hide Diagram Boundary.</span></span>
 
-
-    <span data-ttu-id="38ed8-107">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="38ed8-107">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
-  name: disableZoom
-  fullName: disableZoom
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'disableZoom?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: visio.Visio.Interfaces.DocumentViewData.hideDiagramBoundary
-  summary: >-
-    <span data-ttu-id="38ed8-108">隐藏图边界。</span><span class="sxs-lookup"><span data-stu-id="38ed8-108">Hide Diagram Boundary.</span></span>
-
-
-    <span data-ttu-id="38ed8-109">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="38ed8-109">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
-  name: hideDiagramBoundary
-  fullName: hideDiagramBoundary
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'hideDiagramBoundary?: boolean;'
-    return:
-      type:
-      - boolean
+      <span data-ttu-id="60c4b-111">\[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="60c4b-111">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+    name: hideDiagramBoundary
+    fullName: hideDiagramBoundary
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'hideDiagramBoundary?: boolean;'
+      return:
+        type:
+          - boolean
