--- a/docs/docs-ref-autogen/visio/visio.interfaces.documentviewloadoptions.yml
+++ b/docs/docs-ref-autogen/visio/visio.interfaces.documentviewloadoptions.yml
@@ -1,101 +1,106 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: b8a7222c84dca05475edcd1092f70402190b887c
-ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/13/2019
-ms.locfileid: "29984574"
 items:
-- uid: visio.Visio.Interfaces.DocumentViewLoadOptions
-  summary: >-
-    <span data-ttu-id="87500-101">表示 DocumentView 类。</span><span class="sxs-lookup"><span data-stu-id="87500-101">Represents the DocumentView class.</span></span>
+  - uid: visio.Visio.Interfaces.DocumentViewLoadOptions
+    summary: |-
+      <span data-ttu-id="d477d-101">表示 DocumentView 类。</span><span class="sxs-lookup"><span data-stu-id="d477d-101">Represents the DocumentView class.</span></span>
 
+      <span data-ttu-id="d477d-102">\[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="d477d-102">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+    name: Visio.Interfaces.DocumentViewLoadOptions
+    fullName: Visio.Interfaces.DocumentViewLoadOptions
+    langs:
+      - typeScript
+    type: interface
+    package: visio
+    children:
+      - visio.Visio.Interfaces.DocumentViewLoadOptions.$all
+      - visio.Visio.Interfaces.DocumentViewLoadOptions.disableHyperlinks
+      - visio.Visio.Interfaces.DocumentViewLoadOptions.disablePan
+      - visio.Visio.Interfaces.DocumentViewLoadOptions.disablePanZoomWindow
+      - visio.Visio.Interfaces.DocumentViewLoadOptions.disableZoom
+      - visio.Visio.Interfaces.DocumentViewLoadOptions.hideDiagramBoundary
+  - uid: visio.Visio.Interfaces.DocumentViewLoadOptions.$all
+    name: $all
+    fullName: $all
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: '$all?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: visio.Visio.Interfaces.DocumentViewLoadOptions.disableHyperlinks
+    summary: |-
+      <span data-ttu-id="d477d-103">禁用超链接。</span><span class="sxs-lookup"><span data-stu-id="d477d-103">Disable Hyperlinks.</span></span>
 
-    <span data-ttu-id="87500-102">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="87500-102">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
-  name: Visio.Interfaces.DocumentViewLoadOptions
-  fullName: Visio.Interfaces.DocumentViewLoadOptions
-  langs:
-  - typeScript
-  type: interface
-  package: visio
-  children:
-  - visio.Visio.Interfaces.DocumentViewLoadOptions.$all
-  - visio.Visio.Interfaces.DocumentViewLoadOptions.disableHyperlinks
-  - visio.Visio.Interfaces.DocumentViewLoadOptions.disablePan
-  - visio.Visio.Interfaces.DocumentViewLoadOptions.disableZoom
-  - visio.Visio.Interfaces.DocumentViewLoadOptions.hideDiagramBoundary
-- uid: visio.Visio.Interfaces.DocumentViewLoadOptions.$all
-  name: $all
-  fullName: $all
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: '$all?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: visio.Visio.Interfaces.DocumentViewLoadOptions.disableHyperlinks
-  summary: >-
-    <span data-ttu-id="87500-103">禁用超链接。</span><span class="sxs-lookup"><span data-stu-id="87500-103">Disable Hyperlinks.</span></span>
+      <span data-ttu-id="d477d-104">\[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="d477d-104">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+    name: disableHyperlinks
+    fullName: disableHyperlinks
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'disableHyperlinks?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: visio.Visio.Interfaces.DocumentViewLoadOptions.disablePan
+    summary: |-
+      <span data-ttu-id="d477d-105">禁用平移。</span><span class="sxs-lookup"><span data-stu-id="d477d-105">Disable Pan.</span></span>
 
+      <span data-ttu-id="d477d-106">\[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="d477d-106">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+    name: disablePan
+    fullName: disablePan
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'disablePan?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: visio.Visio.Interfaces.DocumentViewLoadOptions.disablePanZoomWindow
+    summary: |-
+      <span data-ttu-id="d477d-107">禁用 PanZoomWindow。</span><span class="sxs-lookup"><span data-stu-id="d477d-107">Disable PanZoomWindow.</span></span>
 
-    <span data-ttu-id="87500-104">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="87500-104">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
-  name: disableHyperlinks
-  fullName: disableHyperlinks
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'disableHyperlinks?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: visio.Visio.Interfaces.DocumentViewLoadOptions.disablePan
-  summary: >-
-    <span data-ttu-id="87500-105">禁用平移。</span><span class="sxs-lookup"><span data-stu-id="87500-105">Disable Pan.</span></span>
+      <span data-ttu-id="d477d-108">\[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="d477d-108">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+    name: disablePanZoomWindow
+    fullName: disablePanZoomWindow
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'disablePanZoomWindow?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: visio.Visio.Interfaces.DocumentViewLoadOptions.disableZoom
+    summary: |-
+      <span data-ttu-id="d477d-109">禁用缩放。</span><span class="sxs-lookup"><span data-stu-id="d477d-109">Disable Zoom.</span></span>
 
+      <span data-ttu-id="d477d-110">\[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="d477d-110">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+    name: disableZoom
+    fullName: disableZoom
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'disableZoom?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: visio.Visio.Interfaces.DocumentViewLoadOptions.hideDiagramBoundary
+    summary: |-
+      <span data-ttu-id="d477d-111">隐藏关系图边界。</span><span class="sxs-lookup"><span data-stu-id="d477d-111">Hide Diagram Boundary.</span></span>
 
-    <span data-ttu-id="87500-106">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="87500-106">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
-  name: disablePan
-  fullName: disablePan
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'disablePan?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: visio.Visio.Interfaces.DocumentViewLoadOptions.disableZoom
-  summary: >-
-    <span data-ttu-id="87500-107">禁用缩放。</span><span class="sxs-lookup"><span data-stu-id="87500-107">Disable Zoom.</span></span>
-
-
-    <span data-ttu-id="87500-108">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="87500-108">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
-  name: disableZoom
-  fullName: disableZoom
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'disableZoom?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: visio.Visio.Interfaces.DocumentViewLoadOptions.hideDiagramBoundary
-  summary: >-
-    <span data-ttu-id="87500-109">隐藏图边界。</span><span class="sxs-lookup"><span data-stu-id="87500-109">Hide Diagram Boundary.</span></span>
-
-
-    <span data-ttu-id="87500-110">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="87500-110">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
-  name: hideDiagramBoundary
-  fullName: hideDiagramBoundary
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'hideDiagramBoundary?: boolean;'
-    return:
-      type:
-      - boolean
+      <span data-ttu-id="d477d-112">\[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="d477d-112">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+    name: hideDiagramBoundary
+    fullName: hideDiagramBoundary
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'hideDiagramBoundary?: boolean;'
+      return:
+        type:
+          - boolean
