--- a/docs/docs-ref-autogen/visio/visio.interfaces.documentviewupdatedata.yml
+++ b/docs/docs-ref-autogen/visio/visio.interfaces.documentviewupdatedata.yml
@@ -1,85 +1,91 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: be2555593ee95bff6e9e8c5b3ddb5c186cf83f7b
-ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/13/2019
-ms.locfileid: "29978586"
 items:
-- uid: visio.Visio.Interfaces.DocumentViewUpdateData
-  summary: <span data-ttu-id="80eaa-101">用于对文档的对象的数据更新接口"documentView.set (<!-- -->{...}<!-- -->)".</span><span class="sxs-lookup"><span data-stu-id="80eaa-101">An interface for updating data on the DocumentView object, for use in "documentView.set(<!-- -->{ ... }<!-- -->)".</span></span>
-  name: Visio.Interfaces.DocumentViewUpdateData
-  fullName: Visio.Interfaces.DocumentViewUpdateData
-  langs:
-  - typeScript
-  type: interface
-  package: visio
-  children:
-  - visio.Visio.Interfaces.DocumentViewUpdateData.disableHyperlinks
-  - visio.Visio.Interfaces.DocumentViewUpdateData.disablePan
-  - visio.Visio.Interfaces.DocumentViewUpdateData.disableZoom
-  - visio.Visio.Interfaces.DocumentViewUpdateData.hideDiagramBoundary
-- uid: visio.Visio.Interfaces.DocumentViewUpdateData.disableHyperlinks
-  summary: >-
-    <span data-ttu-id="80eaa-102">禁用超链接。</span><span class="sxs-lookup"><span data-stu-id="80eaa-102">Disable Hyperlinks.</span></span>
+  - uid: visio.Visio.Interfaces.DocumentViewUpdateData
+    summary: '<span data-ttu-id="6b2af-101">一个用于更新 DocumentView 对象上的数据的接口, 可用于 "DocumentView (</span><span class="sxs-lookup"><span data-stu-id="6b2af-101">An interface for updating data on the DocumentView object, for use in "documentView.set(</span></span><!-- --><span data-ttu-id="6b2af-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="6b2af-102"></span></span><!-- --><span data-ttu-id="6b2af-103">)".</span><span class="sxs-lookup"><span data-stu-id="6b2af-103"></span></span>'
+    name: Visio.Interfaces.DocumentViewUpdateData
+    fullName: Visio.Interfaces.DocumentViewUpdateData
+    langs:
+      - typeScript
+    type: interface
+    package: visio
+    children:
+      - visio.Visio.Interfaces.DocumentViewUpdateData.disableHyperlinks
+      - visio.Visio.Interfaces.DocumentViewUpdateData.disablePan
+      - visio.Visio.Interfaces.DocumentViewUpdateData.disablePanZoomWindow
+      - visio.Visio.Interfaces.DocumentViewUpdateData.disableZoom
+      - visio.Visio.Interfaces.DocumentViewUpdateData.hideDiagramBoundary
+  - uid: visio.Visio.Interfaces.DocumentViewUpdateData.disableHyperlinks
+    summary: |-
+      <span data-ttu-id="6b2af-104">禁用超链接。</span><span class="sxs-lookup"><span data-stu-id="6b2af-104">Disable Hyperlinks.</span></span>
 
+      <span data-ttu-id="6b2af-105">\[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="6b2af-105">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+    name: disableHyperlinks
+    fullName: disableHyperlinks
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'disableHyperlinks?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: visio.Visio.Interfaces.DocumentViewUpdateData.disablePan
+    summary: |-
+      <span data-ttu-id="6b2af-106">禁用平移。</span><span class="sxs-lookup"><span data-stu-id="6b2af-106">Disable Pan.</span></span>
 
-    <span data-ttu-id="80eaa-103">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="80eaa-103">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
-  name: disableHyperlinks
-  fullName: disableHyperlinks
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'disableHyperlinks?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: visio.Visio.Interfaces.DocumentViewUpdateData.disablePan
-  summary: >-
-    <span data-ttu-id="80eaa-104">禁用平移。</span><span class="sxs-lookup"><span data-stu-id="80eaa-104">Disable Pan.</span></span>
+      <span data-ttu-id="6b2af-107">\[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="6b2af-107">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+    name: disablePan
+    fullName: disablePan
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'disablePan?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: visio.Visio.Interfaces.DocumentViewUpdateData.disablePanZoomWindow
+    summary: |-
+      <span data-ttu-id="6b2af-108">禁用 PanZoomWindow。</span><span class="sxs-lookup"><span data-stu-id="6b2af-108">Disable PanZoomWindow.</span></span>
 
+      <span data-ttu-id="6b2af-109">\[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="6b2af-109">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+    name: disablePanZoomWindow
+    fullName: disablePanZoomWindow
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'disablePanZoomWindow?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: visio.Visio.Interfaces.DocumentViewUpdateData.disableZoom
+    summary: |-
+      <span data-ttu-id="6b2af-110">禁用缩放。</span><span class="sxs-lookup"><span data-stu-id="6b2af-110">Disable Zoom.</span></span>
 
-    <span data-ttu-id="80eaa-105">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="80eaa-105">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
-  name: disablePan
-  fullName: disablePan
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'disablePan?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: visio.Visio.Interfaces.DocumentViewUpdateData.disableZoom
-  summary: >-
-    <span data-ttu-id="80eaa-106">禁用缩放。</span><span class="sxs-lookup"><span data-stu-id="80eaa-106">Disable Zoom.</span></span>
+      <span data-ttu-id="6b2af-111">\[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="6b2af-111">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+    name: disableZoom
+    fullName: disableZoom
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'disableZoom?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: visio.Visio.Interfaces.DocumentViewUpdateData.hideDiagramBoundary
+    summary: |-
+      <span data-ttu-id="6b2af-112">隐藏关系图边界。</span><span class="sxs-lookup"><span data-stu-id="6b2af-112">Hide Diagram Boundary.</span></span>
 
-
-    <span data-ttu-id="80eaa-107">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="80eaa-107">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
-  name: disableZoom
-  fullName: disableZoom
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'disableZoom?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: visio.Visio.Interfaces.DocumentViewUpdateData.hideDiagramBoundary
-  summary: >-
-    <span data-ttu-id="80eaa-108">隐藏图边界。</span><span class="sxs-lookup"><span data-stu-id="80eaa-108">Hide Diagram Boundary.</span></span>
-
-
-    <span data-ttu-id="80eaa-109">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="80eaa-109">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
-  name: hideDiagramBoundary
-  fullName: hideDiagramBoundary
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'hideDiagramBoundary?: boolean;'
-    return:
-      type:
-      - boolean
+      <span data-ttu-id="6b2af-113">\[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="6b2af-113">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+    name: hideDiagramBoundary
+    fullName: hideDiagramBoundary
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'hideDiagramBoundary?: boolean;'
+      return:
+        type:
+          - boolean
