--- a/docs/docs-ref-autogen/excel/excel.datavalidationrule.yml
+++ b/docs/docs-ref-autogen/excel/excel.datavalidationrule.yml
@@ -2,9 +2,9 @@
 items:
   - uid: excel.Excel.DataValidationRule
     summary: |-
-      <span data-ttu-id="e4c32-101">数据有效性规则包含不同类型的数据验证。</span><span class="sxs-lookup"><span data-stu-id="e4c32-101">Data validation rule contains different types of data validation.</span></span> <span data-ttu-id="e4c32-102">一次只能根据 DataValidationType 使用其中一种方法。</span><span class="sxs-lookup"><span data-stu-id="e4c32-102">You can only use one of them at a time according the Excel.DataValidationType.</span></span>
+      <span data-ttu-id="0c32d-101">数据有效性规则包含不同类型的数据验证。</span><span class="sxs-lookup"><span data-stu-id="0c32d-101">Data validation rule contains different types of data validation.</span></span> <span data-ttu-id="0c32d-102">一次只能根据 DataValidationType 使用其中一种方法。</span><span class="sxs-lookup"><span data-stu-id="0c32d-102">You can only use one of them at a time according the Excel.DataValidationType.</span></span>
 
-      <span data-ttu-id="e4c32-103">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e4c32-103">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="0c32d-103">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0c32d-103">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.DataValidationRule
     fullName: Excel.DataValidationRule
     langs:
@@ -21,9 +21,9 @@ items:
       - excel.Excel.DataValidationRule.wholeNumber
   - uid: excel.Excel.DataValidationRule.custom
     summary: |-
-      <span data-ttu-id="e4c32-104">自定义数据有效性条件。</span><span class="sxs-lookup"><span data-stu-id="e4c32-104">Custom data validation criteria.</span></span>
+      <span data-ttu-id="0c32d-104">自定义数据有效性条件。</span><span class="sxs-lookup"><span data-stu-id="0c32d-104">Custom data validation criteria.</span></span>
 
-      <span data-ttu-id="e4c32-105">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e4c32-105">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="0c32d-105">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0c32d-105">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: custom
     fullName: custom
     langs:
@@ -36,9 +36,9 @@ items:
           - excel.Excel.CustomDataValidation
   - uid: excel.Excel.DataValidationRule.date
     summary: |-
-      <span data-ttu-id="e4c32-106">日期数据有效性条件。</span><span class="sxs-lookup"><span data-stu-id="e4c32-106">Date data validation criteria.</span></span>
+      <span data-ttu-id="0c32d-106">日期数据有效性条件。</span><span class="sxs-lookup"><span data-stu-id="0c32d-106">Date data validation criteria.</span></span>
 
-      <span data-ttu-id="e4c32-107">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e4c32-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="0c32d-107">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0c32d-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: date
     fullName: date
     langs:
@@ -51,9 +51,9 @@ items:
           - excel.Excel.DateTimeDataValidation
   - uid: excel.Excel.DataValidationRule.decimal
     summary: |-
-      <span data-ttu-id="e4c32-108">小数数据有效性条件。</span><span class="sxs-lookup"><span data-stu-id="e4c32-108">Decimal data validation criteria.</span></span>
+      <span data-ttu-id="0c32d-108">小数数据有效性条件。</span><span class="sxs-lookup"><span data-stu-id="0c32d-108">Decimal data validation criteria.</span></span>
 
-      <span data-ttu-id="e4c32-109">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e4c32-109">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="0c32d-109">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0c32d-109">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: decimal
     fullName: decimal
     langs:
@@ -66,9 +66,9 @@ items:
           - excel.Excel.BasicDataValidation
   - uid: excel.Excel.DataValidationRule.list
     summary: |-
-      <span data-ttu-id="e4c32-110">列表数据有效性条件。</span><span class="sxs-lookup"><span data-stu-id="e4c32-110">List data validation criteria.</span></span>
+      <span data-ttu-id="0c32d-110">列表数据有效性条件。</span><span class="sxs-lookup"><span data-stu-id="0c32d-110">List data validation criteria.</span></span>
 
-      <span data-ttu-id="e4c32-111">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e4c32-111">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="0c32d-111">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0c32d-111">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: list
     fullName: list
     langs:
@@ -82,7 +82,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="e4c32-112">示例</span><span class="sxs-lookup"><span data-stu-id="e4c32-112">Examples</span></span>
+          #### <a name="examples"></a><span data-ttu-id="0c32d-112">示例</span><span class="sxs-lookup"><span data-stu-id="0c32d-112">Examples</span></span>
 
           ```typescript
           await Excel.run(async (context) => {
@@ -109,9 +109,9 @@ items:
           ```
   - uid: excel.Excel.DataValidationRule.textLength
     summary: |-
-      <span data-ttu-id="e4c32-113">TextLength 数据有效性条件。</span><span class="sxs-lookup"><span data-stu-id="e4c32-113">TextLength data validation criteria.</span></span>
+      <span data-ttu-id="0c32d-113">TextLength 数据有效性条件。</span><span class="sxs-lookup"><span data-stu-id="0c32d-113">TextLength data validation criteria.</span></span>
 
-      <span data-ttu-id="e4c32-114">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e4c32-114">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="0c32d-114">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0c32d-114">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: textLength
     fullName: textLength
     langs:
@@ -124,9 +124,9 @@ items:
           - excel.Excel.BasicDataValidation
   - uid: excel.Excel.DataValidationRule.time
     summary: |-
-      <span data-ttu-id="e4c32-115">时间数据有效性条件。</span><span class="sxs-lookup"><span data-stu-id="e4c32-115">Time data validation criteria.</span></span>
+      <span data-ttu-id="0c32d-115">时间数据有效性条件。</span><span class="sxs-lookup"><span data-stu-id="0c32d-115">Time data validation criteria.</span></span>
 
-      <span data-ttu-id="e4c32-116">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e4c32-116">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="0c32d-116">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0c32d-116">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: time
     fullName: time
     langs:
@@ -139,9 +139,9 @@ items:
           - excel.Excel.DateTimeDataValidation
   - uid: excel.Excel.DataValidationRule.wholeNumber
     summary: |-
-      <span data-ttu-id="e4c32-117">WholeNumber 数据有效性条件。</span><span class="sxs-lookup"><span data-stu-id="e4c32-117">WholeNumber data validation criteria.</span></span>
+      <span data-ttu-id="0c32d-117">WholeNumber 数据有效性条件。</span><span class="sxs-lookup"><span data-stu-id="0c32d-117">WholeNumber data validation criteria.</span></span>
 
-      <span data-ttu-id="e4c32-118">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e4c32-118">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="0c32d-118">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0c32d-118">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: wholeNumber
     fullName: wholeNumber
     langs:
@@ -155,7 +155,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="e4c32-119">示例</span><span class="sxs-lookup"><span data-stu-id="e4c32-119">Examples</span></span>
+          #### <a name="examples"></a><span data-ttu-id="0c32d-119">示例</span><span class="sxs-lookup"><span data-stu-id="0c32d-119">Examples</span></span>
 
           ```typescript
           await Excel.run(async (context) => {
