--- a/docs/docs-ref-autogen/excel/excel.interfaces.bindingdata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.bindingdata.yml
@@ -1,51 +1,43 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 90675c1f399733d8f39aaf58684b41f1f01b48fe
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26227861"
 items:
-- uid: excel.Excel.Interfaces.BindingData
-  summary: <span data-ttu-id="3ced5-101">描述调用"binding.toJSON()"返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="3ced5-101">An interface describing the data returned by calling "binding.toJSON()".</span></span>
-  name: Excel.Interfaces.BindingData
-  fullName: Excel.Interfaces.BindingData
-  langs:
-  - typeScript
-  type: interface
-  package: excel
-  children:
-  - excel.Excel.Interfaces.BindingData.id
-  - excel.Excel.Interfaces.BindingData.type
-- uid: excel.Excel.Interfaces.BindingData.id
-  summary: >-
-    <span data-ttu-id="3ced5-p101">表示绑定标识符。只读。</span><span class="sxs-lookup"><span data-stu-id="3ced5-p101">Represents binding identifier. Read-only.</span></span>
+  - uid: excel.Excel.Interfaces.BindingData
+    summary: <span data-ttu-id="2efbf-101">描述通过调用 "toJSON ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="2efbf-101">An interface describing the data returned by calling "binding.toJSON()".</span></span>
+    name: Excel.Interfaces.BindingData
+    fullName: Excel.Interfaces.BindingData
+    langs:
+      - typeScript
+    type: interface
+    package: excel
+    children:
+      - excel.Excel.Interfaces.BindingData.id
+      - excel.Excel.Interfaces.BindingData.type
+  - uid: excel.Excel.Interfaces.BindingData.id
+    summary: |-
+      <span data-ttu-id="2efbf-102">表示绑定标识符。</span><span class="sxs-lookup"><span data-stu-id="2efbf-102">Represents binding identifier.</span></span> <span data-ttu-id="2efbf-103">只读。</span><span class="sxs-lookup"><span data-stu-id="2efbf-103">Read-only.</span></span>
 
+      <span data-ttu-id="2efbf-104">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2efbf-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: id
+    fullName: id
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'id?: string;'
+      return:
+        type:
+          - string
+  - uid: excel.Excel.Interfaces.BindingData.type
+    summary: |-
+      <span data-ttu-id="2efbf-105">返回绑定的类型。</span><span class="sxs-lookup"><span data-stu-id="2efbf-105">Returns the type of the binding.</span></span> <span data-ttu-id="2efbf-106">有关详细信息, 请参阅 BindingType。</span><span class="sxs-lookup"><span data-stu-id="2efbf-106">See Excel.BindingType for details.</span></span> <span data-ttu-id="2efbf-107">只读。</span><span class="sxs-lookup"><span data-stu-id="2efbf-107">Read-only.</span></span>
 
-    <span data-ttu-id="3ced5-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3ced5-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: id
-  fullName: id
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'id?: string;'
-    return:
-      type:
-      - string
-- uid: excel.Excel.Interfaces.BindingData.type
-  summary: >-
-    <span data-ttu-id="3ced5-105">返回绑定的类型。</span><span class="sxs-lookup"><span data-stu-id="3ced5-105">Returns the type of the binding.</span></span> <span data-ttu-id="3ced5-106">有关详细信息，请参阅 Excel.BindingType。</span><span class="sxs-lookup"><span data-stu-id="3ced5-106">See Excel.BindingType for details.</span></span> <span data-ttu-id="3ced5-107">只读。</span><span class="sxs-lookup"><span data-stu-id="3ced5-107">Read-only.</span></span>
-
-
-    <span data-ttu-id="3ced5-108">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3ced5-108">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: type
-  fullName: type
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'type?: Excel.BindingType | "Range" | "Table" | "Text";'
-    return:
-      type:
-      - Excel.BindingType | "Range" | "Table" | "Text"
+      <span data-ttu-id="2efbf-108">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2efbf-108">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: type
+    fullName: type
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'type?: Excel.BindingType | "Range" | "Table" | "Text";'
+      return:
+        type:
+          - Excel.BindingType | "Range" | "Table" | "Text"
