--- a/docs/docs-ref-autogen/excel/excel.interfaces.chartaxistitleformatdata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.chartaxistitleformatdata.yml
@@ -1,51 +1,43 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 6e8a2f17c6820abd3f5b6400a81060334049067c
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26235064"
 items:
-- uid: excel.Excel.Interfaces.ChartAxisTitleFormatData
-  summary: <span data-ttu-id="44bf1-101">描述调用"chartAxisTitleFormat.toJSON()"返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="44bf1-101">An interface describing the data returned by calling "chartAxisTitleFormat.toJSON()".</span></span>
-  name: Excel.Interfaces.ChartAxisTitleFormatData
-  fullName: Excel.Interfaces.ChartAxisTitleFormatData
-  langs:
-  - typeScript
-  type: interface
-  package: excel
-  children:
-  - excel.Excel.Interfaces.ChartAxisTitleFormatData.border
-  - excel.Excel.Interfaces.ChartAxisTitleFormatData.font
-- uid: excel.Excel.Interfaces.ChartAxisTitleFormatData.border
-  summary: >-
-    <span data-ttu-id="44bf1-102">代表边框格式，其中包括颜色、 linestyle 和权重。</span><span class="sxs-lookup"><span data-stu-id="44bf1-102">Represents the border format, which includes color, linestyle, and weight.</span></span>
+  - uid: excel.Excel.Interfaces.ChartAxisTitleFormatData
+    summary: <span data-ttu-id="06705-101">描述通过调用 "chartAxisTitleFormat ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="06705-101">An interface describing the data returned by calling "chartAxisTitleFormat.toJSON()".</span></span>
+    name: Excel.Interfaces.ChartAxisTitleFormatData
+    fullName: Excel.Interfaces.ChartAxisTitleFormatData
+    langs:
+      - typeScript
+    type: interface
+    package: excel
+    children:
+      - excel.Excel.Interfaces.ChartAxisTitleFormatData.border
+      - excel.Excel.Interfaces.ChartAxisTitleFormatData.font
+  - uid: excel.Excel.Interfaces.ChartAxisTitleFormatData.border
+    summary: |-
+      <span data-ttu-id="06705-102">表示边框格式，包括颜色、线条样式和粗细。</span><span class="sxs-lookup"><span data-stu-id="06705-102">Represents the border format, which includes color, linestyle, and weight.</span></span>
 
+      <span data-ttu-id="06705-103">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="06705-103">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: border
+    fullName: border
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'border?: Excel.Interfaces.ChartBorderData;'
+      return:
+        type:
+          - excel.Excel.Interfaces.ChartBorderData
+  - uid: excel.Excel.Interfaces.ChartAxisTitleFormatData.font
+    summary: |-
+      <span data-ttu-id="06705-104">表示图表坐标轴标题对象的字体属性，例如字体名称、字体大小、颜色等。</span><span class="sxs-lookup"><span data-stu-id="06705-104">Represents the font attributes, such as font name, font size, color, etc. of chart axis title object.</span></span> <span data-ttu-id="06705-105">只读。</span><span class="sxs-lookup"><span data-stu-id="06705-105">Read-only.</span></span>
 
-    <span data-ttu-id="44bf1-103">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="44bf1-103">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: border
-  fullName: border
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'border?: Excel.Interfaces.ChartBorderData;'
-    return:
-      type:
-      - excel.Excel.Interfaces.ChartBorderData
-- uid: excel.Excel.Interfaces.ChartAxisTitleFormatData.font
-  summary: >-
-    <span data-ttu-id="44bf1-p101">表示图表坐标轴标题对象的字体属性，例如字体名称、字体大小、颜色等。只读。</span><span class="sxs-lookup"><span data-stu-id="44bf1-p101">Represents the font attributes, such as font name, font size, color, etc. of chart axis title object. Read-only.</span></span>
-
-
-    <span data-ttu-id="44bf1-106">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="44bf1-106">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: font
-  fullName: font
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'font?: Excel.Interfaces.ChartFontData;'
-    return:
-      type:
-      - excel.Excel.Interfaces.ChartFontData
+      <span data-ttu-id="06705-106">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="06705-106">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: font
+    fullName: font
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'font?: Excel.Interfaces.ChartFontData;'
+      return:
+        type:
+          - excel.Excel.Interfaces.ChartFontData
