--- a/docs/docs-ref-autogen/excel/excel.interfaces.charterrorbarsdata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.charterrorbarsdata.yml
@@ -1,107 +1,96 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 7395c1b061fd22431871f237d0324dbd5df1b183
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30107839"
 items:
-- uid: excel.Excel.Interfaces.ChartErrorBarsData
-  summary: <span data-ttu-id="aab06-101">描述通过调用 "chartErrorBars ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="aab06-101">An interface describing the data returned by calling "chartErrorBars.toJSON()".</span></span>
-  name: Excel.Interfaces.ChartErrorBarsData
-  fullName: Excel.Interfaces.ChartErrorBarsData
-  langs:
-  - typeScript
-  type: interface
-  package: excel
-  children:
-  - excel.Excel.Interfaces.ChartErrorBarsData.endStyleCap
-  - excel.Excel.Interfaces.ChartErrorBarsData.format
-  - excel.Excel.Interfaces.ChartErrorBarsData.include
-  - excel.Excel.Interfaces.ChartErrorBarsData.type
-  - excel.Excel.Interfaces.ChartErrorBarsData.visible
-- uid: excel.Excel.Interfaces.ChartErrorBarsData.endStyleCap
-  summary: >-
-    <span data-ttu-id="aab06-102">表示是否对误差线使用尾部样式帽。</span><span class="sxs-lookup"><span data-stu-id="aab06-102">Represents whether have the end style cap for the error bars.</span></span>
+  - uid: excel.Excel.Interfaces.ChartErrorBarsData
+    summary: <span data-ttu-id="4192b-101">描述通过调用 "chartErrorBars ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="4192b-101">An interface describing the data returned by calling "chartErrorBars.toJSON()".</span></span>
+    name: Excel.Interfaces.ChartErrorBarsData
+    fullName: Excel.Interfaces.ChartErrorBarsData
+    langs:
+      - typeScript
+    type: interface
+    package: excel
+    children:
+      - excel.Excel.Interfaces.ChartErrorBarsData.endStyleCap
+      - excel.Excel.Interfaces.ChartErrorBarsData.format
+      - excel.Excel.Interfaces.ChartErrorBarsData.include
+      - excel.Excel.Interfaces.ChartErrorBarsData.type
+      - excel.Excel.Interfaces.ChartErrorBarsData.visible
+  - uid: excel.Excel.Interfaces.ChartErrorBarsData.endStyleCap
+    summary: |-
+      <span data-ttu-id="4192b-102">表示误差线是否具有终止端样式。</span><span class="sxs-lookup"><span data-stu-id="4192b-102">Represents whether have the end style cap for the error bars.</span></span>
 
+      <span data-ttu-id="4192b-103">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4192b-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: endStyleCap
+    fullName: endStyleCap
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'endStyleCap?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.ChartErrorBarsData.format
+    summary: |-
+      <span data-ttu-id="4192b-104">表示图表 ErrorBars 的格式。</span><span class="sxs-lookup"><span data-stu-id="4192b-104">Represents the formatting of chart ErrorBars.</span></span>
 
-    <span data-ttu-id="aab06-103">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="aab06-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  isPreview: true
-  name: endStyleCap
-  fullName: endStyleCap
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'endStyleCap?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.ChartErrorBarsData.format
-  summary: >-
-    <span data-ttu-id="aab06-104">表示图表 ErrorBars 的格式。</span><span class="sxs-lookup"><span data-stu-id="aab06-104">Represents the formatting of chart ErrorBars.</span></span>
+      <span data-ttu-id="4192b-105">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4192b-105">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: format
+    fullName: format
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'format?: Excel.Interfaces.ChartErrorBarsFormatData;'
+      return:
+        type:
+          - excel.Excel.Interfaces.ChartErrorBarsFormatData
+  - uid: excel.Excel.Interfaces.ChartErrorBarsData.include
+    summary: |-
+      <span data-ttu-id="4192b-106">表示要包含的误差线部分。</span><span class="sxs-lookup"><span data-stu-id="4192b-106">Represents which error-bar parts to include.</span></span> <span data-ttu-id="4192b-107">有关详细信息，请参阅 Excel.ChartErrorBarsInclude。</span><span class="sxs-lookup"><span data-stu-id="4192b-107">See Excel.ChartErrorBarsInclude for details.</span></span>
 
+      <span data-ttu-id="4192b-108">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4192b-108">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: include
+    fullName: include
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'include?: Excel.ChartErrorBarsInclude | "Both" | "MinusValues" | "PlusValues";'
+      return:
+        type:
+          - Excel.ChartErrorBarsInclude | "Both" | "MinusValues" | "PlusValues"
+  - uid: excel.Excel.Interfaces.ChartErrorBarsData.type
+    summary: |-
+      <span data-ttu-id="4192b-109">指定由误差线标记的区域。</span><span class="sxs-lookup"><span data-stu-id="4192b-109">Represents the range marked by error bars.</span></span> <span data-ttu-id="4192b-110">有关详细信息，请参阅 Excel.ChartErrorBarsType。</span><span class="sxs-lookup"><span data-stu-id="4192b-110">See Excel.ChartErrorBarsType for details.</span></span>
 
-    <span data-ttu-id="aab06-105">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="aab06-105">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  isPreview: true
-  name: format
-  fullName: format
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'format?: Excel.Interfaces.ChartErrorBarsFormatData;'
-    return:
-      type:
-      - excel.Excel.Interfaces.ChartErrorBarsFormatData
-- uid: excel.Excel.Interfaces.ChartErrorBarsData.include
-  summary: >-
-    <span data-ttu-id="aab06-106">表示要包含的误差线部分。</span><span class="sxs-lookup"><span data-stu-id="aab06-106">Represents which error-bar parts to include.</span></span> <span data-ttu-id="aab06-107">有关详细信息, 请参阅 ChartErrorBarsInclude。</span><span class="sxs-lookup"><span data-stu-id="aab06-107">See Excel.ChartErrorBarsInclude for details.</span></span>
+      <span data-ttu-id="4192b-111">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4192b-111">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: type
+    fullName: type
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'type?: Excel.ChartErrorBarsType | "FixedValue" | "Percent" | "StDev" | "StError" | "Custom";'
+      return:
+        type:
+          - Excel.ChartErrorBarsType | "FixedValue" | "Percent" | "StDev" | "StError" | "Custom"
+  - uid: excel.Excel.Interfaces.ChartErrorBarsData.visible
+    summary: |-
+      <span data-ttu-id="4192b-112">表示是否显示误差线。</span><span class="sxs-lookup"><span data-stu-id="4192b-112">Represents whether shown error bars.</span></span>
 
-
-    <span data-ttu-id="aab06-108">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="aab06-108">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  isPreview: true
-  name: include
-  fullName: include
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'include?: Excel.ChartErrorBarsInclude | "Both" | "MinusValues" | "PlusValues";'
-    return:
-      type:
-      - Excel.ChartErrorBarsInclude | "Both" | "MinusValues" | "PlusValues"
-- uid: excel.Excel.Interfaces.ChartErrorBarsData.type
-  summary: >-
-    <span data-ttu-id="aab06-109">代表误差线标记的区域。</span><span class="sxs-lookup"><span data-stu-id="aab06-109">Represents the range marked by error bars.</span></span> <span data-ttu-id="aab06-110">有关详细信息, 请参阅 ChartErrorBarsType。</span><span class="sxs-lookup"><span data-stu-id="aab06-110">See Excel.ChartErrorBarsType for details.</span></span>
-
-
-    <span data-ttu-id="aab06-111">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="aab06-111">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  isPreview: true
-  name: type
-  fullName: type
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'type?: Excel.ChartErrorBarsType | "FixedValue" | "Percent" | "StDev" | "StError" | "Custom";'
-    return:
-      type:
-      - Excel.ChartErrorBarsType | "FixedValue" | "Percent" | "StDev" | "StError" | "Custom"
-- uid: excel.Excel.Interfaces.ChartErrorBarsData.visible
-  summary: >-
-    <span data-ttu-id="aab06-112">表示是否显示误差线。</span><span class="sxs-lookup"><span data-stu-id="aab06-112">Represents whether shown error bars.</span></span>
-
-
-    <span data-ttu-id="aab06-113">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="aab06-113">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  isPreview: true
-  name: visible
-  fullName: visible
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'visible?: boolean;'
-    return:
-      type:
-      - boolean
+      <span data-ttu-id="4192b-113">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4192b-113">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: visible
+    fullName: visible
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'visible?: boolean;'
+      return:
+        type:
+          - boolean
