--- a/docs/docs-ref-autogen/excel/excel.interfaces.chartlegendformatdata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.chartlegendformatdata.yml
@@ -1,51 +1,43 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: c5350ba70323b35ebc6157c9a9821c03c501456c
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26234574"
 items:
-- uid: excel.Excel.Interfaces.ChartLegendFormatData
-  summary: <span data-ttu-id="6b82e-101">描述调用"chartLegendFormat.toJSON()"返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="6b82e-101">An interface describing the data returned by calling "chartLegendFormat.toJSON()".</span></span>
-  name: Excel.Interfaces.ChartLegendFormatData
-  fullName: Excel.Interfaces.ChartLegendFormatData
-  langs:
-  - typeScript
-  type: interface
-  package: excel
-  children:
-  - excel.Excel.Interfaces.ChartLegendFormatData.border
-  - excel.Excel.Interfaces.ChartLegendFormatData.font
-- uid: excel.Excel.Interfaces.ChartLegendFormatData.border
-  summary: >-
-    <span data-ttu-id="6b82e-102">代表边框格式，其中包括颜色、 linestyle 和权重。</span><span class="sxs-lookup"><span data-stu-id="6b82e-102">Represents the border format, which includes color, linestyle, and weight.</span></span> <span data-ttu-id="6b82e-103">只读。</span><span class="sxs-lookup"><span data-stu-id="6b82e-103">Read-only.</span></span>
+  - uid: excel.Excel.Interfaces.ChartLegendFormatData
+    summary: <span data-ttu-id="35325-101">描述通过调用 "chartLegendFormat ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="35325-101">An interface describing the data returned by calling "chartLegendFormat.toJSON()".</span></span>
+    name: Excel.Interfaces.ChartLegendFormatData
+    fullName: Excel.Interfaces.ChartLegendFormatData
+    langs:
+      - typeScript
+    type: interface
+    package: excel
+    children:
+      - excel.Excel.Interfaces.ChartLegendFormatData.border
+      - excel.Excel.Interfaces.ChartLegendFormatData.font
+  - uid: excel.Excel.Interfaces.ChartLegendFormatData.border
+    summary: |-
+      <span data-ttu-id="35325-102">表示边框格式，包括颜色、线条样式和粗细。</span><span class="sxs-lookup"><span data-stu-id="35325-102">Represents the border format, which includes color, linestyle, and weight.</span></span> <span data-ttu-id="35325-103">只读。</span><span class="sxs-lookup"><span data-stu-id="35325-103">Read-only.</span></span>
 
+      <span data-ttu-id="35325-104">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="35325-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: border
+    fullName: border
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'border?: Excel.Interfaces.ChartBorderData;'
+      return:
+        type:
+          - excel.Excel.Interfaces.ChartBorderData
+  - uid: excel.Excel.Interfaces.ChartLegendFormatData.font
+    summary: |-
+      <span data-ttu-id="35325-105">表示图表图例的字体属性，例如字体名称、字体大小、颜色等。</span><span class="sxs-lookup"><span data-stu-id="35325-105">Represents the font attributes such as font name, font size, color, etc. of a chart legend.</span></span> <span data-ttu-id="35325-106">只读。</span><span class="sxs-lookup"><span data-stu-id="35325-106">Read-only.</span></span>
 
-    <span data-ttu-id="6b82e-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6b82e-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: border
-  fullName: border
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'border?: Excel.Interfaces.ChartBorderData;'
-    return:
-      type:
-      - excel.Excel.Interfaces.ChartBorderData
-- uid: excel.Excel.Interfaces.ChartLegendFormatData.font
-  summary: >-
-    <span data-ttu-id="6b82e-p102">表示图表图例的字体属性，例如字体名称、字体大小、颜色等。只读。</span><span class="sxs-lookup"><span data-stu-id="6b82e-p102">Represents the font attributes such as font name, font size, color, etc. of a chart legend. Read-only.</span></span>
-
-
-    <span data-ttu-id="6b82e-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6b82e-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: font
-  fullName: font
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'font?: Excel.Interfaces.ChartFontData;'
-    return:
-      type:
-      - excel.Excel.Interfaces.ChartFontData
+      <span data-ttu-id="35325-107">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="35325-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: font
+    fullName: font
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'font?: Excel.Interfaces.ChartFontData;'
+      return:
+        type:
+          - excel.Excel.Interfaces.ChartFontData
