--- a/docs/docs-ref-autogen/excel/excel.interfaces.chartplotareadata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.chartplotareadata.yml
@@ -1,187 +1,171 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 1f8376d8eb419f4269365ad3499cc6297bbb5e4a
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26230844"
 items:
-- uid: excel.Excel.Interfaces.ChartPlotAreaData
-  summary: <span data-ttu-id="166d5-101">描述调用"chartPlotArea.toJSON()"返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="166d5-101">An interface describing the data returned by calling "chartPlotArea.toJSON()".</span></span>
-  name: Excel.Interfaces.ChartPlotAreaData
-  fullName: Excel.Interfaces.ChartPlotAreaData
-  langs:
-  - typeScript
-  type: interface
-  package: excel
-  children:
-  - excel.Excel.Interfaces.ChartPlotAreaData.format
-  - excel.Excel.Interfaces.ChartPlotAreaData.height
-  - excel.Excel.Interfaces.ChartPlotAreaData.insideHeight
-  - excel.Excel.Interfaces.ChartPlotAreaData.insideLeft
-  - excel.Excel.Interfaces.ChartPlotAreaData.insideTop
-  - excel.Excel.Interfaces.ChartPlotAreaData.insideWidth
-  - excel.Excel.Interfaces.ChartPlotAreaData.left
-  - excel.Excel.Interfaces.ChartPlotAreaData.position
-  - excel.Excel.Interfaces.ChartPlotAreaData.top
-  - excel.Excel.Interfaces.ChartPlotAreaData.width
-- uid: excel.Excel.Interfaces.ChartPlotAreaData.format
-  summary: >-
-    <span data-ttu-id="166d5-102">代表图表 plotArea 的格式。</span><span class="sxs-lookup"><span data-stu-id="166d5-102">Represents the formatting of a chart plotArea.</span></span>
+  - uid: excel.Excel.Interfaces.ChartPlotAreaData
+    summary: <span data-ttu-id="e4bcd-101">描述通过调用 "chartPlotArea ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="e4bcd-101">An interface describing the data returned by calling "chartPlotArea.toJSON()".</span></span>
+    name: Excel.Interfaces.ChartPlotAreaData
+    fullName: Excel.Interfaces.ChartPlotAreaData
+    langs:
+      - typeScript
+    type: interface
+    package: excel
+    children:
+      - excel.Excel.Interfaces.ChartPlotAreaData.format
+      - excel.Excel.Interfaces.ChartPlotAreaData.height
+      - excel.Excel.Interfaces.ChartPlotAreaData.insideHeight
+      - excel.Excel.Interfaces.ChartPlotAreaData.insideLeft
+      - excel.Excel.Interfaces.ChartPlotAreaData.insideTop
+      - excel.Excel.Interfaces.ChartPlotAreaData.insideWidth
+      - excel.Excel.Interfaces.ChartPlotAreaData.left
+      - excel.Excel.Interfaces.ChartPlotAreaData.position
+      - excel.Excel.Interfaces.ChartPlotAreaData.top
+      - excel.Excel.Interfaces.ChartPlotAreaData.width
+  - uid: excel.Excel.Interfaces.ChartPlotAreaData.format
+    summary: |-
+      <span data-ttu-id="e4bcd-102">表示图表 plotArea 的格式。</span><span class="sxs-lookup"><span data-stu-id="e4bcd-102">Represents the formatting of a chart plotArea.</span></span>
 
+      <span data-ttu-id="e4bcd-103">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e4bcd-103">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: format
+    fullName: format
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'format?: Excel.Interfaces.ChartPlotAreaFormatData;'
+      return:
+        type:
+          - excel.Excel.Interfaces.ChartPlotAreaFormatData
+  - uid: excel.Excel.Interfaces.ChartPlotAreaData.height
+    summary: |-
+      <span data-ttu-id="e4bcd-104">表示 plotArea 的高度值。</span><span class="sxs-lookup"><span data-stu-id="e4bcd-104">Represents the height value of plotArea.</span></span>
 
-    <span data-ttu-id="166d5-103">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="166d5-103">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: format
-  fullName: format
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'format?: Excel.Interfaces.ChartPlotAreaFormatData;'
-    return:
-      type:
-      - excel.Excel.Interfaces.ChartPlotAreaFormatData
-- uid: excel.Excel.Interfaces.ChartPlotAreaData.height
-  summary: >-
-    <span data-ttu-id="166d5-104">代表 plotArea 的高度值。</span><span class="sxs-lookup"><span data-stu-id="166d5-104">Represents the height value of plotArea.</span></span>
+      <span data-ttu-id="e4bcd-105">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e4bcd-105">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: height
+    fullName: height
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'height?: number;'
+      return:
+        type:
+          - number
+  - uid: excel.Excel.Interfaces.ChartPlotAreaData.insideHeight
+    summary: |-
+      <span data-ttu-id="e4bcd-106">表示 plotArea 的 insideHeight 值。</span><span class="sxs-lookup"><span data-stu-id="e4bcd-106">Represents the insideHeight value of plotArea.</span></span>
 
+      <span data-ttu-id="e4bcd-107">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e4bcd-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: insideHeight
+    fullName: insideHeight
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'insideHeight?: number;'
+      return:
+        type:
+          - number
+  - uid: excel.Excel.Interfaces.ChartPlotAreaData.insideLeft
+    summary: |-
+      <span data-ttu-id="e4bcd-108">表示 plotArea 的 insideLeft 值。</span><span class="sxs-lookup"><span data-stu-id="e4bcd-108">Represents the insideLeft value of plotArea.</span></span>
 
-    <span data-ttu-id="166d5-105">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="166d5-105">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: height
-  fullName: height
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'height?: number;'
-    return:
-      type:
-      - number
-- uid: excel.Excel.Interfaces.ChartPlotAreaData.insideHeight
-  summary: >-
-    <span data-ttu-id="166d5-106">代表 plotArea 的 insideHeight 值。</span><span class="sxs-lookup"><span data-stu-id="166d5-106">Represents the insideHeight value of plotArea.</span></span>
+      <span data-ttu-id="e4bcd-109">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e4bcd-109">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: insideLeft
+    fullName: insideLeft
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'insideLeft?: number;'
+      return:
+        type:
+          - number
+  - uid: excel.Excel.Interfaces.ChartPlotAreaData.insideTop
+    summary: |-
+      <span data-ttu-id="e4bcd-110">表示 plotArea 的 insideTop 值。</span><span class="sxs-lookup"><span data-stu-id="e4bcd-110">Represents the insideTop value of plotArea.</span></span>
 
+      <span data-ttu-id="e4bcd-111">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e4bcd-111">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: insideTop
+    fullName: insideTop
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'insideTop?: number;'
+      return:
+        type:
+          - number
+  - uid: excel.Excel.Interfaces.ChartPlotAreaData.insideWidth
+    summary: |-
+      <span data-ttu-id="e4bcd-112">表示 plotArea 的 insideWidth 值。</span><span class="sxs-lookup"><span data-stu-id="e4bcd-112">Represents the insideWidth value of plotArea.</span></span>
 
-    <span data-ttu-id="166d5-107">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="166d5-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: insideHeight
-  fullName: insideHeight
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'insideHeight?: number;'
-    return:
-      type:
-      - number
-- uid: excel.Excel.Interfaces.ChartPlotAreaData.insideLeft
-  summary: >-
-    <span data-ttu-id="166d5-108">代表 plotArea insideLeft 值。</span><span class="sxs-lookup"><span data-stu-id="166d5-108">Represents the insideLeft value of plotArea.</span></span>
+      <span data-ttu-id="e4bcd-113">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e4bcd-113">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: insideWidth
+    fullName: insideWidth
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'insideWidth?: number;'
+      return:
+        type:
+          - number
+  - uid: excel.Excel.Interfaces.ChartPlotAreaData.left
+    summary: |-
+      <span data-ttu-id="e4bcd-114">表示 plotArea 的 left 值。</span><span class="sxs-lookup"><span data-stu-id="e4bcd-114">Represents the left value of plotArea.</span></span>
 
+      <span data-ttu-id="e4bcd-115">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e4bcd-115">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: left
+    fullName: left
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'left?: number;'
+      return:
+        type:
+          - number
+  - uid: excel.Excel.Interfaces.ChartPlotAreaData.position
+    summary: |-
+      <span data-ttu-id="e4bcd-116">表示 plotArea 的位置。</span><span class="sxs-lookup"><span data-stu-id="e4bcd-116">Represents the position of plotArea.</span></span>
 
-    <span data-ttu-id="166d5-109">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="166d5-109">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: insideLeft
-  fullName: insideLeft
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'insideLeft?: number;'
-    return:
-      type:
-      - number
-- uid: excel.Excel.Interfaces.ChartPlotAreaData.insideTop
-  summary: >-
-    <span data-ttu-id="166d5-110">代表 plotArea insideTop 值。</span><span class="sxs-lookup"><span data-stu-id="166d5-110">Represents the insideTop value of plotArea.</span></span>
+      <span data-ttu-id="e4bcd-117">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e4bcd-117">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: position
+    fullName: position
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'position?: Excel.ChartPlotAreaPosition | "Automatic" | "Custom";'
+      return:
+        type:
+          - Excel.ChartPlotAreaPosition | "Automatic" | "Custom"
+  - uid: excel.Excel.Interfaces.ChartPlotAreaData.top
+    summary: |-
+      <span data-ttu-id="e4bcd-118">表示 plotArea 的 top 值。</span><span class="sxs-lookup"><span data-stu-id="e4bcd-118">Represents the top value of plotArea.</span></span>
 
+      <span data-ttu-id="e4bcd-119">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e4bcd-119">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: top
+    fullName: top
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'top?: number;'
+      return:
+        type:
+          - number
+  - uid: excel.Excel.Interfaces.ChartPlotAreaData.width
+    summary: |-
+      <span data-ttu-id="e4bcd-120">表示 plotArea 的宽度值。</span><span class="sxs-lookup"><span data-stu-id="e4bcd-120">Represents the width value of plotArea.</span></span>
 
-    <span data-ttu-id="166d5-111">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="166d5-111">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: insideTop
-  fullName: insideTop
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'insideTop?: number;'
-    return:
-      type:
-      - number
-- uid: excel.Excel.Interfaces.ChartPlotAreaData.insideWidth
-  summary: >-
-    <span data-ttu-id="166d5-112">代表 plotArea insideWidth 值。</span><span class="sxs-lookup"><span data-stu-id="166d5-112">Represents the insideWidth value of plotArea.</span></span>
-
-
-    <span data-ttu-id="166d5-113">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="166d5-113">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: insideWidth
-  fullName: insideWidth
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'insideWidth?: number;'
-    return:
-      type:
-      - number
-- uid: excel.Excel.Interfaces.ChartPlotAreaData.left
-  summary: >-
-    <span data-ttu-id="166d5-114">代表 plotArea 左侧的值。</span><span class="sxs-lookup"><span data-stu-id="166d5-114">Represents the left value of plotArea.</span></span>
-
-
-    <span data-ttu-id="166d5-115">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="166d5-115">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: left
-  fullName: left
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'left?: number;'
-    return:
-      type:
-      - number
-- uid: excel.Excel.Interfaces.ChartPlotAreaData.position
-  summary: >-
-    <span data-ttu-id="166d5-116">代表 plotArea 的位置。</span><span class="sxs-lookup"><span data-stu-id="166d5-116">Represents the position of plotArea.</span></span>
-
-
-    <span data-ttu-id="166d5-117">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="166d5-117">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: position
-  fullName: position
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'position?: Excel.ChartPlotAreaPosition | "Automatic" | "Custom";'
-    return:
-      type:
-      - Excel.ChartPlotAreaPosition | "Automatic" | "Custom"
-- uid: excel.Excel.Interfaces.ChartPlotAreaData.top
-  summary: >-
-    <span data-ttu-id="166d5-118">代表 plotArea 的顶部的值。</span><span class="sxs-lookup"><span data-stu-id="166d5-118">Represents the top value of plotArea.</span></span>
-
-
-    <span data-ttu-id="166d5-119">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="166d5-119">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: top
-  fullName: top
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'top?: number;'
-    return:
-      type:
-      - number
-- uid: excel.Excel.Interfaces.ChartPlotAreaData.width
-  summary: >-
-    <span data-ttu-id="166d5-120">代表 plotArea 的宽度值。</span><span class="sxs-lookup"><span data-stu-id="166d5-120">Represents the width value of plotArea.</span></span>
-
-
-    <span data-ttu-id="166d5-121">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="166d5-121">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: width
-  fullName: width
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'width?: number;'
-    return:
-      type:
-      - number
+      <span data-ttu-id="e4bcd-121">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e4bcd-121">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: width
+    fullName: width
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'width?: number;'
+      return:
+        type:
+          - number
