--- a/docs/docs-ref-autogen/excel/excel.interfaces.colorscaleconditionalformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.colorscaleconditionalformatupdatedata.yml
@@ -1,34 +1,27 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 48a66e9973f1d62a751905c7a3b6b7d91d0475a9
-ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/13/2019
-ms.locfileid: "29978285"
 items:
-- uid: excel.Excel.Interfaces.ColorScaleConditionalFormatUpdateData
-  summary: <span data-ttu-id="d84b9-101">更新对 ColorScaleConditionalFormat 对象，用于数据接口"colorScaleConditionalFormat.set (<!-- -->{...}<!-- -->)".</span><span class="sxs-lookup"><span data-stu-id="d84b9-101">An interface for updating data on the ColorScaleConditionalFormat object, for use in "colorScaleConditionalFormat.set(<!-- -->{ ... }<!-- -->)".</span></span>
-  name: Excel.Interfaces.ColorScaleConditionalFormatUpdateData
-  fullName: Excel.Interfaces.ColorScaleConditionalFormatUpdateData
-  langs:
-  - typeScript
-  type: interface
-  package: excel
-  children:
-  - excel.Excel.Interfaces.ColorScaleConditionalFormatUpdateData.criteria
-- uid: excel.Excel.Interfaces.ColorScaleConditionalFormatUpdateData.criteria
-  summary: >-
-    <span data-ttu-id="d84b9-p101">色阶的条件。使用两点色阶时，中点可选。</span><span class="sxs-lookup"><span data-stu-id="d84b9-p101">The criteria of the color scale. Midpoint is optional when using a two point color scale.</span></span>
+  - uid: excel.Excel.Interfaces.ColorScaleConditionalFormatUpdateData
+    summary: '<span data-ttu-id="deb3b-101">一个用于更新 ColorScaleConditionalFormat 对象上的数据的接口, 可用于 "ColorScaleConditionalFormat (</span><span class="sxs-lookup"><span data-stu-id="deb3b-101">An interface for updating data on the ColorScaleConditionalFormat object, for use in "colorScaleConditionalFormat.set(</span></span><!-- --><span data-ttu-id="deb3b-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="deb3b-102"></span></span><!-- --><span data-ttu-id="deb3b-103">)".</span><span class="sxs-lookup"><span data-stu-id="deb3b-103"></span></span>'
+    name: Excel.Interfaces.ColorScaleConditionalFormatUpdateData
+    fullName: Excel.Interfaces.ColorScaleConditionalFormatUpdateData
+    langs:
+      - typeScript
+    type: interface
+    package: excel
+    children:
+      - excel.Excel.Interfaces.ColorScaleConditionalFormatUpdateData.criteria
+  - uid: excel.Excel.Interfaces.ColorScaleConditionalFormatUpdateData.criteria
+    summary: |-
+      <span data-ttu-id="deb3b-104">色阶的条件。</span><span class="sxs-lookup"><span data-stu-id="deb3b-104">The criteria of the color scale.</span></span> <span data-ttu-id="deb3b-105">使用两个点的色阶时, 中点是可选的。</span><span class="sxs-lookup"><span data-stu-id="deb3b-105">Midpoint is optional when using a two point color scale.</span></span>
 
-
-    <span data-ttu-id="d84b9-104">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d84b9-104">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: criteria
-  fullName: criteria
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'criteria?: Excel.ConditionalColorScaleCriteria;'
-    return:
-      type:
-      - excel.Excel.ConditionalColorScaleCriteria
+      <span data-ttu-id="deb3b-106">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="deb3b-106">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: criteria
+    fullName: criteria
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'criteria?: Excel.ConditionalColorScaleCriteria;'
+      return:
+        type:
+          - excel.Excel.ConditionalColorScaleCriteria
