--- a/docs/docs-ref-autogen/excel/excel.interfaces.conditionalformatruleupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.conditionalformatruleupdatedata.yml
@@ -1,68 +1,59 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: d0792bb8a8d0cd44cbddf0f2cb5e220c37127178
-ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/13/2019
-ms.locfileid: "29975506"
 items:
-- uid: excel.Excel.Interfaces.ConditionalFormatRuleUpdateData
-  summary: <span data-ttu-id="9e27f-101">更新对 ConditionalFormatRule 对象，用于数据接口"conditionalFormatRule.set (<!-- -->{...}<!-- -->)".</span><span class="sxs-lookup"><span data-stu-id="9e27f-101">An interface for updating data on the ConditionalFormatRule object, for use in "conditionalFormatRule.set(<!-- -->{ ... }<!-- -->)".</span></span>
-  name: Excel.Interfaces.ConditionalFormatRuleUpdateData
-  fullName: Excel.Interfaces.ConditionalFormatRuleUpdateData
-  langs:
-  - typeScript
-  type: interface
-  package: excel
-  children:
-  - excel.Excel.Interfaces.ConditionalFormatRuleUpdateData.formula
-  - excel.Excel.Interfaces.ConditionalFormatRuleUpdateData.formulaLocal
-  - excel.Excel.Interfaces.ConditionalFormatRuleUpdateData.formulaR1C1
-- uid: excel.Excel.Interfaces.ConditionalFormatRuleUpdateData.formula
-  summary: >-
-    <span data-ttu-id="9e27f-102">如果需要，公式可对条件格式规则进行求值。</span><span class="sxs-lookup"><span data-stu-id="9e27f-102">The formula, if required, to evaluate the conditional format rule on.</span></span>
+  - uid: excel.Excel.Interfaces.ConditionalFormatRuleUpdateData
+    summary: '<span data-ttu-id="c8a41-101">一个用于更新 ConditionalFormatRule 对象上的数据的接口, 可用于 "ConditionalFormatRule (</span><span class="sxs-lookup"><span data-stu-id="c8a41-101">An interface for updating data on the ConditionalFormatRule object, for use in "conditionalFormatRule.set(</span></span><!-- --><span data-ttu-id="c8a41-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="c8a41-102"></span></span><!-- --><span data-ttu-id="c8a41-103">)".</span><span class="sxs-lookup"><span data-stu-id="c8a41-103"></span></span>'
+    name: Excel.Interfaces.ConditionalFormatRuleUpdateData
+    fullName: Excel.Interfaces.ConditionalFormatRuleUpdateData
+    langs:
+      - typeScript
+    type: interface
+    package: excel
+    children:
+      - excel.Excel.Interfaces.ConditionalFormatRuleUpdateData.formula
+      - excel.Excel.Interfaces.ConditionalFormatRuleUpdateData.formulaLocal
+      - excel.Excel.Interfaces.ConditionalFormatRuleUpdateData.formulaR1C1
+  - uid: excel.Excel.Interfaces.ConditionalFormatRuleUpdateData.formula
+    summary: |-
+      <span data-ttu-id="c8a41-104">如果需要，公式可对条件格式规则进行求值。</span><span class="sxs-lookup"><span data-stu-id="c8a41-104">The formula, if required, to evaluate the conditional format rule on.</span></span>
 
+      <span data-ttu-id="c8a41-105">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c8a41-105">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: formula
+    fullName: formula
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'formula?: string;'
+      return:
+        type:
+          - string
+  - uid: excel.Excel.Interfaces.ConditionalFormatRuleUpdateData.formulaLocal
+    summary: |-
+      <span data-ttu-id="c8a41-106">如果需要，公式可采用用户的语言对条件格式规则进行求值。</span><span class="sxs-lookup"><span data-stu-id="c8a41-106">The formula, if required, to evaluate the conditional format rule on in the user's language.</span></span>
 
-    <span data-ttu-id="9e27f-103">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9e27f-103">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: formula
-  fullName: formula
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'formula?: string;'
-    return:
-      type:
-      - string
-- uid: excel.Excel.Interfaces.ConditionalFormatRuleUpdateData.formulaLocal
-  summary: >-
-    <span data-ttu-id="9e27f-104">如果需要，公式可采用用户的语言对条件格式规则进行求值。</span><span class="sxs-lookup"><span data-stu-id="9e27f-104">The formula, if required, to evaluate the conditional format rule on in the user's language.</span></span>
+      <span data-ttu-id="c8a41-107">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c8a41-107">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: formulaLocal
+    fullName: formulaLocal
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'formulaLocal?: string;'
+      return:
+        type:
+          - string
+  - uid: excel.Excel.Interfaces.ConditionalFormatRuleUpdateData.formulaR1C1
+    summary: |-
+      <span data-ttu-id="c8a41-108">如果需要，公式可采用 R1C1 表示法对条件格式规则进行求值。</span><span class="sxs-lookup"><span data-stu-id="c8a41-108">The formula, if required, to evaluate the conditional format rule on in R1C1-style notation.</span></span>
 
-
-    <span data-ttu-id="9e27f-105">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9e27f-105">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: formulaLocal
-  fullName: formulaLocal
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'formulaLocal?: string;'
-    return:
-      type:
-      - string
-- uid: excel.Excel.Interfaces.ConditionalFormatRuleUpdateData.formulaR1C1
-  summary: >-
-    <span data-ttu-id="9e27f-106">如果需要，公式可采用 R1C1 表示法对条件格式规则进行求值。</span><span class="sxs-lookup"><span data-stu-id="9e27f-106">The formula, if required, to evaluate the conditional format rule on in R1C1-style notation.</span></span>
-
-
-    <span data-ttu-id="9e27f-107">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9e27f-107">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: formulaR1C1
-  fullName: formulaR1C1
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'formulaR1C1?: string;'
-    return:
-      type:
-      - string
+      <span data-ttu-id="c8a41-109">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c8a41-109">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: formulaR1C1
+    fullName: formulaR1C1
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'formulaR1C1?: string;'
+      return:
+        type:
+          - string
