--- a/docs/docs-ref-autogen/excel/excel.interfaces.pivottablestylecollectiondata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.pivottablestylecollectiondata.yml
@@ -1,29 +1,23 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 31ba0eae936bf3bcdef92e9e4edbca2306620ebf
-ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 03/14/2019
-ms.locfileid: "30632159"
 items:
-- uid: excel.Excel.Interfaces.PivotTableStyleCollectionData
-  summary: <span data-ttu-id="0b6d0-101">描述通过调用 "pivotTableStyleCollection ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="0b6d0-101">An interface describing the data returned by calling "pivotTableStyleCollection.toJSON()".</span></span>
-  name: Excel.Interfaces.PivotTableStyleCollectionData
-  fullName: Excel.Interfaces.PivotTableStyleCollectionData
-  langs:
-  - typeScript
-  type: interface
-  package: excel
-  children:
-  - excel.Excel.Interfaces.PivotTableStyleCollectionData.items
-- uid: excel.Excel.Interfaces.PivotTableStyleCollectionData.items
-  name: items
-  fullName: items
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'items?: Excel.Interfaces.PivotTableStyleData[];'
-    return:
-      type:
-      - Excel.Interfaces.PivotTableStyleData[]
+  - uid: excel.Excel.Interfaces.PivotTableStyleCollectionData
+    summary: <span data-ttu-id="ab87a-101">描述通过调用 "pivotTableStyleCollection ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="ab87a-101">An interface describing the data returned by calling "pivotTableStyleCollection.toJSON()".</span></span>
+    name: Excel.Interfaces.PivotTableStyleCollectionData
+    fullName: Excel.Interfaces.PivotTableStyleCollectionData
+    langs:
+      - typeScript
+    type: interface
+    package: excel
+    children:
+      - excel.Excel.Interfaces.PivotTableStyleCollectionData.items
+  - uid: excel.Excel.Interfaces.PivotTableStyleCollectionData.items
+    name: items
+    fullName: items
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'items?: Excel.Interfaces.PivotTableStyleData[];'
+      return:
+        type:
+          - 'Excel.Interfaces.PivotTableStyleData[]'
