--- a/docs/docs-ref-autogen/excel/excel.interfaces.runtimedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.runtimedata.yml
@@ -1,34 +1,27 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: dc7a8fc7c14aa68bb1f47c063c8cc7ce3210bf12
-ms.sourcegitcommit: a68606173477c7fb4069880eea941766c7d8c50d
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/01/2019
-ms.locfileid: "29704532"
 items:
-- uid: excel.Excel.Interfaces.RuntimeData
-  summary: <span data-ttu-id="711da-101">描述调用"runtime.toJSON()"返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="711da-101">An interface describing the data returned by calling "runtime.toJSON()".</span></span>
-  name: Excel.Interfaces.RuntimeData
-  fullName: Excel.Interfaces.RuntimeData
-  langs:
-  - typeScript
-  type: interface
-  package: excel
-  children:
-  - excel.Excel.Interfaces.RuntimeData.enableEvents
-- uid: excel.Excel.Interfaces.RuntimeData.enableEvents
-  summary: >-
-    <span data-ttu-id="711da-102">切换 JavaScript 中的当前任务窗格或内容加载项的事件。</span><span class="sxs-lookup"><span data-stu-id="711da-102">Toggle JavaScript events in the current task pane or content add-in.</span></span>
+  - uid: excel.Excel.Interfaces.RuntimeData
+    summary: <span data-ttu-id="67576-101">描述通过调用 "toJSON ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="67576-101">An interface describing the data returned by calling "runtime.toJSON()".</span></span>
+    name: Excel.Interfaces.RuntimeData
+    fullName: Excel.Interfaces.RuntimeData
+    langs:
+      - typeScript
+    type: interface
+    package: excel
+    children:
+      - excel.Excel.Interfaces.RuntimeData.enableEvents
+  - uid: excel.Excel.Interfaces.RuntimeData.enableEvents
+    summary: |-
+      <span data-ttu-id="67576-102">切换当前任务窗格或内容加载项中的 JavaScript 事件。</span><span class="sxs-lookup"><span data-stu-id="67576-102">Toggle JavaScript events in the current task pane or content add-in.</span></span>
 
-
-    <span data-ttu-id="711da-103">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="711da-103">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: enableEvents
-  fullName: enableEvents
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'enableEvents?: boolean;'
-    return:
-      type:
-      - boolean
+      <span data-ttu-id="67576-103">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="67576-103">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: enableEvents
+    fullName: enableEvents
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'enableEvents?: boolean;'
+      return:
+        type:
+          - boolean
