--- a/docs/docs-ref-autogen/excel/excel.interfaces.shapefilldata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.shapefilldata.yml
@@ -1,71 +1,62 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: dd8ae9be98dcfef6af6beed25de89a311abe550e
-ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 03/14/2019
-ms.locfileid: "30575751"
 items:
-- uid: excel.Excel.Interfaces.ShapeFillData
-  summary: <span data-ttu-id="ae9e0-101">描述通过调用 "shapeFill ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="ae9e0-101">An interface describing the data returned by calling "shapeFill.toJSON()".</span></span>
-  name: Excel.Interfaces.ShapeFillData
-  fullName: Excel.Interfaces.ShapeFillData
-  langs:
-  - typeScript
-  type: interface
-  package: excel
-  children:
-  - excel.Excel.Interfaces.ShapeFillData.foregroundColor
-  - excel.Excel.Interfaces.ShapeFillData.transparency
-  - excel.Excel.Interfaces.ShapeFillData.type
-- uid: excel.Excel.Interfaces.ShapeFillData.foregroundColor
-  summary: >-
-    <span data-ttu-id="ae9e0-102">代表形状填充的前景色, 格式\#RRGGBB (例如 "FFA500") 或命名的 html 颜色 (例如 "橙色") 的 html 颜色格式。</span><span class="sxs-lookup"><span data-stu-id="ae9e0-102">Represents the shape fill foreground color in HTML color format, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange")</span></span>
+  - uid: excel.Excel.Interfaces.ShapeFillData
+    summary: <span data-ttu-id="39e2e-101">描述通过调用 "shapeFill ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="39e2e-101">An interface describing the data returned by calling "shapeFill.toJSON()".</span></span>
+    name: Excel.Interfaces.ShapeFillData
+    fullName: Excel.Interfaces.ShapeFillData
+    langs:
+      - typeScript
+    type: interface
+    package: excel
+    children:
+      - excel.Excel.Interfaces.ShapeFillData.foregroundColor
+      - excel.Excel.Interfaces.ShapeFillData.transparency
+      - excel.Excel.Interfaces.ShapeFillData.type
+  - uid: excel.Excel.Interfaces.ShapeFillData.foregroundColor
+    summary: |-
+      <span data-ttu-id="39e2e-102">代表形状填充的前景色, 格式\#RRGGBB (例如 "FFA500") 或命名的 html 颜色 (例如 "橙色") 的 html 颜色格式。</span><span class="sxs-lookup"><span data-stu-id="39e2e-102">Represents the shape fill foreground color in HTML color format, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange")</span></span>
 
+      <span data-ttu-id="39e2e-103">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="39e2e-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: foregroundColor
+    fullName: foregroundColor
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'foregroundColor?: string;'
+      return:
+        type:
+          - string
+  - uid: excel.Excel.Interfaces.ShapeFillData.transparency
+    summary: |-
+      <span data-ttu-id="39e2e-104">返回或设置填充的透明度百分比，取值范围为 0.0（不透明）到 1.0（清晰）之间。</span><span class="sxs-lookup"><span data-stu-id="39e2e-104">Returns or sets the transparency percentage of the fill as a value from 0.0 (opaque) through 1.0 (clear).</span></span> <span data-ttu-id="39e2e-105">如果形状类型不支持透明度或形状填充透明度不一致（例如使用渐变填充类型），则返回 null。</span><span class="sxs-lookup"><span data-stu-id="39e2e-105">Returns null if the shape type does not support transparency or the shape fill has inconsistent transparency, such as with a gradient fill type.</span></span>
 
-    <span data-ttu-id="ae9e0-103">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ae9e0-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  isPreview: true
-  name: foregroundColor
-  fullName: foregroundColor
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'foregroundColor?: string;'
-    return:
-      type:
-      - string
-- uid: excel.Excel.Interfaces.ShapeFillData.transparency
-  summary: >-
-    <span data-ttu-id="ae9e0-104">以 0.0 (不透明) 到 1.0 (清除) 中的值的形式返回或设置填充的透明度百分比。</span><span class="sxs-lookup"><span data-stu-id="ae9e0-104">Returns or sets the transparency percentage of the fill as a value from 0.0 (opaque) through 1.0 (clear).</span></span> <span data-ttu-id="ae9e0-105">如果形状类型不支持透明度或形状填充的透明度不一致, 例如渐变填充类型, 则返回 null。</span><span class="sxs-lookup"><span data-stu-id="ae9e0-105">Returns null if the shape type does not support transparency or the shape fill has inconsistent transparency, such as with a gradient fill type.</span></span>
+      <span data-ttu-id="39e2e-106">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="39e2e-106">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: transparency
+    fullName: transparency
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'transparency?: number;'
+      return:
+        type:
+          - number
+  - uid: excel.Excel.Interfaces.ShapeFillData.type
+    summary: |-
+      <span data-ttu-id="39e2e-107">返回形状的填充类型。</span><span class="sxs-lookup"><span data-stu-id="39e2e-107">Returns the fill type of the shape.</span></span> <span data-ttu-id="39e2e-108">只读。</span><span class="sxs-lookup"><span data-stu-id="39e2e-108">Read-only.</span></span> <span data-ttu-id="39e2e-109">有关详细信息，请参阅 Excel.ShapeFillType。</span><span class="sxs-lookup"><span data-stu-id="39e2e-109">See Excel.ShapeFillType for details.</span></span>
 
-
-    <span data-ttu-id="ae9e0-106">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ae9e0-106">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  isPreview: true
-  name: transparency
-  fullName: transparency
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'transparency?: number;'
-    return:
-      type:
-      - number
-- uid: excel.Excel.Interfaces.ShapeFillData.type
-  summary: >-
-    <span data-ttu-id="ae9e0-107">返回形状的填充类型。</span><span class="sxs-lookup"><span data-stu-id="ae9e0-107">Returns the fill type of the shape.</span></span> <span data-ttu-id="ae9e0-108">只读。</span><span class="sxs-lookup"><span data-stu-id="ae9e0-108">Read-only.</span></span> <span data-ttu-id="ae9e0-109">有关详细信息, 请参阅 ShapeFillType。</span><span class="sxs-lookup"><span data-stu-id="ae9e0-109">See Excel.ShapeFillType for details.</span></span>
-
-
-    <span data-ttu-id="ae9e0-110">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ae9e0-110">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  isPreview: true
-  name: type
-  fullName: type
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'type?: Excel.ShapeFillType | "NoFill" | "Solid" | "Gradient" | "Pattern" | "PictureAndTexture" | "Mixed";'
-    return:
-      type:
-      - Excel.ShapeFillType | "NoFill" | "Solid" | "Gradient" | "Pattern" | "PictureAndTexture" | "Mixed"
+      <span data-ttu-id="39e2e-110">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="39e2e-110">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: type
+    fullName: type
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'type?: Excel.ShapeFillType | "NoFill" | "Solid" | "Gradient" | "Pattern" | "PictureAndTexture" | "Mixed";'
+      return:
+        type:
+          - Excel.ShapeFillType | "NoFill" | "Solid" | "Gradient" | "Pattern" | "PictureAndTexture" | "Mixed"
