--- a/docs/docs-ref-autogen/excel/excel.interfaces.shapefontdata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.shapefontdata.yml
@@ -1,125 +1,113 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: fa1618ecfa2963ceaa2d56af8038dfc5332bada8
-ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 03/14/2019
-ms.locfileid: "30575513"
 items:
-- uid: excel.Excel.Interfaces.ShapeFontData
-  summary: <span data-ttu-id="fce9c-101">描述通过调用 "shapeFont ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="fce9c-101">An interface describing the data returned by calling "shapeFont.toJSON()".</span></span>
-  name: Excel.Interfaces.ShapeFontData
-  fullName: Excel.Interfaces.ShapeFontData
-  langs:
-  - typeScript
-  type: interface
-  package: excel
-  children:
-  - excel.Excel.Interfaces.ShapeFontData.bold
-  - excel.Excel.Interfaces.ShapeFontData.color
-  - excel.Excel.Interfaces.ShapeFontData.italic
-  - excel.Excel.Interfaces.ShapeFontData.name
-  - excel.Excel.Interfaces.ShapeFontData.size
-  - excel.Excel.Interfaces.ShapeFontData.underline
-- uid: excel.Excel.Interfaces.ShapeFontData.bold
-  summary: >-
-    <span data-ttu-id="fce9c-102">表示字体的加粗状态。</span><span class="sxs-lookup"><span data-stu-id="fce9c-102">Represents the bold status of font.</span></span> <span data-ttu-id="fce9c-103">如果 TextRange 包含粗体和非粗体文本片段，则返回 null。</span><span class="sxs-lookup"><span data-stu-id="fce9c-103">Returns null the TextRange includes both bold and non-bold text fragments.</span></span>
+  - uid: excel.Excel.Interfaces.ShapeFontData
+    summary: <span data-ttu-id="9da40-101">描述通过调用 "shapeFont ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="9da40-101">An interface describing the data returned by calling "shapeFont.toJSON()".</span></span>
+    name: Excel.Interfaces.ShapeFontData
+    fullName: Excel.Interfaces.ShapeFontData
+    langs:
+      - typeScript
+    type: interface
+    package: excel
+    children:
+      - excel.Excel.Interfaces.ShapeFontData.bold
+      - excel.Excel.Interfaces.ShapeFontData.color
+      - excel.Excel.Interfaces.ShapeFontData.italic
+      - excel.Excel.Interfaces.ShapeFontData.name
+      - excel.Excel.Interfaces.ShapeFontData.size
+      - excel.Excel.Interfaces.ShapeFontData.underline
+  - uid: excel.Excel.Interfaces.ShapeFontData.bold
+    summary: |-
+      <span data-ttu-id="9da40-102">表示字体的加粗状态。</span><span class="sxs-lookup"><span data-stu-id="9da40-102">Represents the bold status of font.</span></span> <span data-ttu-id="9da40-103">如果 TextRange 包含粗体和非粗体文本片段，则返回 null。</span><span class="sxs-lookup"><span data-stu-id="9da40-103">Returns null the TextRange includes both bold and non-bold text fragments.</span></span>
 
+      <span data-ttu-id="9da40-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9da40-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: bold
+    fullName: bold
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'bold?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.ShapeFontData.color
+    summary: |-
+      <span data-ttu-id="9da40-105">文本颜色的 HTML 颜色代码表示形式 (例如, "\#FF0000" 代表红色)。</span><span class="sxs-lookup"><span data-stu-id="9da40-105">The HTML color code representation of the text color (e.g. "\#FF0000" represents red).</span></span> <span data-ttu-id="9da40-106">如果 TextRange 包含具有不同颜色的文本片段，则返回 null。</span><span class="sxs-lookup"><span data-stu-id="9da40-106">Returns null if the TextRange includes text fragments with different colors.</span></span>
 
-    <span data-ttu-id="fce9c-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fce9c-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  isPreview: true
-  name: bold
-  fullName: bold
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'bold?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.ShapeFontData.color
-  summary: >-
-    <span data-ttu-id="fce9c-105">文本颜色的 HTML 颜色代码表示形式 (例如, "\#FF0000" 代表红色)。</span><span class="sxs-lookup"><span data-stu-id="fce9c-105">The HTML color code representation of the text color (e.g. "\#FF0000" represents red).</span></span> <span data-ttu-id="fce9c-106">如果 TextRange 包含具有不同颜色的文本片段，则返回 null。</span><span class="sxs-lookup"><span data-stu-id="fce9c-106">Returns null if the TextRange includes text fragments with different colors.</span></span>
+      <span data-ttu-id="9da40-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9da40-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: color
+    fullName: color
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'color?: string;'
+      return:
+        type:
+          - string
+  - uid: excel.Excel.Interfaces.ShapeFontData.italic
+    summary: |-
+      <span data-ttu-id="9da40-108">表示字体的斜体状态。</span><span class="sxs-lookup"><span data-stu-id="9da40-108">Represents the italic status of font.</span></span> <span data-ttu-id="9da40-109">如果 TextRange 包含斜体和非斜体文本片段，则返回 null。</span><span class="sxs-lookup"><span data-stu-id="9da40-109">Returns null if the TextRange includes both italic and non-italic text fragments.</span></span>
 
+      <span data-ttu-id="9da40-110">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9da40-110">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: italic
+    fullName: italic
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'italic?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.ShapeFontData.name
+    summary: |-
+      <span data-ttu-id="9da40-111">表示字体名称（例如“Calibri”）。</span><span class="sxs-lookup"><span data-stu-id="9da40-111">Represents font name (e.g. "Calibri").</span></span> <span data-ttu-id="9da40-112">如果文本是复杂脚本或东亚语言，则这是相应的字体名称，否则是拉丁字体名称。</span><span class="sxs-lookup"><span data-stu-id="9da40-112">If the text is Complex Script or East Asian language, this is the corresponding font name; otherwise it is the Latin font name.</span></span>
 
-    <span data-ttu-id="fce9c-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fce9c-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  isPreview: true
-  name: color
-  fullName: color
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'color?: string;'
-    return:
-      type:
-      - string
-- uid: excel.Excel.Interfaces.ShapeFontData.italic
-  summary: >-
-    <span data-ttu-id="fce9c-108">表示字体的斜体状态。</span><span class="sxs-lookup"><span data-stu-id="fce9c-108">Represents the italic status of font.</span></span> <span data-ttu-id="fce9c-109">如果 TextRange 同时包含斜体和非斜体文本片段, 则返回 null。</span><span class="sxs-lookup"><span data-stu-id="fce9c-109">Returns null if the TextRange includes both italic and non-italic text fragments.</span></span>
+      <span data-ttu-id="9da40-113">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9da40-113">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: name
+    fullName: name
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'name?: string;'
+      return:
+        type:
+          - string
+  - uid: excel.Excel.Interfaces.ShapeFontData.size
+    summary: |-
+      <span data-ttu-id="9da40-114">表示以磅为单位的字体大小（例如 11）。</span><span class="sxs-lookup"><span data-stu-id="9da40-114">Represents font size in points (e.g. 11).</span></span> <span data-ttu-id="9da40-115">如果 TextRange 包含具有不同字体大小的文本片段，则返回 null。</span><span class="sxs-lookup"><span data-stu-id="9da40-115">Returns null if the TextRange includes text fragments with different font sizes.</span></span>
 
+      <span data-ttu-id="9da40-116">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9da40-116">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: size
+    fullName: size
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'size?: number;'
+      return:
+        type:
+          - number
+  - uid: excel.Excel.Interfaces.ShapeFontData.underline
+    summary: |-
+      <span data-ttu-id="9da40-117">应用于字体的下划线类型。</span><span class="sxs-lookup"><span data-stu-id="9da40-117">Type of underline applied to the font.</span></span> <span data-ttu-id="9da40-118">如果 TextRange 包含具有不同下划线样式的文本片段，则返回 null。</span><span class="sxs-lookup"><span data-stu-id="9da40-118">Returns null if the TextRange includes text fragments with different underline styles.</span></span> <span data-ttu-id="9da40-119">有关详细信息，请参阅 Excel.ShapeFontUnderlineStyle。</span><span class="sxs-lookup"><span data-stu-id="9da40-119">See Excel.ShapeFontUnderlineStyle for details.</span></span>
 
-    <span data-ttu-id="fce9c-110">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fce9c-110">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  isPreview: true
-  name: italic
-  fullName: italic
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'italic?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.ShapeFontData.name
-  summary: >-
-    <span data-ttu-id="fce9c-111">表示字体名称（例如“Calibri”）。</span><span class="sxs-lookup"><span data-stu-id="fce9c-111">Represents font name (e.g. "Calibri").</span></span> <span data-ttu-id="fce9c-112">如果文本为复杂文种或东亚语言, 则这是相应的字体名称;否则, 它是西文字体名称。</span><span class="sxs-lookup"><span data-stu-id="fce9c-112">If the text is Complex Script or East Asian language, this is the corresponding font name; otherwise it is the Latin font name.</span></span>
-
-
-    <span data-ttu-id="fce9c-113">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fce9c-113">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  isPreview: true
-  name: name
-  fullName: name
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'name?: string;'
-    return:
-      type:
-      - string
-- uid: excel.Excel.Interfaces.ShapeFontData.size
-  summary: >-
-    <span data-ttu-id="fce9c-114">表示以磅为单位的字体大小（例如 11）。</span><span class="sxs-lookup"><span data-stu-id="fce9c-114">Represents font size in points (e.g. 11).</span></span> <span data-ttu-id="fce9c-115">如果 TextRange 包含不同字体大小的文本片段, 则返回 null。</span><span class="sxs-lookup"><span data-stu-id="fce9c-115">Returns null if the TextRange includes text fragments with different font sizes.</span></span>
-
-
-    <span data-ttu-id="fce9c-116">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fce9c-116">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  isPreview: true
-  name: size
-  fullName: size
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'size?: number;'
-    return:
-      type:
-      - number
-- uid: excel.Excel.Interfaces.ShapeFontData.underline
-  summary: >-
-    <span data-ttu-id="fce9c-117">应用于字体的下划线类型。</span><span class="sxs-lookup"><span data-stu-id="fce9c-117">Type of underline applied to the font.</span></span> <span data-ttu-id="fce9c-118">如果 TextRange 包含具有不同下划线样式的文本片段, 则返回 null。</span><span class="sxs-lookup"><span data-stu-id="fce9c-118">Returns null if the TextRange includes text fragments with different underline styles.</span></span> <span data-ttu-id="fce9c-119">有关详细信息，请参阅 Excel.ShapeFontUnderlineStyle。</span><span class="sxs-lookup"><span data-stu-id="fce9c-119">See Excel.ShapeFontUnderlineStyle for details.</span></span>
-
-
-    <span data-ttu-id="fce9c-120">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fce9c-120">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  isPreview: true
-  name: underline
-  fullName: underline
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'underline?: Excel.ShapeFontUnderlineStyle | "None" | "Single" | "Double" | "Heavy" | "Dotted" | "DottedHeavy" | "Dash" | "DashHeavy" | "DashLong" | "DashLongHeavy" | "DotDash" | "DotDashHeavy" | "DotDotDash" | "DotDotDashHeavy" | "Wavy" | "WavyHeavy" | "WavyDouble";'
-    return:
-      type:
-      - Excel.ShapeFontUnderlineStyle | "None" | "Single" | "Double" | "Heavy" | "Dotted" | "DottedHeavy" | "Dash" | "DashHeavy" | "DashLong" | "DashLongHeavy" | "DotDash" | "DotDashHeavy" | "DotDotDash" | "DotDotDashHeavy" | "Wavy" | "WavyHeavy" | "WavyDouble"
+      <span data-ttu-id="9da40-120">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9da40-120">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: underline
+    fullName: underline
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'underline?: Excel.ShapeFontUnderlineStyle | "None" | "Single" | "Double" | "Heavy" | "Dotted" | "DottedHeavy" | "Dash" | "DashHeavy" | "DashLong" | "DashLongHeavy" | "DotDash" | "DotDashHeavy" | "DotDotDash" | "DotDotDashHeavy" | "Wavy" | "WavyHeavy" | "WavyDouble";'
+      return:
+        type:
+          - Excel.ShapeFontUnderlineStyle | "None" | "Single" | "Double" | "Heavy" | "Dotted" | "DottedHeavy" | "Dash" | "DashHeavy" | "DashLong" | "DashLongHeavy" | "DotDash" | "DotDashHeavy" | "DotDotDash" | "DotDotDashHeavy" | "Wavy" | "WavyHeavy" | "WavyDouble"
