--- a/docs/docs-ref-autogen/excel/excel.interfaces.shapegroupdata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.shapegroupdata.yml
@@ -1,53 +1,45 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 400593452c9477a785b691df4aa318f77b46038f
-ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 03/14/2019
-ms.locfileid: "30575583"
 items:
-- uid: excel.Excel.Interfaces.ShapeGroupData
-  summary: <span data-ttu-id="9839d-101">描述通过调用 "shapeGroup ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="9839d-101">An interface describing the data returned by calling "shapeGroup.toJSON()".</span></span>
-  name: Excel.Interfaces.ShapeGroupData
-  fullName: Excel.Interfaces.ShapeGroupData
-  langs:
-  - typeScript
-  type: interface
-  package: excel
-  children:
-  - excel.Excel.Interfaces.ShapeGroupData.id
-  - excel.Excel.Interfaces.ShapeGroupData.shapes
-- uid: excel.Excel.Interfaces.ShapeGroupData.id
-  summary: >-
-    <span data-ttu-id="9839d-102">表示形状标识符。</span><span class="sxs-lookup"><span data-stu-id="9839d-102">Represents the shape identifier.</span></span> <span data-ttu-id="9839d-103">只读。</span><span class="sxs-lookup"><span data-stu-id="9839d-103">Read-only.</span></span>
+  - uid: excel.Excel.Interfaces.ShapeGroupData
+    summary: <span data-ttu-id="2fb44-101">描述通过调用 "shapeGroup ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="2fb44-101">An interface describing the data returned by calling "shapeGroup.toJSON()".</span></span>
+    name: Excel.Interfaces.ShapeGroupData
+    fullName: Excel.Interfaces.ShapeGroupData
+    langs:
+      - typeScript
+    type: interface
+    package: excel
+    children:
+      - excel.Excel.Interfaces.ShapeGroupData.id
+      - excel.Excel.Interfaces.ShapeGroupData.shapes
+  - uid: excel.Excel.Interfaces.ShapeGroupData.id
+    summary: |-
+      <span data-ttu-id="2fb44-102">表示形状标识符。</span><span class="sxs-lookup"><span data-stu-id="2fb44-102">Represents the shape identifier.</span></span> <span data-ttu-id="2fb44-103">只读。</span><span class="sxs-lookup"><span data-stu-id="2fb44-103">Read-only.</span></span>
 
+      <span data-ttu-id="2fb44-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2fb44-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: id
+    fullName: id
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'id?: string;'
+      return:
+        type:
+          - string
+  - uid: excel.Excel.Interfaces.ShapeGroupData.shapes
+    summary: |-
+      <span data-ttu-id="2fb44-105">返回 Shape 对象的集合。</span><span class="sxs-lookup"><span data-stu-id="2fb44-105">Returns the collection of Shape objects.</span></span> <span data-ttu-id="2fb44-106">只读。</span><span class="sxs-lookup"><span data-stu-id="2fb44-106">Read-only.</span></span>
 
-    <span data-ttu-id="9839d-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9839d-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  isPreview: true
-  name: id
-  fullName: id
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'id?: string;'
-    return:
-      type:
-      - string
-- uid: excel.Excel.Interfaces.ShapeGroupData.shapes
-  summary: >-
-    <span data-ttu-id="9839d-105">返回 Shape 对象的集合。</span><span class="sxs-lookup"><span data-stu-id="9839d-105">Returns the collection of Shape objects.</span></span> <span data-ttu-id="9839d-106">只读。</span><span class="sxs-lookup"><span data-stu-id="9839d-106">Read-only.</span></span>
-
-
-    <span data-ttu-id="9839d-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9839d-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  isPreview: true
-  name: shapes
-  fullName: shapes
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'shapes?: Excel.Interfaces.ShapeData[];'
-    return:
-      type:
-      - Excel.Interfaces.ShapeData[]
+      <span data-ttu-id="2fb44-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2fb44-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: shapes
+    fullName: shapes
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'shapes?: Excel.Interfaces.ShapeData[];'
+      return:
+        type:
+          - 'Excel.Interfaces.ShapeData[]'
