--- a/docs/docs-ref-autogen/excel/excel.interfaces.shapelineformatdata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.shapelineformatdata.yml
@@ -1,125 +1,113 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 82fa1b9d9ab131c88f98beb68300de28ac389385
-ms.sourcegitcommit: 5e31602ed9cbddfcff2768b7ed69dd4821440b90
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 03/14/2019
-ms.locfileid: "30575877"
 items:
-- uid: excel.Excel.Interfaces.ShapeLineFormatData
-  summary: <span data-ttu-id="0638c-101">描述通过调用 "shapeLineFormat ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="0638c-101">An interface describing the data returned by calling "shapeLineFormat.toJSON()".</span></span>
-  name: Excel.Interfaces.ShapeLineFormatData
-  fullName: Excel.Interfaces.ShapeLineFormatData
-  langs:
-  - typeScript
-  type: interface
-  package: excel
-  children:
-  - excel.Excel.Interfaces.ShapeLineFormatData.color
-  - excel.Excel.Interfaces.ShapeLineFormatData.dashStyle
-  - excel.Excel.Interfaces.ShapeLineFormatData.style
-  - excel.Excel.Interfaces.ShapeLineFormatData.transparency
-  - excel.Excel.Interfaces.ShapeLineFormatData.visible
-  - excel.Excel.Interfaces.ShapeLineFormatData.weight
-- uid: excel.Excel.Interfaces.ShapeLineFormatData.color
-  summary: >-
-    <span data-ttu-id="0638c-102">代表 html 颜色格式的线条颜色, 格式\#RRGGBB (例如 "FFA500") 或命名的 HTML 颜色 (例如 "橙色")。</span><span class="sxs-lookup"><span data-stu-id="0638c-102">Represents the line color in HTML color format, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span>
+  - uid: excel.Excel.Interfaces.ShapeLineFormatData
+    summary: <span data-ttu-id="9d5d1-101">描述通过调用 "shapeLineFormat ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="9d5d1-101">An interface describing the data returned by calling "shapeLineFormat.toJSON()".</span></span>
+    name: Excel.Interfaces.ShapeLineFormatData
+    fullName: Excel.Interfaces.ShapeLineFormatData
+    langs:
+      - typeScript
+    type: interface
+    package: excel
+    children:
+      - excel.Excel.Interfaces.ShapeLineFormatData.color
+      - excel.Excel.Interfaces.ShapeLineFormatData.dashStyle
+      - excel.Excel.Interfaces.ShapeLineFormatData.style
+      - excel.Excel.Interfaces.ShapeLineFormatData.transparency
+      - excel.Excel.Interfaces.ShapeLineFormatData.visible
+      - excel.Excel.Interfaces.ShapeLineFormatData.weight
+  - uid: excel.Excel.Interfaces.ShapeLineFormatData.color
+    summary: |-
+      <span data-ttu-id="9d5d1-102">代表 html 颜色格式的线条颜色, 格式\#RRGGBB (例如 "FFA500") 或命名的 HTML 颜色 (例如 "橙色")。</span><span class="sxs-lookup"><span data-stu-id="9d5d1-102">Represents the line color in HTML color format, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span>
 
+      <span data-ttu-id="9d5d1-103">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9d5d1-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: color
+    fullName: color
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'color?: string;'
+      return:
+        type:
+          - string
+  - uid: excel.Excel.Interfaces.ShapeLineFormatData.dashStyle
+    summary: |-
+      <span data-ttu-id="9d5d1-104">表示形状的线条样式。</span><span class="sxs-lookup"><span data-stu-id="9d5d1-104">Represents the line style of the shape.</span></span> <span data-ttu-id="9d5d1-105">当线条不可见或短划线样式不一致时，返回 null。</span><span class="sxs-lookup"><span data-stu-id="9d5d1-105">Returns null when the line is not visible or there are inconsistent dash styles.</span></span> <span data-ttu-id="9d5d1-106">有关详细信息，请参阅 Excel.ShapeLineStyle。</span><span class="sxs-lookup"><span data-stu-id="9d5d1-106">See Excel.ShapeLineStyle for details.</span></span>
 
-    <span data-ttu-id="0638c-103">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0638c-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  isPreview: true
-  name: color
-  fullName: color
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'color?: string;'
-    return:
-      type:
-      - string
-- uid: excel.Excel.Interfaces.ShapeLineFormatData.dashStyle
-  summary: >-
-    <span data-ttu-id="0638c-104">表示形状的线条样式。</span><span class="sxs-lookup"><span data-stu-id="0638c-104">Represents the line style of the shape.</span></span> <span data-ttu-id="0638c-105">如果行不可见或不一致的虚线样式, 则返回 null。</span><span class="sxs-lookup"><span data-stu-id="0638c-105">Returns null when the line is not visible or there are inconsistent dash styles.</span></span> <span data-ttu-id="0638c-106">有关详细信息，请参阅 Excel.ShapeLineStyle。</span><span class="sxs-lookup"><span data-stu-id="0638c-106">See Excel.ShapeLineStyle for details.</span></span>
+      <span data-ttu-id="9d5d1-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9d5d1-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: dashStyle
+    fullName: dashStyle
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'dashStyle?: Excel.ShapeLineDashStyle | "Dash" | "DashDot" | "DashDotDot" | "LongDash" | "LongDashDot" | "RoundDot" | "Solid" | "SquareDot" | "LongDashDotDot" | "SystemDash" | "SystemDot" | "SystemDashDot";'
+      return:
+        type:
+          - Excel.ShapeLineDashStyle | "Dash" | "DashDot" | "DashDotDot" | "LongDash" | "LongDashDot" | "RoundDot" | "Solid" | "SquareDot" | "LongDashDotDot" | "SystemDash" | "SystemDot" | "SystemDashDot"
+  - uid: excel.Excel.Interfaces.ShapeLineFormatData.style
+    summary: |-
+      <span data-ttu-id="9d5d1-108">表示形状的线条样式。</span><span class="sxs-lookup"><span data-stu-id="9d5d1-108">Represents the line style of the shape.</span></span> <span data-ttu-id="9d5d1-109">当线条不可见或样式不一致时，返回 null。</span><span class="sxs-lookup"><span data-stu-id="9d5d1-109">Returns null when the line is not visible or there are inconsistent styles.</span></span> <span data-ttu-id="9d5d1-110">有关详细信息，请参阅 Excel.ShapeLineStyle。</span><span class="sxs-lookup"><span data-stu-id="9d5d1-110">See Excel.ShapeLineStyle for details.</span></span>
 
+      <span data-ttu-id="9d5d1-111">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9d5d1-111">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: style
+    fullName: style
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'style?: Excel.ShapeLineStyle | "Single" | "ThickBetweenThin" | "ThickThin" | "ThinThick" | "ThinThin";'
+      return:
+        type:
+          - Excel.ShapeLineStyle | "Single" | "ThickBetweenThin" | "ThickThin" | "ThinThick" | "ThinThin"
+  - uid: excel.Excel.Interfaces.ShapeLineFormatData.transparency
+    summary: |-
+      <span data-ttu-id="9d5d1-112">将指定线条的透明度表示为从 0.0（不透明）到 1.0（清晰）的值。</span><span class="sxs-lookup"><span data-stu-id="9d5d1-112">Represents the degree of transparency of the specified line as a value from 0.0 (opaque) through 1.0 (clear).</span></span> <span data-ttu-id="9d5d1-113">当形状的透明度不一致时，返回 null。</span><span class="sxs-lookup"><span data-stu-id="9d5d1-113">Returns null when the shape has inconsistent transparencies.</span></span>
 
-    <span data-ttu-id="0638c-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0638c-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  isPreview: true
-  name: dashStyle
-  fullName: dashStyle
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'dashStyle?: Excel.ShapeLineDashStyle | "Dash" | "DashDot" | "DashDotDot" | "LongDash" | "LongDashDot" | "RoundDot" | "Solid" | "SquareDot" | "LongDashDotDot" | "SystemDash" | "SystemDot" | "SystemDashDot";'
-    return:
-      type:
-      - Excel.ShapeLineDashStyle | "Dash" | "DashDot" | "DashDotDot" | "LongDash" | "LongDashDot" | "RoundDot" | "Solid" | "SquareDot" | "LongDashDotDot" | "SystemDash" | "SystemDot" | "SystemDashDot"
-- uid: excel.Excel.Interfaces.ShapeLineFormatData.style
-  summary: >-
-    <span data-ttu-id="0638c-108">表示形状的线条样式。</span><span class="sxs-lookup"><span data-stu-id="0638c-108">Represents the line style of the shape.</span></span> <span data-ttu-id="0638c-109">如果行不可见或样式不一致, 则返回 null。</span><span class="sxs-lookup"><span data-stu-id="0638c-109">Returns null when the line is not visible or there are inconsistent styles.</span></span> <span data-ttu-id="0638c-110">有关详细信息，请参阅 Excel.ShapeLineStyle。</span><span class="sxs-lookup"><span data-stu-id="0638c-110">See Excel.ShapeLineStyle for details.</span></span>
+      <span data-ttu-id="9d5d1-114">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9d5d1-114">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: transparency
+    fullName: transparency
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'transparency?: number;'
+      return:
+        type:
+          - number
+  - uid: excel.Excel.Interfaces.ShapeLineFormatData.visible
+    summary: |-
+      <span data-ttu-id="9d5d1-115">表示形状元素的线条格式是否可见。</span><span class="sxs-lookup"><span data-stu-id="9d5d1-115">Represents whether or not the line formatting of a shape element is visible.</span></span> <span data-ttu-id="9d5d1-116">当形状的可见性不一致时，返回 null。</span><span class="sxs-lookup"><span data-stu-id="9d5d1-116">Returns null when the shape has inconsistent visibilities.</span></span>
 
+      <span data-ttu-id="9d5d1-117">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9d5d1-117">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: visible
+    fullName: visible
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'visible?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.ShapeLineFormatData.weight
+    summary: |-
+      <span data-ttu-id="9d5d1-118">表示线条的粗细（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="9d5d1-118">Represents the weight of the line, in points.</span></span> <span data-ttu-id="9d5d1-119">当线条不可见或线条粗细不一致时，返回 null。</span><span class="sxs-lookup"><span data-stu-id="9d5d1-119">Returns null when the line is not visible or there are inconsistent line weights.</span></span>
 
-    <span data-ttu-id="0638c-111">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0638c-111">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  isPreview: true
-  name: style
-  fullName: style
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'style?: Excel.ShapeLineStyle | "Single" | "ThickBetweenThin" | "ThickThin" | "ThinThick" | "ThinThin";'
-    return:
-      type:
-      - Excel.ShapeLineStyle | "Single" | "ThickBetweenThin" | "ThickThin" | "ThinThick" | "ThinThin"
-- uid: excel.Excel.Interfaces.ShapeLineFormatData.transparency
-  summary: >-
-    <span data-ttu-id="0638c-112">将指定线条的透明度表示为从 0.0（不透明）到 1.0（清晰）的值。</span><span class="sxs-lookup"><span data-stu-id="0638c-112">Represents the degree of transparency of the specified line as a value from 0.0 (opaque) through 1.0 (clear).</span></span> <span data-ttu-id="0638c-113">如果形状具有不一致的透明胶片, 则返回 null。</span><span class="sxs-lookup"><span data-stu-id="0638c-113">Returns null when the shape has inconsistent transparencies.</span></span>
-
-
-    <span data-ttu-id="0638c-114">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0638c-114">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  isPreview: true
-  name: transparency
-  fullName: transparency
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'transparency?: number;'
-    return:
-      type:
-      - number
-- uid: excel.Excel.Interfaces.ShapeLineFormatData.visible
-  summary: >-
-    <span data-ttu-id="0638c-115">表示 shape 元素的行格式是否可见。</span><span class="sxs-lookup"><span data-stu-id="0638c-115">Represents whether or not the line formatting of a shape element is visible.</span></span> <span data-ttu-id="0638c-116">如果形状具有不一致的 visibilities, 则返回 null。</span><span class="sxs-lookup"><span data-stu-id="0638c-116">Returns null when the shape has inconsistent visibilities.</span></span>
-
-
-    <span data-ttu-id="0638c-117">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0638c-117">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  isPreview: true
-  name: visible
-  fullName: visible
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'visible?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.ShapeLineFormatData.weight
-  summary: >-
-    <span data-ttu-id="0638c-118">表示线条的粗细, 以磅为单位。</span><span class="sxs-lookup"><span data-stu-id="0638c-118">Represents the weight of the line, in points.</span></span> <span data-ttu-id="0638c-119">如果行不可见或线条粗细不一致, 则返回 null。</span><span class="sxs-lookup"><span data-stu-id="0638c-119">Returns null when the line is not visible or there are inconsistent line weights.</span></span>
-
-
-    <span data-ttu-id="0638c-120">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0638c-120">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  isPreview: true
-  name: weight
-  fullName: weight
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'weight?: number;'
-    return:
-      type:
-      - number
+      <span data-ttu-id="9d5d1-120">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9d5d1-120">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: weight
+    fullName: weight
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'weight?: number;'
+      return:
+        type:
+          - number
