--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.chartareaformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.chartareaformatupdatedata.yml
@@ -1,51 +1,43 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: e41c17994994ed52e2ff35c8b6e3a7b96b83caa6
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30111353"
 items:
-- uid: excel_release.Excel.Interfaces.ChartAreaFormatUpdateData
-  summary: <span data-ttu-id="f0cab-101">用于更新 ChartAreaFormat 对象上的数据的接口, 用于在 "ChartAreaFormat" 中使用 (<!-- -->{...}<!-- -->)".</span><span class="sxs-lookup"><span data-stu-id="f0cab-101">An interface for updating data on the ChartAreaFormat object, for use in "chartAreaFormat.set(<!-- -->{ ... }<!-- -->)".</span></span>
-  name: Excel.Interfaces.ChartAreaFormatUpdateData
-  fullName: Excel.Interfaces.ChartAreaFormatUpdateData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.ChartAreaFormatUpdateData.border
-  - excel_release.Excel.Interfaces.ChartAreaFormatUpdateData.font
-- uid: excel_release.Excel.Interfaces.ChartAreaFormatUpdateData.border
-  summary: >-
-    <span data-ttu-id="f0cab-102">代表图表区域的边框格式, 包括颜色、linestyle 和粗细。</span><span class="sxs-lookup"><span data-stu-id="f0cab-102">Represents the border format of chart area, which includes color, linestyle, and weight.</span></span>
+  - uid: excel_release.Excel.Interfaces.ChartAreaFormatUpdateData
+    summary: '<span data-ttu-id="069c8-101">一个用于更新 ChartAreaFormat 对象上的数据的接口, 可用于 "ChartAreaFormat (</span><span class="sxs-lookup"><span data-stu-id="069c8-101">An interface for updating data on the ChartAreaFormat object, for use in "chartAreaFormat.set(</span></span><!-- --><span data-ttu-id="069c8-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="069c8-102"></span></span><!-- --><span data-ttu-id="069c8-103">)".</span><span class="sxs-lookup"><span data-stu-id="069c8-103"></span></span>'
+    name: Excel.Interfaces.ChartAreaFormatUpdateData
+    fullName: Excel.Interfaces.ChartAreaFormatUpdateData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.ChartAreaFormatUpdateData.border
+      - excel_release.Excel.Interfaces.ChartAreaFormatUpdateData.font
+  - uid: excel_release.Excel.Interfaces.ChartAreaFormatUpdateData.border
+    summary: |-
+      <span data-ttu-id="069c8-104">代表图表区域的边框格式, 包括颜色、linestyle 和粗细。</span><span class="sxs-lookup"><span data-stu-id="069c8-104">Represents the border format of chart area, which includes color, linestyle, and weight.</span></span>
 
+      <span data-ttu-id="069c8-105">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="069c8-105">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: border
+    fullName: border
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'border?: Excel.Interfaces.ChartBorderUpdateData;'
+      return:
+        type:
+          - excel.Excel.Interfaces.ChartBorderUpdateData
+  - uid: excel_release.Excel.Interfaces.ChartAreaFormatUpdateData.font
+    summary: |-
+      <span data-ttu-id="069c8-106">表示当前对象的字体属性（字体名称、字体大小、颜色等）。</span><span class="sxs-lookup"><span data-stu-id="069c8-106">Represents the font attributes (font name, font size, color, etc.) for the current object.</span></span>
 
-    <span data-ttu-id="f0cab-103">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f0cab-103">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: border
-  fullName: border
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'border?: Excel.Interfaces.ChartBorderUpdateData;'
-    return:
-      type:
-      - excel.Excel.Interfaces.ChartBorderUpdateData
-- uid: excel_release.Excel.Interfaces.ChartAreaFormatUpdateData.font
-  summary: >-
-    <span data-ttu-id="f0cab-104">表示当前对象的字体属性 (字体名称、字体大小、颜色等)。</span><span class="sxs-lookup"><span data-stu-id="f0cab-104">Represents the font attributes (font name, font size, color, etc.) for the current object.</span></span>
-
-
-    <span data-ttu-id="f0cab-105">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f0cab-105">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: font
-  fullName: font
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'font?: Excel.Interfaces.ChartFontUpdateData;'
-    return:
-      type:
-      - excel.Excel.Interfaces.ChartFontUpdateData
+      <span data-ttu-id="069c8-107">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="069c8-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: font
+    fullName: font
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'font?: Excel.Interfaces.ChartFontUpdateData;'
+      return:
+        type:
+          - excel.Excel.Interfaces.ChartFontUpdateData
