--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.chartpointupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.chartpointupdatedata.yml
@@ -1,136 +1,123 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 5d5ca066e31a90232ab71f83bbe7470b617ce800
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30107083"
 items:
-- uid: excel_release.Excel.Interfaces.ChartPointUpdateData
-  summary: <span data-ttu-id="3d2ea-101">用于更新 ChartPoint 对象上的数据的接口, 用于在 "ChartPoint" 中使用 (<!-- -->{...}<!-- -->)".</span><span class="sxs-lookup"><span data-stu-id="3d2ea-101">An interface for updating data on the ChartPoint object, for use in "chartPoint.set(<!-- -->{ ... }<!-- -->)".</span></span>
-  name: Excel.Interfaces.ChartPointUpdateData
-  fullName: Excel.Interfaces.ChartPointUpdateData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.ChartPointUpdateData.dataLabel
-  - excel_release.Excel.Interfaces.ChartPointUpdateData.format
-  - excel_release.Excel.Interfaces.ChartPointUpdateData.hasDataLabel
-  - excel_release.Excel.Interfaces.ChartPointUpdateData.markerBackgroundColor
-  - excel_release.Excel.Interfaces.ChartPointUpdateData.markerForegroundColor
-  - excel_release.Excel.Interfaces.ChartPointUpdateData.markerSize
-  - excel_release.Excel.Interfaces.ChartPointUpdateData.markerStyle
-- uid: excel_release.Excel.Interfaces.ChartPointUpdateData.dataLabel
-  summary: >-
-    <span data-ttu-id="3d2ea-102">返回图表点的数据标签。</span><span class="sxs-lookup"><span data-stu-id="3d2ea-102">Returns the data label of a chart point.</span></span>
+  - uid: excel_release.Excel.Interfaces.ChartPointUpdateData
+    summary: '<span data-ttu-id="eb2fd-101">一个用于更新 ChartPoint 对象上的数据的接口, 可用于 "ChartPoint (</span><span class="sxs-lookup"><span data-stu-id="eb2fd-101">An interface for updating data on the ChartPoint object, for use in "chartPoint.set(</span></span><!-- --><span data-ttu-id="eb2fd-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="eb2fd-102"></span></span><!-- --><span data-ttu-id="eb2fd-103">)".</span><span class="sxs-lookup"><span data-stu-id="eb2fd-103"></span></span>'
+    name: Excel.Interfaces.ChartPointUpdateData
+    fullName: Excel.Interfaces.ChartPointUpdateData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.ChartPointUpdateData.dataLabel
+      - excel_release.Excel.Interfaces.ChartPointUpdateData.format
+      - excel_release.Excel.Interfaces.ChartPointUpdateData.hasDataLabel
+      - excel_release.Excel.Interfaces.ChartPointUpdateData.markerBackgroundColor
+      - excel_release.Excel.Interfaces.ChartPointUpdateData.markerForegroundColor
+      - excel_release.Excel.Interfaces.ChartPointUpdateData.markerSize
+      - excel_release.Excel.Interfaces.ChartPointUpdateData.markerStyle
+  - uid: excel_release.Excel.Interfaces.ChartPointUpdateData.dataLabel
+    summary: |-
+      <span data-ttu-id="eb2fd-104">返回图表点的数据标签。</span><span class="sxs-lookup"><span data-stu-id="eb2fd-104">Returns the data label of a chart point.</span></span>
 
+      <span data-ttu-id="eb2fd-105">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eb2fd-105">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: dataLabel
+    fullName: dataLabel
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'dataLabel?: Excel.Interfaces.ChartDataLabelUpdateData;'
+      return:
+        type:
+          - excel.Excel.Interfaces.ChartDataLabelUpdateData
+  - uid: excel_release.Excel.Interfaces.ChartPointUpdateData.format
+    summary: |-
+      <span data-ttu-id="eb2fd-106">封装图表点的格式属性。</span><span class="sxs-lookup"><span data-stu-id="eb2fd-106">Encapsulates the format properties chart point.</span></span>
 
-    <span data-ttu-id="3d2ea-103">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3d2ea-103">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: dataLabel
-  fullName: dataLabel
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'dataLabel?: Excel.Interfaces.ChartDataLabelUpdateData;'
-    return:
-      type:
-      - excel.Excel.Interfaces.ChartDataLabelUpdateData
-- uid: excel_release.Excel.Interfaces.ChartPointUpdateData.format
-  summary: >-
-    <span data-ttu-id="3d2ea-104">封装格式属性图表点。</span><span class="sxs-lookup"><span data-stu-id="3d2ea-104">Encapsulates the format properties chart point.</span></span>
+      <span data-ttu-id="eb2fd-107">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eb2fd-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: format
+    fullName: format
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'format?: Excel.Interfaces.ChartPointFormatUpdateData;'
+      return:
+        type:
+          - excel.Excel.Interfaces.ChartPointFormatUpdateData
+  - uid: excel_release.Excel.Interfaces.ChartPointUpdateData.hasDataLabel
+    summary: |-
+      <span data-ttu-id="eb2fd-108">表示数据点是否具有数据标签。</span><span class="sxs-lookup"><span data-stu-id="eb2fd-108">Represents whether a data point has a data label.</span></span> <span data-ttu-id="eb2fd-109">不适用于曲面图。</span><span class="sxs-lookup"><span data-stu-id="eb2fd-109">Not applicable for surface charts.</span></span>
 
+      <span data-ttu-id="eb2fd-110">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eb2fd-110">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: hasDataLabel
+    fullName: hasDataLabel
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'hasDataLabel?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.ChartPointUpdateData.markerBackgroundColor
+    summary: |-
+      <span data-ttu-id="eb2fd-111">表示数据点的标记背景色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="eb2fd-111">HTML color code representation of the marker background color of data point.</span></span> <span data-ttu-id="eb2fd-112">例如，</span><span class="sxs-lookup"><span data-stu-id="eb2fd-112">E.g.</span></span> <span data-ttu-id="eb2fd-113">\#FF0000 表示红色。</span><span class="sxs-lookup"><span data-stu-id="eb2fd-113">\#FF0000 represents Red.</span></span>
 
-    <span data-ttu-id="3d2ea-105">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3d2ea-105">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: format
-  fullName: format
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'format?: Excel.Interfaces.ChartPointFormatUpdateData;'
-    return:
-      type:
-      - excel.Excel.Interfaces.ChartPointFormatUpdateData
-- uid: excel_release.Excel.Interfaces.ChartPointUpdateData.hasDataLabel
-  summary: >-
-    <span data-ttu-id="3d2ea-106">表示数据点是否具有数据标签。</span><span class="sxs-lookup"><span data-stu-id="3d2ea-106">Represents whether a data point has a data label.</span></span> <span data-ttu-id="3d2ea-107">不适用于曲面图。</span><span class="sxs-lookup"><span data-stu-id="3d2ea-107">Not applicable for surface charts.</span></span>
+      <span data-ttu-id="eb2fd-114">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eb2fd-114">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: markerBackgroundColor
+    fullName: markerBackgroundColor
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'markerBackgroundColor?: string;'
+      return:
+        type:
+          - string
+  - uid: excel_release.Excel.Interfaces.ChartPointUpdateData.markerForegroundColor
+    summary: |-
+      <span data-ttu-id="eb2fd-115">表示数据点的标记前景色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="eb2fd-115">HTML color code representation of the marker foreground color of data point.</span></span> <span data-ttu-id="eb2fd-116">例如，</span><span class="sxs-lookup"><span data-stu-id="eb2fd-116">E.g.</span></span> <span data-ttu-id="eb2fd-117">\#FF0000 表示红色。</span><span class="sxs-lookup"><span data-stu-id="eb2fd-117">\#FF0000 represents Red.</span></span>
 
+      <span data-ttu-id="eb2fd-118">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eb2fd-118">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: markerForegroundColor
+    fullName: markerForegroundColor
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'markerForegroundColor?: string;'
+      return:
+        type:
+          - string
+  - uid: excel_release.Excel.Interfaces.ChartPointUpdateData.markerSize
+    summary: |-
+      <span data-ttu-id="eb2fd-119">表示数据点的标记大小。</span><span class="sxs-lookup"><span data-stu-id="eb2fd-119">Represents marker size of data point.</span></span>
 
-    <span data-ttu-id="3d2ea-108">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3d2ea-108">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: hasDataLabel
-  fullName: hasDataLabel
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'hasDataLabel?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.ChartPointUpdateData.markerBackgroundColor
-  summary: >-
-    <span data-ttu-id="3d2ea-109">表示数据点的标记背景色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="3d2ea-109">HTML color code representation of the marker background color of data point.</span></span> <span data-ttu-id="3d2ea-110">例如，</span><span class="sxs-lookup"><span data-stu-id="3d2ea-110">E.g.</span></span> <span data-ttu-id="3d2ea-111">\#FF0000 表示红色。</span><span class="sxs-lookup"><span data-stu-id="3d2ea-111">\#FF0000 represents Red.</span></span>
+      <span data-ttu-id="eb2fd-120">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eb2fd-120">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: markerSize
+    fullName: markerSize
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'markerSize?: number;'
+      return:
+        type:
+          - number
+  - uid: excel_release.Excel.Interfaces.ChartPointUpdateData.markerStyle
+    summary: |-
+      <span data-ttu-id="eb2fd-121">表示图表数据点的标记样式。</span><span class="sxs-lookup"><span data-stu-id="eb2fd-121">Represents marker style of a chart data point.</span></span> <span data-ttu-id="eb2fd-122">有关详细信息, 请参阅 ChartMarkerStyle。</span><span class="sxs-lookup"><span data-stu-id="eb2fd-122">See Excel.ChartMarkerStyle for details.</span></span>
 
-
-    <span data-ttu-id="3d2ea-112">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3d2ea-112">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: markerBackgroundColor
-  fullName: markerBackgroundColor
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'markerBackgroundColor?: string;'
-    return:
-      type:
-      - string
-- uid: excel_release.Excel.Interfaces.ChartPointUpdateData.markerForegroundColor
-  summary: >-
-    <span data-ttu-id="3d2ea-113">表示数据点的标记前景色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="3d2ea-113">HTML color code representation of the marker foreground color of data point.</span></span> <span data-ttu-id="3d2ea-114">例如，</span><span class="sxs-lookup"><span data-stu-id="3d2ea-114">E.g.</span></span> <span data-ttu-id="3d2ea-115">\#FF0000 表示红色。</span><span class="sxs-lookup"><span data-stu-id="3d2ea-115">\#FF0000 represents Red.</span></span>
-
-
-    <span data-ttu-id="3d2ea-116">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3d2ea-116">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: markerForegroundColor
-  fullName: markerForegroundColor
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'markerForegroundColor?: string;'
-    return:
-      type:
-      - string
-- uid: excel_release.Excel.Interfaces.ChartPointUpdateData.markerSize
-  summary: >-
-    <span data-ttu-id="3d2ea-117">表示数据点的标记大小。</span><span class="sxs-lookup"><span data-stu-id="3d2ea-117">Represents marker size of data point.</span></span>
-
-
-    <span data-ttu-id="3d2ea-118">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3d2ea-118">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: markerSize
-  fullName: markerSize
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'markerSize?: number;'
-    return:
-      type:
-      - number
-- uid: excel_release.Excel.Interfaces.ChartPointUpdateData.markerStyle
-  summary: >-
-    <span data-ttu-id="3d2ea-119">表示图表数据点的标记样式。</span><span class="sxs-lookup"><span data-stu-id="3d2ea-119">Represents marker style of a chart data point.</span></span> <span data-ttu-id="3d2ea-120">有关详细信息, 请参阅 ChartMarkerStyle。</span><span class="sxs-lookup"><span data-stu-id="3d2ea-120">See Excel.ChartMarkerStyle for details.</span></span>
-
-
-    <span data-ttu-id="3d2ea-121">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3d2ea-121">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: markerStyle
-  fullName: markerStyle
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'markerStyle?: Excel.ChartMarkerStyle | "Invalid" | "Automatic" | "None" | "Square" | "Diamond" | "Triangle" | "X" | "Star" | "Dot" | "Dash" | "Circle" | "Plus" | "Picture";'
-    return:
-      type:
-      - Excel.ChartMarkerStyle | "Invalid" | "Automatic" | "None" | "Square" | "Diamond" | "Triangle" | "X" | "Star" | "Dot" | "Dash" | "Circle" | "Plus" | "Picture"
+      <span data-ttu-id="eb2fd-123">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eb2fd-123">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: markerStyle
+    fullName: markerStyle
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'markerStyle?: Excel.ChartMarkerStyle | "Invalid" | "Automatic" | "None" | "Square" | "Diamond" | "Triangle" | "X" | "Star" | "Dot" | "Dash" | "Circle" | "Plus" | "Picture";'
+      return:
+        type:
+          - Excel.ChartMarkerStyle | "Invalid" | "Automatic" | "None" | "Square" | "Diamond" | "Triangle" | "X" | "Star" | "Dot" | "Dash" | "Circle" | "Plus" | "Picture"
