--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.charttrendlinelabelformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.charttrendlinelabelformatupdatedata.yml
@@ -1,51 +1,43 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 0345aa13d732554d3aaf19989c926265e4fdd4b0
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30114608"
 items:
-- uid: excel_release.Excel.Interfaces.ChartTrendlineLabelFormatUpdateData
-  summary: <span data-ttu-id="f7ecf-101">用于更新 ChartTrendlineLabelFormat 对象上的数据的接口, 用于在 "ChartTrendlineLabelFormat" 中使用 (<!-- -->{...}<!-- -->)".</span><span class="sxs-lookup"><span data-stu-id="f7ecf-101">An interface for updating data on the ChartTrendlineLabelFormat object, for use in "chartTrendlineLabelFormat.set(<!-- -->{ ... }<!-- -->)".</span></span>
-  name: Excel.Interfaces.ChartTrendlineLabelFormatUpdateData
-  fullName: Excel.Interfaces.ChartTrendlineLabelFormatUpdateData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.ChartTrendlineLabelFormatUpdateData.border
-  - excel_release.Excel.Interfaces.ChartTrendlineLabelFormatUpdateData.font
-- uid: excel_release.Excel.Interfaces.ChartTrendlineLabelFormatUpdateData.border
-  summary: >-
-    <span data-ttu-id="f7ecf-102">表示边框格式，包括颜色、线条样式和粗细。</span><span class="sxs-lookup"><span data-stu-id="f7ecf-102">Represents the border format, which includes color, linestyle, and weight.</span></span>
+  - uid: excel_release.Excel.Interfaces.ChartTrendlineLabelFormatUpdateData
+    summary: '<span data-ttu-id="3a94a-101">一个用于更新 ChartTrendlineLabelFormat 对象上的数据的接口, 可用于 "ChartTrendlineLabelFormat (</span><span class="sxs-lookup"><span data-stu-id="3a94a-101">An interface for updating data on the ChartTrendlineLabelFormat object, for use in "chartTrendlineLabelFormat.set(</span></span><!-- --><span data-ttu-id="3a94a-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="3a94a-102"></span></span><!-- --><span data-ttu-id="3a94a-103">)".</span><span class="sxs-lookup"><span data-stu-id="3a94a-103"></span></span>'
+    name: Excel.Interfaces.ChartTrendlineLabelFormatUpdateData
+    fullName: Excel.Interfaces.ChartTrendlineLabelFormatUpdateData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.ChartTrendlineLabelFormatUpdateData.border
+      - excel_release.Excel.Interfaces.ChartTrendlineLabelFormatUpdateData.font
+  - uid: excel_release.Excel.Interfaces.ChartTrendlineLabelFormatUpdateData.border
+    summary: |-
+      <span data-ttu-id="3a94a-104">表示边框格式，包括颜色、线条样式和粗细。</span><span class="sxs-lookup"><span data-stu-id="3a94a-104">Represents the border format, which includes color, linestyle, and weight.</span></span>
 
+      <span data-ttu-id="3a94a-105">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3a94a-105">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: border
+    fullName: border
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'border?: Excel.Interfaces.ChartBorderUpdateData;'
+      return:
+        type:
+          - excel.Excel.Interfaces.ChartBorderUpdateData
+  - uid: excel_release.Excel.Interfaces.ChartTrendlineLabelFormatUpdateData.font
+    summary: |-
+      <span data-ttu-id="3a94a-106">表示图表趋势线标签的字体属性（字体名称、字体大小、颜色等）。</span><span class="sxs-lookup"><span data-stu-id="3a94a-106">Represents the font attributes (font name, font size, color, etc.) for a chart trendline label.</span></span>
 
-    <span data-ttu-id="f7ecf-103">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f7ecf-103">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: border
-  fullName: border
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'border?: Excel.Interfaces.ChartBorderUpdateData;'
-    return:
-      type:
-      - excel.Excel.Interfaces.ChartBorderUpdateData
-- uid: excel_release.Excel.Interfaces.ChartTrendlineLabelFormatUpdateData.font
-  summary: >-
-    <span data-ttu-id="f7ecf-104">表示图表趋势线标签的字体属性（字体名称、字体大小、颜色等）。</span><span class="sxs-lookup"><span data-stu-id="f7ecf-104">Represents the font attributes (font name, font size, color, etc.) for a chart trendline label.</span></span>
-
-
-    <span data-ttu-id="f7ecf-105">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f7ecf-105">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: font
-  fullName: font
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'font?: Excel.Interfaces.ChartFontUpdateData;'
-    return:
-      type:
-      - excel.Excel.Interfaces.ChartFontUpdateData
+      <span data-ttu-id="3a94a-107">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3a94a-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: font
+    fullName: font
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'font?: Excel.Interfaces.ChartFontUpdateData;'
+      return:
+        type:
+          - excel.Excel.Interfaces.ChartFontUpdateData
