--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.colorscaleconditionalformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.colorscaleconditionalformatupdatedata.yml
@@ -1,34 +1,27 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: e6f5177def2c82cb7b4c49ef1940c059ae6b5ad1
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30108532"
 items:
-- uid: excel_release.Excel.Interfaces.ColorScaleConditionalFormatUpdateData
-  summary: <span data-ttu-id="1daf0-101">用于更新 ColorScaleConditionalFormat 对象上的数据的接口, 用于在 "ColorScaleConditionalFormat" 中使用 (<!-- -->{...}<!-- -->)".</span><span class="sxs-lookup"><span data-stu-id="1daf0-101">An interface for updating data on the ColorScaleConditionalFormat object, for use in "colorScaleConditionalFormat.set(<!-- -->{ ... }<!-- -->)".</span></span>
-  name: Excel.Interfaces.ColorScaleConditionalFormatUpdateData
-  fullName: Excel.Interfaces.ColorScaleConditionalFormatUpdateData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.ColorScaleConditionalFormatUpdateData.criteria
-- uid: excel_release.Excel.Interfaces.ColorScaleConditionalFormatUpdateData.criteria
-  summary: >-
-    <span data-ttu-id="1daf0-p101">色阶的条件。使用两点色阶时，中点可选。</span><span class="sxs-lookup"><span data-stu-id="1daf0-p101">The criteria of the color scale. Midpoint is optional when using a two point color scale.</span></span>
+  - uid: excel_release.Excel.Interfaces.ColorScaleConditionalFormatUpdateData
+    summary: '<span data-ttu-id="a2a28-101">一个用于更新 ColorScaleConditionalFormat 对象上的数据的接口, 可用于 "ColorScaleConditionalFormat (</span><span class="sxs-lookup"><span data-stu-id="a2a28-101">An interface for updating data on the ColorScaleConditionalFormat object, for use in "colorScaleConditionalFormat.set(</span></span><!-- --><span data-ttu-id="a2a28-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="a2a28-102"></span></span><!-- --><span data-ttu-id="a2a28-103">)".</span><span class="sxs-lookup"><span data-stu-id="a2a28-103"></span></span>'
+    name: Excel.Interfaces.ColorScaleConditionalFormatUpdateData
+    fullName: Excel.Interfaces.ColorScaleConditionalFormatUpdateData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.ColorScaleConditionalFormatUpdateData.criteria
+  - uid: excel_release.Excel.Interfaces.ColorScaleConditionalFormatUpdateData.criteria
+    summary: |-
+      <span data-ttu-id="a2a28-104">色阶的条件。</span><span class="sxs-lookup"><span data-stu-id="a2a28-104">The criteria of the color scale.</span></span> <span data-ttu-id="a2a28-105">使用两个点的色阶时, 中点是可选的。</span><span class="sxs-lookup"><span data-stu-id="a2a28-105">Midpoint is optional when using a two point color scale.</span></span>
 
-
-    <span data-ttu-id="1daf0-104">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1daf0-104">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: criteria
-  fullName: criteria
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'criteria?: Excel.ConditionalColorScaleCriteria;'
-    return:
-      type:
-      - excel.Excel.ConditionalColorScaleCriteria
+      <span data-ttu-id="a2a28-106">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a2a28-106">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: criteria
+    fullName: criteria
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'criteria?: Excel.ConditionalColorScaleCriteria;'
+      return:
+        type:
+          - excel.Excel.ConditionalColorScaleCriteria
