--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.commentreplydata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.commentreplydata.yml
@@ -1,16 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 21c263502189bebeace544ff07e42e75a7de60a7
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30114783"
 items:
-- uid: excel_release.Excel.Interfaces.CommentReplyData
-  summary: <span data-ttu-id="9eaf3-101">描述通过调用 "commentReply ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="9eaf3-101">An interface describing the data returned by calling "commentReply.toJSON()".</span></span>
-  name: Excel.Interfaces.CommentReplyData
-  fullName: Excel.Interfaces.CommentReplyData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
+  - uid: excel_release.Excel.Interfaces.CommentReplyData
+    summary: <span data-ttu-id="a9686-101">描述通过调用 "commentReply ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="a9686-101">An interface describing the data returned by calling "commentReply.toJSON()".</span></span>
+    name: Excel.Interfaces.CommentReplyData
+    fullName: Excel.Interfaces.CommentReplyData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
