--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.conditionalrangefontdata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.conditionalrangefontdata.yml
@@ -1,102 +1,91 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: d2bf29212965ea71d750a84332df0fe8468f3f8e
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30114636"
 items:
-- uid: excel_release.Excel.Interfaces.ConditionalRangeFontData
-  summary: <span data-ttu-id="22102-101">描述通过调用 "conditionalRangeFont ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="22102-101">An interface describing the data returned by calling "conditionalRangeFont.toJSON()".</span></span>
-  name: Excel.Interfaces.ConditionalRangeFontData
-  fullName: Excel.Interfaces.ConditionalRangeFontData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.ConditionalRangeFontData.bold
-  - excel_release.Excel.Interfaces.ConditionalRangeFontData.color
-  - excel_release.Excel.Interfaces.ConditionalRangeFontData.italic
-  - excel_release.Excel.Interfaces.ConditionalRangeFontData.strikethrough
-  - excel_release.Excel.Interfaces.ConditionalRangeFontData.underline
-- uid: excel_release.Excel.Interfaces.ConditionalRangeFontData.bold
-  summary: >-
-    <span data-ttu-id="22102-102">表示字体的加粗状态。</span><span class="sxs-lookup"><span data-stu-id="22102-102">Represents the bold status of font.</span></span>
+  - uid: excel_release.Excel.Interfaces.ConditionalRangeFontData
+    summary: <span data-ttu-id="0c82d-101">描述通过调用 "conditionalRangeFont ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="0c82d-101">An interface describing the data returned by calling "conditionalRangeFont.toJSON()".</span></span>
+    name: Excel.Interfaces.ConditionalRangeFontData
+    fullName: Excel.Interfaces.ConditionalRangeFontData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.ConditionalRangeFontData.bold
+      - excel_release.Excel.Interfaces.ConditionalRangeFontData.color
+      - excel_release.Excel.Interfaces.ConditionalRangeFontData.italic
+      - excel_release.Excel.Interfaces.ConditionalRangeFontData.strikethrough
+      - excel_release.Excel.Interfaces.ConditionalRangeFontData.underline
+  - uid: excel_release.Excel.Interfaces.ConditionalRangeFontData.bold
+    summary: |-
+      <span data-ttu-id="0c82d-102">表示字体的加粗状态。</span><span class="sxs-lookup"><span data-stu-id="0c82d-102">Represents the bold status of font.</span></span>
 
+      <span data-ttu-id="0c82d-103">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0c82d-103">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: bold
+    fullName: bold
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'bold?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.ConditionalRangeFontData.color
+    summary: |-
+      <span data-ttu-id="0c82d-104">文本颜色的 HTML 颜色代码表示。</span><span class="sxs-lookup"><span data-stu-id="0c82d-104">HTML color code representation of the text color.</span></span> <span data-ttu-id="0c82d-105">例如，</span><span class="sxs-lookup"><span data-stu-id="0c82d-105">E.g.</span></span> <span data-ttu-id="0c82d-106">\#FF0000 表示红色。</span><span class="sxs-lookup"><span data-stu-id="0c82d-106">\#FF0000 represents Red.</span></span>
 
-    <span data-ttu-id="22102-103">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="22102-103">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: bold
-  fullName: bold
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'bold?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.ConditionalRangeFontData.color
-  summary: >-
-    <span data-ttu-id="22102-104">文本颜色的 HTML 颜色代码表示形式。</span><span class="sxs-lookup"><span data-stu-id="22102-104">HTML color code representation of the text color.</span></span> <span data-ttu-id="22102-105">例如，</span><span class="sxs-lookup"><span data-stu-id="22102-105">E.g.</span></span> <span data-ttu-id="22102-106">\#FF0000 表示红色。</span><span class="sxs-lookup"><span data-stu-id="22102-106">\#FF0000 represents Red.</span></span>
+      <span data-ttu-id="0c82d-107">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0c82d-107">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: color
+    fullName: color
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'color?: string;'
+      return:
+        type:
+          - string
+  - uid: excel_release.Excel.Interfaces.ConditionalRangeFontData.italic
+    summary: |-
+      <span data-ttu-id="0c82d-108">表示字体的斜体状态。</span><span class="sxs-lookup"><span data-stu-id="0c82d-108">Represents the italic status of the font.</span></span>
 
+      <span data-ttu-id="0c82d-109">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0c82d-109">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: italic
+    fullName: italic
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'italic?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.ConditionalRangeFontData.strikethrough
+    summary: |-
+      <span data-ttu-id="0c82d-110">表示字体的删除线状态。</span><span class="sxs-lookup"><span data-stu-id="0c82d-110">Represents the strikethrough status of the font.</span></span>
 
-    <span data-ttu-id="22102-107">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="22102-107">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: color
-  fullName: color
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'color?: string;'
-    return:
-      type:
-      - string
-- uid: excel_release.Excel.Interfaces.ConditionalRangeFontData.italic
-  summary: >-
-    <span data-ttu-id="22102-108">表示字体的斜体状态。</span><span class="sxs-lookup"><span data-stu-id="22102-108">Represents the italic status of the font.</span></span>
+      <span data-ttu-id="0c82d-111">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0c82d-111">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: strikethrough
+    fullName: strikethrough
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'strikethrough?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.ConditionalRangeFontData.underline
+    summary: |-
+      <span data-ttu-id="0c82d-112">应用于字体的下划线类型。</span><span class="sxs-lookup"><span data-stu-id="0c82d-112">Type of underline applied to the font.</span></span> <span data-ttu-id="0c82d-113">有关详细信息, 请参阅 ConditionalRangeFontUnderlineStyle。</span><span class="sxs-lookup"><span data-stu-id="0c82d-113">See Excel.ConditionalRangeFontUnderlineStyle for details.</span></span>
 
-
-    <span data-ttu-id="22102-109">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="22102-109">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: italic
-  fullName: italic
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'italic?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.ConditionalRangeFontData.strikethrough
-  summary: >-
-    <span data-ttu-id="22102-110">表示字体的删除线状态。</span><span class="sxs-lookup"><span data-stu-id="22102-110">Represents the strikethrough status of the font.</span></span>
-
-
-    <span data-ttu-id="22102-111">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="22102-111">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: strikethrough
-  fullName: strikethrough
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'strikethrough?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.ConditionalRangeFontData.underline
-  summary: >-
-    <span data-ttu-id="22102-112">应用于字体的下划线类型。</span><span class="sxs-lookup"><span data-stu-id="22102-112">Type of underline applied to the font.</span></span> <span data-ttu-id="22102-113">有关详细信息, 请参阅 ConditionalRangeFontUnderlineStyle。</span><span class="sxs-lookup"><span data-stu-id="22102-113">See Excel.ConditionalRangeFontUnderlineStyle for details.</span></span>
-
-
-    <span data-ttu-id="22102-114">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="22102-114">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: underline
-  fullName: underline
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'underline?: Excel.ConditionalRangeFontUnderlineStyle | "None" | "Single" | "Double";'
-    return:
-      type:
-      - Excel.ConditionalRangeFontUnderlineStyle | "None" | "Single" | "Double"
+      <span data-ttu-id="0c82d-114">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0c82d-114">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: underline
+    fullName: underline
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'underline?: Excel.ConditionalRangeFontUnderlineStyle | "None" | "Single" | "Double";'
+      return:
+        type:
+          - Excel.ConditionalRangeFontUnderlineStyle | "None" | "Single" | "Double"
