--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.customconditionalformatdata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.customconditionalformatdata.yml
@@ -1,51 +1,43 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 9b58608e3d97f7e7bc584a992ff84d4dab8351f3
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30111416"
 items:
-- uid: excel_release.Excel.Interfaces.CustomConditionalFormatData
-  summary: <span data-ttu-id="40555-101">描述通过调用 "customConditionalFormat ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="40555-101">An interface describing the data returned by calling "customConditionalFormat.toJSON()".</span></span>
-  name: Excel.Interfaces.CustomConditionalFormatData
-  fullName: Excel.Interfaces.CustomConditionalFormatData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.CustomConditionalFormatData.format
-  - excel_release.Excel.Interfaces.CustomConditionalFormatData.rule
-- uid: excel_release.Excel.Interfaces.CustomConditionalFormatData.format
-  summary: >-
-    <span data-ttu-id="40555-p101">返回 format 对象，该对象用于封装条件格式字体、填充、边框和其他属性。只读。</span><span class="sxs-lookup"><span data-stu-id="40555-p101">Returns a format object, encapsulating the conditional formats font, fill, borders, and other properties. Read-only.</span></span>
+  - uid: excel_release.Excel.Interfaces.CustomConditionalFormatData
+    summary: <span data-ttu-id="89b92-101">描述通过调用 "customConditionalFormat ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="89b92-101">An interface describing the data returned by calling "customConditionalFormat.toJSON()".</span></span>
+    name: Excel.Interfaces.CustomConditionalFormatData
+    fullName: Excel.Interfaces.CustomConditionalFormatData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.CustomConditionalFormatData.format
+      - excel_release.Excel.Interfaces.CustomConditionalFormatData.rule
+  - uid: excel_release.Excel.Interfaces.CustomConditionalFormatData.format
+    summary: |-
+      <span data-ttu-id="89b92-102">返回一个 format 对象, 该对象封装条件格式字体、填充、边框和其他属性。</span><span class="sxs-lookup"><span data-stu-id="89b92-102">Returns a format object, encapsulating the conditional formats font, fill, borders, and other properties.</span></span> <span data-ttu-id="89b92-103">只读。</span><span class="sxs-lookup"><span data-stu-id="89b92-103">Read-only.</span></span>
 
+      <span data-ttu-id="89b92-104">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="89b92-104">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: format
+    fullName: format
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'format?: Excel.Interfaces.ConditionalRangeFormatData;'
+      return:
+        type:
+          - excel.Excel.Interfaces.ConditionalRangeFormatData
+  - uid: excel_release.Excel.Interfaces.CustomConditionalFormatData.rule
+    summary: |-
+      <span data-ttu-id="89b92-105">表示此条件格式中的 Rule 对象。</span><span class="sxs-lookup"><span data-stu-id="89b92-105">Represents the Rule object on this conditional format.</span></span> <span data-ttu-id="89b92-106">只读。</span><span class="sxs-lookup"><span data-stu-id="89b92-106">Read-only.</span></span>
 
-    <span data-ttu-id="40555-104">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="40555-104">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: format
-  fullName: format
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'format?: Excel.Interfaces.ConditionalRangeFormatData;'
-    return:
-      type:
-      - excel.Excel.Interfaces.ConditionalRangeFormatData
-- uid: excel_release.Excel.Interfaces.CustomConditionalFormatData.rule
-  summary: >-
-    <span data-ttu-id="40555-p102">表示此条件格式中的 Rule 对象。只读。</span><span class="sxs-lookup"><span data-stu-id="40555-p102">Represents the Rule object on this conditional format. Read-only.</span></span>
-
-
-    <span data-ttu-id="40555-107">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="40555-107">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: rule
-  fullName: rule
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'rule?: Excel.Interfaces.ConditionalFormatRuleData;'
-    return:
-      type:
-      - excel.Excel.Interfaces.ConditionalFormatRuleData
+      <span data-ttu-id="89b92-107">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="89b92-107">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: rule
+    fullName: rule
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'rule?: Excel.Interfaces.ConditionalFormatRuleData;'
+      return:
+        type:
+          - excel.Excel.Interfaces.ConditionalFormatRuleData
