--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.pivottablecollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.pivottablecollectionupdatedata.yml
@@ -1,29 +1,23 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 3b4947748d8f8d3ce96fa882c00c5b1f84680f15
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30114461"
 items:
-- uid: excel_release.Excel.Interfaces.PivotTableCollectionUpdateData
-  summary: <span data-ttu-id="1f945-101">用于更新 PivotTableCollection 对象上的数据的接口, 用于在 "PivotTableCollection" 中使用 (<!-- -->{...}<!-- -->)".</span><span class="sxs-lookup"><span data-stu-id="1f945-101">An interface for updating data on the PivotTableCollection object, for use in "pivotTableCollection.set(<!-- -->{ ... }<!-- -->)".</span></span>
-  name: Excel.Interfaces.PivotTableCollectionUpdateData
-  fullName: Excel.Interfaces.PivotTableCollectionUpdateData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.PivotTableCollectionUpdateData.items
-- uid: excel_release.Excel.Interfaces.PivotTableCollectionUpdateData.items
-  name: items
-  fullName: items
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'items?: Excel.Interfaces.PivotTableData[];'
-    return:
-      type:
-      - Excel.Interfaces.PivotTableData[]
+  - uid: excel_release.Excel.Interfaces.PivotTableCollectionUpdateData
+    summary: '<span data-ttu-id="2d293-101">一个用于更新 PivotTableCollection 对象上的数据的接口, 可用于 "PivotTableCollection (</span><span class="sxs-lookup"><span data-stu-id="2d293-101">An interface for updating data on the PivotTableCollection object, for use in "pivotTableCollection.set(</span></span><!-- --><span data-ttu-id="2d293-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="2d293-102"></span></span><!-- --><span data-ttu-id="2d293-103">)".</span><span class="sxs-lookup"><span data-stu-id="2d293-103"></span></span>'
+    name: Excel.Interfaces.PivotTableCollectionUpdateData
+    fullName: Excel.Interfaces.PivotTableCollectionUpdateData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.PivotTableCollectionUpdateData.items
+  - uid: excel_release.Excel.Interfaces.PivotTableCollectionUpdateData.items
+    name: items
+    fullName: items
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'items?: Excel.Interfaces.PivotTableData[];'
+      return:
+        type:
+          - 'Excel.Interfaces.PivotTableData[]'
