--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.rowcolumnpivothierarchycollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.rowcolumnpivothierarchycollectionloadoptions.yml
@@ -1,84 +1,74 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: f8bd399be4bb43a2f10116b0f00ffed2524f626c
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30111430"
 items:
-- uid: excel_release.Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions
-  summary: >-
-    <span data-ttu-id="d33ec-101">代表与数据透视表相关联的 RowColumnPivotHierarchy 项目的集合。</span><span class="sxs-lookup"><span data-stu-id="d33ec-101">Represents a collection of RowColumnPivotHierarchy items associated with the PivotTable.</span></span>
+  - uid: excel_release.Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions
+    summary: |-
+      <span data-ttu-id="7f59e-101">代表与数据透视表相关联的 RowColumnPivotHierarchy 项目的集合。</span><span class="sxs-lookup"><span data-stu-id="7f59e-101">Represents a collection of RowColumnPivotHierarchy items associated with the PivotTable.</span></span>
 
+      <span data-ttu-id="7f59e-102">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7f59e-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions
+    fullName: Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions.$all
+      - excel_release.Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions.id
+      - excel_release.Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions.name
+      - excel_release.Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions.position
+  - uid: excel_release.Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions.$all
+    name: $all
+    fullName: $all
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: '$all?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions.id
+    summary: |-
+      <span data-ttu-id="7f59e-103">对于集合中的每一项: RowColumnPivotHierarchy 的 Id。</span><span class="sxs-lookup"><span data-stu-id="7f59e-103">For EACH ITEM in the collection: Id of the RowColumnPivotHierarchy.</span></span>
 
-    <span data-ttu-id="d33ec-102">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d33ec-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions
-  fullName: Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions.$all
-  - excel_release.Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions.id
-  - excel_release.Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions.name
-  - excel_release.Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions.position
-- uid: excel_release.Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions.$all
-  name: $all
-  fullName: $all
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: '$all?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions.id
-  summary: >-
-    <span data-ttu-id="d33ec-103">对于集合中的每一项: RowColumnPivotHierarchy 的 Id。</span><span class="sxs-lookup"><span data-stu-id="d33ec-103">For EACH ITEM in the collection: Id of the RowColumnPivotHierarchy.</span></span>
+      <span data-ttu-id="7f59e-104">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7f59e-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: id
+    fullName: id
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'id?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions.name
+    summary: |-
+      <span data-ttu-id="7f59e-105">对于集合中的每一项: RowColumnPivotHierarchy 的名称。</span><span class="sxs-lookup"><span data-stu-id="7f59e-105">For EACH ITEM in the collection: Name of the RowColumnPivotHierarchy.</span></span>
 
+      <span data-ttu-id="7f59e-106">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7f59e-106">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: name
+    fullName: name
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'name?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions.position
+    summary: |-
+      <span data-ttu-id="7f59e-107">对于集合中的每一项: RowColumnPivotHierarchy 的位置。</span><span class="sxs-lookup"><span data-stu-id="7f59e-107">For EACH ITEM in the collection: Position of the RowColumnPivotHierarchy.</span></span>
 
-    <span data-ttu-id="d33ec-104">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d33ec-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: id
-  fullName: id
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'id?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions.name
-  summary: >-
-    <span data-ttu-id="d33ec-105">对于集合中的每一项: RowColumnPivotHierarchy 的名称。</span><span class="sxs-lookup"><span data-stu-id="d33ec-105">For EACH ITEM in the collection: Name of the RowColumnPivotHierarchy.</span></span>
-
-
-    <span data-ttu-id="d33ec-106">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d33ec-106">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: name
-  fullName: name
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'name?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions.position
-  summary: >-
-    <span data-ttu-id="d33ec-107">对于集合中的每一项: RowColumnPivotHierarchy 的位置。</span><span class="sxs-lookup"><span data-stu-id="d33ec-107">For EACH ITEM in the collection: Position of the RowColumnPivotHierarchy.</span></span>
-
-
-    <span data-ttu-id="d33ec-108">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d33ec-108">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: position
-  fullName: position
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'position?: boolean;'
-    return:
-      type:
-      - boolean
+      <span data-ttu-id="7f59e-108">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7f59e-108">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: position
+    fullName: position
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'position?: boolean;'
+      return:
+        type:
+          - boolean
