--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.textframedata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.textframedata.yml
@@ -1,16 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 2f44752cb987f75c93fa63f838b636fad56264fb
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30111983"
 items:
-- uid: excel_release.Excel.Interfaces.TextFrameData
-  summary: <span data-ttu-id="12340-101">描述通过调用 "textFrame ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="12340-101">An interface describing the data returned by calling "textFrame.toJSON()".</span></span>
-  name: Excel.Interfaces.TextFrameData
-  fullName: Excel.Interfaces.TextFrameData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
+  - uid: excel_release.Excel.Interfaces.TextFrameData
+    summary: <span data-ttu-id="532bc-101">描述通过调用 "textFrame ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="532bc-101">An interface describing the data returned by calling "textFrame.toJSON()".</span></span>
+    name: Excel.Interfaces.TextFrameData
+    fullName: Excel.Interfaces.TextFrameData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
