--- a/docs/docs-ref-autogen/outlook_1_7/office.mailboxenums.days.yml
+++ b/docs/docs-ref-autogen/outlook_1_7/office.mailboxenums.days.yml
@@ -1,112 +1,105 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 763ef208b3f437dfc6dd16e9ecf84173d3dfa831
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30094510"
 items:
-- uid: Outlook_1_7.Office.MailboxEnums.Days
-  summary: >-
-    <span data-ttu-id="91d85-101">指定一周中的某一天或一天的类型。</span><span class="sxs-lookup"><span data-stu-id="91d85-101">Specifies the day of week or type of day.</span></span>
+  - uid: Outlook_1_7.Office.MailboxEnums.Days
+    summary: |-
+      <span data-ttu-id="18cbb-101">指定一周中的某一天或一天的类型。</span><span class="sxs-lookup"><span data-stu-id="18cbb-101">Specifies the day of week or type of day.</span></span>
 
-
-    <span data-ttu-id="91d85-102">\[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="91d85-102">\[ [API set: Mailbox 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
-  remarks: <table> <tr><td>[<span data-ttu-id="91d85-103">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="91d85-103">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="91d85-104">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="91d85-104">Compose or Read</span></span></td></tr> </table>
-  name: Office.MailboxEnums.Days
-  fullName: Office.MailboxEnums.Days
-  langs:
-  - typeScript
-  type: enum
-  package: Outlook_1_7
-  children:
-  - Outlook_1_7.Office.MailboxEnums.Days.Day
-  - Outlook_1_7.Office.MailboxEnums.Days.Fri
-  - Outlook_1_7.Office.MailboxEnums.Days.Mon
-  - Outlook_1_7.Office.MailboxEnums.Days.Sat
-  - Outlook_1_7.Office.MailboxEnums.Days.Sun
-  - Outlook_1_7.Office.MailboxEnums.Days.Thu
-  - Outlook_1_7.Office.MailboxEnums.Days.Tue
-  - Outlook_1_7.Office.MailboxEnums.Days.Wed
-  - Outlook_1_7.Office.MailboxEnums.Days.Weekday
-  - Outlook_1_7.Office.MailboxEnums.Days.WeekendDay
-- uid: Outlook_1_7.Office.MailboxEnums.Days.Day
-  summary: <span data-ttu-id="91d85-105">一周中的某一天。</span><span class="sxs-lookup"><span data-stu-id="91d85-105">Day of week.</span></span>
-  name: Day
-  fullName: Day
-  langs:
-  - typeScript
-  type: field
-  numericValue: "\"day\""
-- uid: Outlook_1_7.Office.MailboxEnums.Days.Fri
-  summary: <span data-ttu-id="91d85-106">周五</span><span class="sxs-lookup"><span data-stu-id="91d85-106">Friday</span></span>
-  name: Fri
-  fullName: Fri
-  langs:
-  - typeScript
-  type: field
-  numericValue: "\"fri\""
-- uid: Outlook_1_7.Office.MailboxEnums.Days.Mon
-  summary: <span data-ttu-id="91d85-107">周一</span><span class="sxs-lookup"><span data-stu-id="91d85-107">Monday</span></span>
-  name: Mon
-  fullName: Mon
-  langs:
-  - typeScript
-  type: field
-  numericValue: "\"mon\""
-- uid: Outlook_1_7.Office.MailboxEnums.Days.Sat
-  summary: <span data-ttu-id="91d85-108">周六</span><span class="sxs-lookup"><span data-stu-id="91d85-108">Saturday</span></span>
-  name: Sat
-  fullName: Sat
-  langs:
-  - typeScript
-  type: field
-  numericValue: "\"sat\""
-- uid: Outlook_1_7.Office.MailboxEnums.Days.Sun
-  summary: <span data-ttu-id="91d85-109">星期日</span><span class="sxs-lookup"><span data-stu-id="91d85-109">Sunday</span></span>
-  name: Sun
-  fullName: Sun
-  langs:
-  - typeScript
-  type: field
-  numericValue: "\"sun\""
-- uid: Outlook_1_7.Office.MailboxEnums.Days.Thu
-  summary: <span data-ttu-id="91d85-110">周四</span><span class="sxs-lookup"><span data-stu-id="91d85-110">Thursday</span></span>
-  name: Thu
-  fullName: Thu
-  langs:
-  - typeScript
-  type: field
-  numericValue: "\"thu\""
-- uid: Outlook_1_7.Office.MailboxEnums.Days.Tue
-  summary: <span data-ttu-id="91d85-111">周二</span><span class="sxs-lookup"><span data-stu-id="91d85-111">Tuesday</span></span>
-  name: Tue
-  fullName: Tue
-  langs:
-  - typeScript
-  type: field
-  numericValue: "\"tue\""
-- uid: Outlook_1_7.Office.MailboxEnums.Days.Wed
-  summary: <span data-ttu-id="91d85-112">周三</span><span class="sxs-lookup"><span data-stu-id="91d85-112">Wednesday</span></span>
-  name: Wed
-  fullName: Wed
-  langs:
-  - typeScript
-  type: field
-  numericValue: "\"wed\""
-- uid: Outlook_1_7.Office.MailboxEnums.Days.Weekday
-  summary: "<span data-ttu-id=\"91d85-113\">工作日 (不包括周末): \"周一\"、\"周二\"、\"周三\"、\"Thu\" 和 \"周五\"。</span><span class=\"sxs-lookup\"><span data-stu-id=\"91d85-113\">Week day (excludes weekend days): 'Mon', 'Tue', 'Wed', 'Thu', and 'Fri'.</span></span>"
-  name: Weekday
-  fullName: Weekday
-  langs:
-  - typeScript
-  type: field
-  numericValue: "\"weekday\""
-- uid: Outlook_1_7.Office.MailboxEnums.Days.WeekendDay
-  summary: "<span data-ttu-id=\"91d85-114\">周末: \"Sat\" 和 \"周日\"。</span><span class=\"sxs-lookup\"><span data-stu-id=\"91d85-114\">Weekend day: 'Sat' and 'Sun'.</span></span>"
-  name: WeekendDay
-  fullName: WeekendDay
-  langs:
-  - typeScript
-  type: field
-  numericValue: "\"weekendDay\""
+      <span data-ttu-id="18cbb-102">\[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="18cbb-102">\[ [API set: Mailbox 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    remarks: '<span data-ttu-id="18cbb-103">**[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="18cbb-103">**[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: Compose or Read</span></span>'
+    name: Office.MailboxEnums.Days
+    fullName: Office.MailboxEnums.Days
+    langs:
+      - typeScript
+    type: enum
+    package: Outlook_1_7
+    children:
+      - Outlook_1_7.Office.MailboxEnums.Days.Day
+      - Outlook_1_7.Office.MailboxEnums.Days.Fri
+      - Outlook_1_7.Office.MailboxEnums.Days.Mon
+      - Outlook_1_7.Office.MailboxEnums.Days.Sat
+      - Outlook_1_7.Office.MailboxEnums.Days.Sun
+      - Outlook_1_7.Office.MailboxEnums.Days.Thu
+      - Outlook_1_7.Office.MailboxEnums.Days.Tue
+      - Outlook_1_7.Office.MailboxEnums.Days.Wed
+      - Outlook_1_7.Office.MailboxEnums.Days.Weekday
+      - Outlook_1_7.Office.MailboxEnums.Days.WeekendDay
+  - uid: Outlook_1_7.Office.MailboxEnums.Days.Day
+    summary: <span data-ttu-id="18cbb-104">一周中的某一天。</span><span class="sxs-lookup"><span data-stu-id="18cbb-104">Day of week.</span></span>
+    name: Day
+    fullName: Day
+    langs:
+      - typeScript
+    type: field
+    numericValue: '"day"'
+  - uid: Outlook_1_7.Office.MailboxEnums.Days.Fri
+    summary: <span data-ttu-id="18cbb-105">星期五</span><span class="sxs-lookup"><span data-stu-id="18cbb-105">Friday</span></span>
+    name: Fri
+    fullName: Fri
+    langs:
+      - typeScript
+    type: field
+    numericValue: '"fri"'
+  - uid: Outlook_1_7.Office.MailboxEnums.Days.Mon
+    summary: <span data-ttu-id="18cbb-106">星期一</span><span class="sxs-lookup"><span data-stu-id="18cbb-106">Monday</span></span>
+    name: Mon
+    fullName: Mon
+    langs:
+      - typeScript
+    type: field
+    numericValue: '"mon"'
+  - uid: Outlook_1_7.Office.MailboxEnums.Days.Sat
+    summary: <span data-ttu-id="18cbb-107">星期六</span><span class="sxs-lookup"><span data-stu-id="18cbb-107">Saturday</span></span>
+    name: Sat
+    fullName: Sat
+    langs:
+      - typeScript
+    type: field
+    numericValue: '"sat"'
+  - uid: Outlook_1_7.Office.MailboxEnums.Days.Sun
+    summary: <span data-ttu-id="18cbb-108">星期日</span><span class="sxs-lookup"><span data-stu-id="18cbb-108">Sunday</span></span>
+    name: Sun
+    fullName: Sun
+    langs:
+      - typeScript
+    type: field
+    numericValue: '"sun"'
+  - uid: Outlook_1_7.Office.MailboxEnums.Days.Thu
+    summary: <span data-ttu-id="18cbb-109">星期四</span><span class="sxs-lookup"><span data-stu-id="18cbb-109">Thursday</span></span>
+    name: Thu
+    fullName: Thu
+    langs:
+      - typeScript
+    type: field
+    numericValue: '"thu"'
+  - uid: Outlook_1_7.Office.MailboxEnums.Days.Tue
+    summary: <span data-ttu-id="18cbb-110">星期二</span><span class="sxs-lookup"><span data-stu-id="18cbb-110">Tuesday</span></span>
+    name: Tue
+    fullName: Tue
+    langs:
+      - typeScript
+    type: field
+    numericValue: '"tue"'
+  - uid: Outlook_1_7.Office.MailboxEnums.Days.Wed
+    summary: <span data-ttu-id="18cbb-111">星期三</span><span class="sxs-lookup"><span data-stu-id="18cbb-111">Wednesday</span></span>
+    name: Wed
+    fullName: Wed
+    langs:
+      - typeScript
+    type: field
+    numericValue: '"wed"'
+  - uid: Outlook_1_7.Office.MailboxEnums.Days.Weekday
+    summary: '<span data-ttu-id="18cbb-112">工作日 (不包括周末): "周一"、"周二"、"周三"、"Thu" 和 "周五"。</span><span class="sxs-lookup"><span data-stu-id="18cbb-112">Week day (excludes weekend days): ''Mon'', ''Tue'', ''Wed'', ''Thu'', and ''Fri''.</span></span>'
+    name: Weekday
+    fullName: Weekday
+    langs:
+      - typeScript
+    type: field
+    numericValue: '"weekday"'
+  - uid: Outlook_1_7.Office.MailboxEnums.Days.WeekendDay
+    summary: '<span data-ttu-id="18cbb-113">周末: "Sat" 和 "周日"。</span><span class="sxs-lookup"><span data-stu-id="18cbb-113">Weekend day: ''Sat'' and ''Sun''.</span></span>'
+    name: WeekendDay
+    fullName: WeekendDay
+    langs:
+      - typeScript
+    type: field
+    numericValue: '"weekendDay"'
