--- a/docs/docs-ref-autogen/outlook_1_7/office.replyformattachment.yml
+++ b/docs/docs-ref-autogen/outlook_1_7/office.replyformattachment.yml
@@ -1,82 +1,76 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 0cd7d145cbae233d62a236f5832aee185b99d90f
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26234567"
 items:
-- uid: Outlook_1_7.Office.ReplyFormAttachment
-  summary: <span data-ttu-id="80342-101">一个文件或项目的附件。</span><span class="sxs-lookup"><span data-stu-id="80342-101">A file or item attachment.</span></span> <span data-ttu-id="80342-102">显示答复窗体时使用。</span><span class="sxs-lookup"><span data-stu-id="80342-102">Used when displaying a reply form.</span></span>
-  name: Office.ReplyFormAttachment
-  fullName: Office.ReplyFormAttachment
-  langs:
-  - typeScript
-  type: interface
-  package: Outlook_1_7
-  children:
-  - Outlook_1_7.Office.ReplyFormAttachment.inLine
-  - Outlook_1_7.Office.ReplyFormAttachment.itemId
-  - Outlook_1_7.Office.ReplyFormAttachment.name
-  - Outlook_1_7.Office.ReplyFormAttachment.type
-  - Outlook_1_7.Office.ReplyFormAttachment.url
-- uid: Outlook_1_7.Office.ReplyFormAttachment.inLine
-  summary: <span data-ttu-id="80342-103">仅使用类型设置为文件。</span><span class="sxs-lookup"><span data-stu-id="80342-103">Only used if type is set to file.</span></span> <span data-ttu-id="80342-104">如果为 true，指示附件将显示嵌入在邮件正文中，并且不应在附件列表中显示。</span><span class="sxs-lookup"><span data-stu-id="80342-104">If true, indicates that the attachment will be shown inline in the message body, and should not be displayed in the attachment list.</span></span>
-  name: inLine
-  fullName: inLine
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'inLine?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: Outlook_1_7.Office.ReplyFormAttachment.itemId
-  summary: <span data-ttu-id="80342-105">如果类型设置仅使用到项目。</span><span class="sxs-lookup"><span data-stu-id="80342-105">Only used if type is set to item.</span></span> <span data-ttu-id="80342-106">附件的 EWS 项目 ID。</span><span class="sxs-lookup"><span data-stu-id="80342-106">The EWS item id of the attachment.</span></span> <span data-ttu-id="80342-107">字符串最长为 100 个字符。</span><span class="sxs-lookup"><span data-stu-id="80342-107">This is a string up to 100 characters.</span></span>
-  name: itemId
-  fullName: itemId
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'itemId?: string;'
-    return:
-      type:
-      - string
-- uid: Outlook_1_7.Office.ReplyFormAttachment.name
-  summary: <span data-ttu-id="80342-108">一个包含附件的名称的字符串，最多包含 255 个字符。</span><span class="sxs-lookup"><span data-stu-id="80342-108">A string that contains the name of the attachment, up to 255 characters in length.</span></span>
-  name: name
-  fullName: name
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'name: string;'
-    return:
-      type:
-      - string
-- uid: Outlook_1_7.Office.ReplyFormAttachment.type
-  summary: <span data-ttu-id="80342-109">指示附件的类型。</span><span class="sxs-lookup"><span data-stu-id="80342-109">Indicates the type of attachment.</span></span> <span data-ttu-id="80342-110">必须是文件附件或项目的项目附件的文件。</span><span class="sxs-lookup"><span data-stu-id="80342-110">Must be file for a file attachment or item for an item attachment.</span></span>
-  name: type
-  fullName: type
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'type: string;'
-    return:
-      type:
-      - string
-- uid: Outlook_1_7.Office.ReplyFormAttachment.url
-  summary: <span data-ttu-id="80342-111">仅使用类型设置为文件。</span><span class="sxs-lookup"><span data-stu-id="80342-111">Only used if type is set to file.</span></span> <span data-ttu-id="80342-112">文件的位置的 URI。</span><span class="sxs-lookup"><span data-stu-id="80342-112">The URI of the location for the file.</span></span>
-  name: url
-  fullName: url
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'url?: string;'
-    return:
-      type:
-      - string
+  - uid: Outlook_1_7.Office.ReplyFormAttachment
+    summary: <span data-ttu-id="3450e-101">文件或项目附件。</span><span class="sxs-lookup"><span data-stu-id="3450e-101">A file or item attachment.</span></span> <span data-ttu-id="3450e-102">在显示答复窗体时使用。</span><span class="sxs-lookup"><span data-stu-id="3450e-102">Used when displaying a reply form.</span></span>
+    name: Office.ReplyFormAttachment
+    fullName: Office.ReplyFormAttachment
+    langs:
+      - typeScript
+    type: interface
+    package: Outlook_1_7
+    children:
+      - Outlook_1_7.Office.ReplyFormAttachment.inLine
+      - Outlook_1_7.Office.ReplyFormAttachment.itemId
+      - Outlook_1_7.Office.ReplyFormAttachment.name
+      - Outlook_1_7.Office.ReplyFormAttachment.type
+      - Outlook_1_7.Office.ReplyFormAttachment.url
+  - uid: Outlook_1_7.Office.ReplyFormAttachment.inLine
+    summary: '<span data-ttu-id="3450e-103">仅在 "类型" 设置为 "文件" 时使用。</span><span class="sxs-lookup"><span data-stu-id="3450e-103">Only used if type is set to file.</span></span> <span data-ttu-id="3450e-104">如果为 true, 则表示附件将在邮件正文中以内联方式显示, 并且不应显示在附件列表中。</span><span class="sxs-lookup"><span data-stu-id="3450e-104">If true, indicates that the attachment will be shown inline in the message body, and should not be displayed in the attachment list.</span></span>'
+    name: inLine
+    fullName: inLine
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'inLine?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: Outlook_1_7.Office.ReplyFormAttachment.itemId
+    summary: <span data-ttu-id="3450e-105">仅在 "类型" 设置为 "项目" 时使用。</span><span class="sxs-lookup"><span data-stu-id="3450e-105">Only used if type is set to item.</span></span> <span data-ttu-id="3450e-106">附件的 EWS 项目 ID。</span><span class="sxs-lookup"><span data-stu-id="3450e-106">The EWS item id of the attachment.</span></span> <span data-ttu-id="3450e-107">字符串最长为 100 个字符。</span><span class="sxs-lookup"><span data-stu-id="3450e-107">This is a string up to 100 characters.</span></span>
+    name: itemId
+    fullName: itemId
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'itemId?: string;'
+      return:
+        type:
+          - string
+  - uid: Outlook_1_7.Office.ReplyFormAttachment.name
+    summary: '<span data-ttu-id="3450e-108">一个包含附件的名称的字符串，最多包含 255 个字符。</span><span class="sxs-lookup"><span data-stu-id="3450e-108">A string that contains the name of the attachment, up to 255 characters in length.</span></span>'
+    name: name
+    fullName: name
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'name: string;'
+      return:
+        type:
+          - string
+  - uid: Outlook_1_7.Office.ReplyFormAttachment.type
+    summary: <span data-ttu-id="3450e-109">指示附件的类型。</span><span class="sxs-lookup"><span data-stu-id="3450e-109">Indicates the type of attachment.</span></span> <span data-ttu-id="3450e-110">必须是文件附件的文件或项目附件的项目。</span><span class="sxs-lookup"><span data-stu-id="3450e-110">Must be file for a file attachment or item for an item attachment.</span></span>
+    name: type
+    fullName: type
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'type: string;'
+      return:
+        type:
+          - string
+  - uid: Outlook_1_7.Office.ReplyFormAttachment.url
+    summary: <span data-ttu-id="3450e-111">仅在 "类型" 设置为 "文件" 时使用。</span><span class="sxs-lookup"><span data-stu-id="3450e-111">Only used if type is set to file.</span></span> <span data-ttu-id="3450e-112">文件的位置的 URI。</span><span class="sxs-lookup"><span data-stu-id="3450e-112">The URI of the location for the file.</span></span>
+    name: url
+    fullName: url
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'url?: string;'
+      return:
+        type:
+          - string
