--- a/docs/docs-ref-autogen/outlook_1_7/office.sourceproperty.yml
+++ b/docs/docs-ref-autogen/outlook_1_7/office.sourceproperty.yml
@@ -1,32 +1,26 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 6de4070abc3bb7b96533c25b90afb948411d6331
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26220819"
 items:
-- uid: Outlook_1_7.Office.SourceProperty
-  name: Office.SourceProperty
-  fullName: Office.SourceProperty
-  langs:
-  - typeScript
-  type: enum
-  package: Outlook_1_7
-  children:
-  - Outlook_1_7.Office.SourceProperty.Body
-  - Outlook_1_7.Office.SourceProperty.Subject
-- uid: Outlook_1_7.Office.SourceProperty.Body
-  summary: <span data-ttu-id="2f180-101">从邮件的正文的数据源。</span><span class="sxs-lookup"><span data-stu-id="2f180-101">The source of the data is from the body of the message.</span></span>
-  name: Body
-  fullName: Body
-  langs:
-  - typeScript
-  type: field
-- uid: Outlook_1_7.Office.SourceProperty.Subject
-  summary: <span data-ttu-id="2f180-102">数据源是从邮件的主题。</span><span class="sxs-lookup"><span data-stu-id="2f180-102">The source of the data is from the subject of the message.</span></span>
-  name: Subject
-  fullName: Subject
-  langs:
-  - typeScript
-  type: field
+  - uid: Outlook_1_7.Office.SourceProperty
+    name: Office.SourceProperty
+    fullName: Office.SourceProperty
+    langs:
+      - typeScript
+    type: enum
+    package: Outlook_1_7
+    children:
+      - Outlook_1_7.Office.SourceProperty.Body
+      - Outlook_1_7.Office.SourceProperty.Subject
+  - uid: Outlook_1_7.Office.SourceProperty.Body
+    summary: <span data-ttu-id="34b59-101">数据源来自邮件的正文。</span><span class="sxs-lookup"><span data-stu-id="34b59-101">The source of the data is from the body of the message.</span></span>
+    name: Body
+    fullName: Body
+    langs:
+      - typeScript
+    type: field
+  - uid: Outlook_1_7.Office.SourceProperty.Subject
+    summary: <span data-ttu-id="34b59-102">数据源来自邮件的主题。</span><span class="sxs-lookup"><span data-stu-id="34b59-102">The source of the data is from the subject of the message.</span></span>
+    name: Subject
+    fullName: Subject
+    langs:
+      - typeScript
+    type: field
