--- a/docs/docs-ref-autogen/visio/visio.interfaces.commentcollectiondata.yml
+++ b/docs/docs-ref-autogen/visio/visio.interfaces.commentcollectiondata.yml
@@ -1,29 +1,23 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: d8300962a916b077809f6a3368fc6afd595f8d54
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26235645"
 items:
-- uid: visio.Visio.Interfaces.CommentCollectionData
-  summary: <span data-ttu-id="f3060-101">描述调用"commentCollection.toJSON()"返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="f3060-101">An interface describing the data returned by calling "commentCollection.toJSON()".</span></span>
-  name: Visio.Interfaces.CommentCollectionData
-  fullName: Visio.Interfaces.CommentCollectionData
-  langs:
-  - typeScript
-  type: interface
-  package: visio
-  children:
-  - visio.Visio.Interfaces.CommentCollectionData.items
-- uid: visio.Visio.Interfaces.CommentCollectionData.items
-  name: items
-  fullName: items
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'items?: Visio.Interfaces.CommentData[];'
-    return:
-      type:
-      - Visio.Interfaces.CommentData[]
+  - uid: visio.Visio.Interfaces.CommentCollectionData
+    summary: <span data-ttu-id="b8ba6-101">描述通过调用 "commentCollection ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="b8ba6-101">An interface describing the data returned by calling "commentCollection.toJSON()".</span></span>
+    name: Visio.Interfaces.CommentCollectionData
+    fullName: Visio.Interfaces.CommentCollectionData
+    langs:
+      - typeScript
+    type: interface
+    package: visio
+    children:
+      - visio.Visio.Interfaces.CommentCollectionData.items
+  - uid: visio.Visio.Interfaces.CommentCollectionData.items
+    name: items
+    fullName: items
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'items?: Visio.Interfaces.CommentData[];'
+      return:
+        type:
+          - 'Visio.Interfaces.CommentData[]'
