--- a/docs/docs-ref-autogen/visio/visio.interfaces.hyperlinkcollectiondata.yml
+++ b/docs/docs-ref-autogen/visio/visio.interfaces.hyperlinkcollectiondata.yml
@@ -1,29 +1,23 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 2f039d4d675a19acbfc2d2ce4ca70b77356b8971
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26228904"
 items:
-- uid: visio.Visio.Interfaces.HyperlinkCollectionData
-  summary: <span data-ttu-id="99778-101">描述调用"hyperlinkCollection.toJSON()"返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="99778-101">An interface describing the data returned by calling "hyperlinkCollection.toJSON()".</span></span>
-  name: Visio.Interfaces.HyperlinkCollectionData
-  fullName: Visio.Interfaces.HyperlinkCollectionData
-  langs:
-  - typeScript
-  type: interface
-  package: visio
-  children:
-  - visio.Visio.Interfaces.HyperlinkCollectionData.items
-- uid: visio.Visio.Interfaces.HyperlinkCollectionData.items
-  name: items
-  fullName: items
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'items?: Visio.Interfaces.HyperlinkData[];'
-    return:
-      type:
-      - Visio.Interfaces.HyperlinkData[]
+  - uid: visio.Visio.Interfaces.HyperlinkCollectionData
+    summary: <span data-ttu-id="d162c-101">描述通过调用 "hyperlinkCollection ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="d162c-101">An interface describing the data returned by calling "hyperlinkCollection.toJSON()".</span></span>
+    name: Visio.Interfaces.HyperlinkCollectionData
+    fullName: Visio.Interfaces.HyperlinkCollectionData
+    langs:
+      - typeScript
+    type: interface
+    package: visio
+    children:
+      - visio.Visio.Interfaces.HyperlinkCollectionData.items
+  - uid: visio.Visio.Interfaces.HyperlinkCollectionData.items
+    name: items
+    fullName: items
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'items?: Visio.Interfaces.HyperlinkData[];'
+      return:
+        type:
+          - 'Visio.Interfaces.HyperlinkData[]'
