--- a/docs/docs-ref-autogen/visio/visio.interfaces.hyperlinkloadoptions.yml
+++ b/docs/docs-ref-autogen/visio/visio.interfaces.hyperlinkloadoptions.yml
@@ -1,101 +1,90 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: c380d741153f2f54fb785419435c52cc52c9c42f
-ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/13/2019
-ms.locfileid: "29984546"
 items:
-- uid: visio.Visio.Interfaces.HyperlinkLoadOptions
-  summary: >-
-    <span data-ttu-id="f7a61-101">表示 Hyperlink 对象。</span><span class="sxs-lookup"><span data-stu-id="f7a61-101">Represents the Hyperlink.</span></span>
+  - uid: visio.Visio.Interfaces.HyperlinkLoadOptions
+    summary: |-
+      <span data-ttu-id="cce27-101">表示 Hyperlink 对象。</span><span class="sxs-lookup"><span data-stu-id="cce27-101">Represents the Hyperlink.</span></span>
 
+      <span data-ttu-id="cce27-102">\[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="cce27-102">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+    name: Visio.Interfaces.HyperlinkLoadOptions
+    fullName: Visio.Interfaces.HyperlinkLoadOptions
+    langs:
+      - typeScript
+    type: interface
+    package: visio
+    children:
+      - visio.Visio.Interfaces.HyperlinkLoadOptions.$all
+      - visio.Visio.Interfaces.HyperlinkLoadOptions.address
+      - visio.Visio.Interfaces.HyperlinkLoadOptions.description
+      - visio.Visio.Interfaces.HyperlinkLoadOptions.extraInfo
+      - visio.Visio.Interfaces.HyperlinkLoadOptions.subAddress
+  - uid: visio.Visio.Interfaces.HyperlinkLoadOptions.$all
+    name: $all
+    fullName: $all
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: '$all?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: visio.Visio.Interfaces.HyperlinkLoadOptions.address
+    summary: |-
+      <span data-ttu-id="cce27-103">获取超链接对象的地址。</span><span class="sxs-lookup"><span data-stu-id="cce27-103">Gets the address of the Hyperlink object.</span></span> <span data-ttu-id="cce27-104">只读。</span><span class="sxs-lookup"><span data-stu-id="cce27-104">Read-only.</span></span>
 
-    <span data-ttu-id="f7a61-102">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="f7a61-102">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
-  name: Visio.Interfaces.HyperlinkLoadOptions
-  fullName: Visio.Interfaces.HyperlinkLoadOptions
-  langs:
-  - typeScript
-  type: interface
-  package: visio
-  children:
-  - visio.Visio.Interfaces.HyperlinkLoadOptions.$all
-  - visio.Visio.Interfaces.HyperlinkLoadOptions.address
-  - visio.Visio.Interfaces.HyperlinkLoadOptions.description
-  - visio.Visio.Interfaces.HyperlinkLoadOptions.extraInfo
-  - visio.Visio.Interfaces.HyperlinkLoadOptions.subAddress
-- uid: visio.Visio.Interfaces.HyperlinkLoadOptions.$all
-  name: $all
-  fullName: $all
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: '$all?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: visio.Visio.Interfaces.HyperlinkLoadOptions.address
-  summary: >-
-    <span data-ttu-id="f7a61-p101">获取超链接对象的地址。只读。</span><span class="sxs-lookup"><span data-stu-id="f7a61-p101">Gets the address of the Hyperlink object. Read-only.</span></span>
+      <span data-ttu-id="cce27-105">\[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="cce27-105">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+    name: address
+    fullName: address
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'address?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: visio.Visio.Interfaces.HyperlinkLoadOptions.description
+    summary: |-
+      <span data-ttu-id="cce27-106">获取超链接的说明。</span><span class="sxs-lookup"><span data-stu-id="cce27-106">Gets the description of a hyperlink.</span></span> <span data-ttu-id="cce27-107">只读。</span><span class="sxs-lookup"><span data-stu-id="cce27-107">Read-only.</span></span>
 
+      <span data-ttu-id="cce27-108">\[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="cce27-108">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+    name: description
+    fullName: description
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'description?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: visio.Visio.Interfaces.HyperlinkLoadOptions.extraInfo
+    summary: |-
+      <span data-ttu-id="cce27-109">获取用于解析超链接的 url 的额外 URL 请求信息。</span><span class="sxs-lookup"><span data-stu-id="cce27-109">Gets the extra URL request information used to resolve the hyperlink's URL.</span></span> <span data-ttu-id="cce27-110">只读。</span><span class="sxs-lookup"><span data-stu-id="cce27-110">Read-only.</span></span>
 
-    <span data-ttu-id="f7a61-105">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="f7a61-105">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
-  name: address
-  fullName: address
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'address?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: visio.Visio.Interfaces.HyperlinkLoadOptions.description
-  summary: >-
-    <span data-ttu-id="f7a61-p102">获取超链接的说明。只读。</span><span class="sxs-lookup"><span data-stu-id="f7a61-p102">Gets the description of a hyperlink. Read-only.</span></span>
+      <span data-ttu-id="cce27-111">\[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="cce27-111">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+    name: extraInfo
+    fullName: extraInfo
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'extraInfo?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: visio.Visio.Interfaces.HyperlinkLoadOptions.subAddress
+    summary: |-
+      <span data-ttu-id="cce27-112">获取超链接对象的子地址。</span><span class="sxs-lookup"><span data-stu-id="cce27-112">Gets the sub-address of the Hyperlink object.</span></span> <span data-ttu-id="cce27-113">只读。</span><span class="sxs-lookup"><span data-stu-id="cce27-113">Read-only.</span></span>
 
-
-    <span data-ttu-id="f7a61-108">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="f7a61-108">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
-  name: description
-  fullName: description
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'description?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: visio.Visio.Interfaces.HyperlinkLoadOptions.extraInfo
-  summary: >-
-    <span data-ttu-id="f7a61-109">获取用于解析超链接的 URL 的额外 URL 请求信息。</span><span class="sxs-lookup"><span data-stu-id="f7a61-109">Gets the extra URL request information used to resolve the hyperlink's URL.</span></span> <span data-ttu-id="f7a61-110">只读。</span><span class="sxs-lookup"><span data-stu-id="f7a61-110">Read-only.</span></span>
-
-
-    <span data-ttu-id="f7a61-111">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="f7a61-111">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
-  name: extraInfo
-  fullName: extraInfo
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'extraInfo?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: visio.Visio.Interfaces.HyperlinkLoadOptions.subAddress
-  summary: >-
-    <span data-ttu-id="f7a61-p104">获取超链接对象的子地址。只读。</span><span class="sxs-lookup"><span data-stu-id="f7a61-p104">Gets the sub-address of the Hyperlink object. Read-only.</span></span>
-
-
-    <span data-ttu-id="f7a61-114">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="f7a61-114">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
-  name: subAddress
-  fullName: subAddress
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'subAddress?: boolean;'
-    return:
-      type:
-      - boolean
+      <span data-ttu-id="cce27-114">\[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="cce27-114">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+    name: subAddress
+    fullName: subAddress
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'subAddress?: boolean;'
+      return:
+        type:
+          - boolean
